pavemacharya books 001 to 039 and 042 added

--- a/application/views/flat/3-Books/001.xhtml
+++ b/application/views/flat/3-Books/001.xhtml
@@ -1,64 +1,92 @@
 <div data-bcode="001">
 	<h1 class="title" data-language="kannada">ವಿಜ್ಞಾನ ವಿಸ್ಮಯ</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ಸಾಮಾನ್ಯ ವಿಜ್ಞಾನ</li>
-<li page="0001-0001">ಅನಂತಗಳ ತಲೆಬಿಸಿ</li>
-<li page="0001-0001">'ಶೂನ್ಯ' (0) ಸಂಪಾದನೆ</li>
-<li page="0001-0001">ಮಾನವನು ಯಂತ್ರಕ್ಕೆ ಆಳಾಗುವನೇ ?</li>
-<li page="0001-0001">ಖಗೋಳ ವಿಜ್ಞಾನ</li>
-<li page="0001-0001">ಪ್ರತಿ-ವಿಶ್ವ ಇರಬಹುದೆ ? </li>
-<li page="0001-0001">ಮಾನವ ಮತ್ತು ಹವಾಮಾನ </li>
-<li page="0001-0001">ಕಾಲರಾಯನ ಕುಟಿಲತನ </li>
-<li page="0001-0001">ಮಂಗಳಕ್ಕೆ ಮಾನವ ಯಾತ್ರೆ </li>
-<li page="0001-0001">ಚಂದ್ರಲೋಕದಲ್ಲಿನ್ನು ಮನುಷ್ಯ ವಸತಿಯೇ ? </li>
-<li page="0001-0001">ಅನ್ಯಲೋಕಗಳಲ್ಲಿ ಜೀವಿಗಳಿಗಾಗಿ ಶೋಧ</li>
-<li page="0001-0001">ಯುಗಾದಿಯ ಕಥೆ </li>
-<li page="0001-0001">ಭೂ-ಭೌತಿಕ ವಿಜ್ಞಾನ</li>
-<li page="0001-0001">ಮಾನವ ನೀರ್ಮಾನಿಸನಾಗಿದ್ದನೆ ?</li>
-<li page="0001-0001">ಅಪಾಯಕರ ಮಿತ್ರ-ಮಿಂಚು </li>
-<li page="0001-0001">ವಿಶ್ವಸೃಷ್ಟಿ ಹೇಗಾಯಿತು ? </li>
-<li page="0001-0001">ಭೂಮಿಯು ಉಬ್ಬುತ್ತಿದೆ !</li>
-<li page="0001-0001">ಹವಳದ ಮಹಾಶಿಲ್ಪ </li>
-<li page="0001-0001">ಸಸ್ಯಲೋಕ</li>
-<li page="0001-0001">ಸಸ್ಯಗಳಿಗೆ ಸಂಗೀತ ಮೆಚ್ಚುತ್ತದೆಯೇ ?</li>
-<li page="0001-0001">ಮೇಫ್ಲೈ : ಒಂದು ದಿನದ ಬೆಡಗು</li>
-<li page="0001-0001">ಪ್ರಾಣಿಲೋಕ</li>
-<li page="0001-0001">ನಮ್ಮ ರಾಷ್ಟ್ರೀಯ ಹಕ್ಕಿ : ನವಿಲು </li>
-<li page="0001-0001">ಮಾನವ ಪ್ರಯೋಗ ಪಶುಗಳು</li>
-<li page="0001-0001">ಬೆಕ್ಕು ಎಷ್ಟು ಜಾಣ ಪ್ರಾಣಿ ? </li>
-<li page="0001-0001">ಡಿನೋಸಾರ್ ಗಳ ಅದ್ಭುತ ಪ್ರಪಂಚ</li>
-<li page="0001-0001">ಕಸ್ತೂರಿ</li>
-<li page="0001-0001">ವೈದ್ಯಕೀಯ</li>
-<li page="0001-0001">ಆಸ್ಪಿರಿನ್ ನಿರುಪದ್ರವಿಯೇ ?</li>
-<li page="0001-0001">ಎಕ್ಸ್-ರೇ ತೆಗೆಯುವುದೆಂದರೇನು ? </li>
-<li page="0001-0001">ಕ್ಯಾನ್ಸರ್‌ ಸಂಶೋಧನೆಯಲ್ಲಿ ಹೊಸ ಹೆಜ್ಜೆಗಳು </li>
-<li page="0001-0001">ಸಾವನ್ನು ಗೆಲ್ಲುವ ಪುಟ್ಟ ಯಂತ್ರ </li>
-<li page="0001-0001">ಸಿದ್ದವಾಗಿದೆ ಭೀಕರವಾದ ಹೊಸ ಅಸ್ತ್ರ </li>
-<li page="0001-0001">ಮಧುಮೇಹ ರೋಗ</li>
-<li page="0001-0001">ಸ್ವಲ್ಪ ಅಸ್ವಸ್ಥವಾಗಿದೆಯೇ? ಅದು ಶುಭ !</li>
-<li page="0001-0001">ಶ್ವಸನ ಯಂತ್ರ ಪುಪ್ಫುಸ</li>
-<li page="0001-0001">ರಕ್ತದ ಗುಂಪಿನ ರಹಸ್ಯ </li>
-<li page="0001-0001">ಮಲೇರಿಯಾದ ಮೇಲೆ ಸಮರ </li>
-<li page="0001-0001">ಮಧುಮೇಹವೋ ಅಲ್ಲವೋ ? </li>
-<li page="0001-0001">ಬಿ.ಸಿ.ಜಿ. ಎಂದರೇನು ? </li>
-<li page="0001-0001">ನೀವು ಬಲಮಿದುಳಿನವರೋ ? ಎಡಮಿದುಳಿನವರೋ ? </li>
-<li page="0001-0001">ನಿಮ್ಮ ಜೀವಕಣಗಳ ಮಾಯಾಲೋಕ </li>
-<li page="0001-0001">ಥರ್ಮೋಗ್ರಾಫ್ : ಅದು ಭೂತ ಭವಿಷ್ಯತ್ ವರ್ತಮಾನಗಳನ್ನು ಕಾಣಬಲ್ಲದು ! </li>
-<li page="0001-0001">ಎಚ್ಚರಿಕೆ ! ಪೆನಿಸಿಲಿನ್ ! </li>
-<li page="0001-0001">ಮನೋವಿಜ್ಞಾನ</li>
-<li page="0001-0001">ಸ್ಮರಣಶಕ್ತಿಯನ್ನು ಹೇಗೆ ಹೆಚ್ಚಿಸಿಕೊಳ್ಳಬೇಕು ? </li>
-<li page="0001-0001">ಆನ್ವಯಿಕ ವಿಜ್ಞಾನ</li>
-<li page="0001-0001">ಹೆಲಿಕಾಪ್ಟರಿನ ಜನ್ಮದಾತ ಸಿಕೋಸ್ರ್ಕಿ </li>
-<li page="0001-0001">ಬಡವರ ರೇಷ್ಮೆ ರೇಯಾನ್ </li>
-<li page="0001-0001">ಕಾರ್ಬನ್ - ೧೪ರಿಂದ ಕಾಲನಿರ್ಣಯ </li>
-<li page="0001-0001">'ಚಂದ್ರಬಲ'ದಿಂದ ವಿದ್ಯುಚ್ಛಕ್ತಿ </li>
-<li page="0001-0001">ವಿಜ್ಞಾನಿಗಳು</li>
-<li page="0001-0001">ಬ್ರಹ್ಮಗುಪ್ತ : ಭಾರತದ ಮಹಾಗಣಕ </li>
-<li page="0001-0001">ವಿಜ್ಞಾನದ ಯುಗಪುರುಷ ಕೊಪರ್ನಿಕಸ್ </li>
-<li page="0001-0001">ಗೆಲಿಲಿಯೋನ ಗಳಿಕೆ </li>
-<li page="0001-0001">ಡಾ. ಸಿ. ವಿ. ರಾಮನ್ </li>
-<li page="0001-0001">ಜೆ. ಬಿ. ಎಸ್. ಹ್ಯಾಲ್ಡೇನ್ – ಭಾರತೀಯನಾದ ಬ್ರಿಟಿಷ್ ವಿಜ್ಞಾನಿ </li>
-<li page="0001-0001">ದಾರ್ಶನಿಕ ವಿಜ್ಞಾನಿ : ಸತ್ಯೇನ್ ಬೋಸ್</li>
-</ol>
+		<li page="0003-0003">ಪ್ರಧಾನ ಸಂಪಾದಕರ ಮಾತು</li>
+		<li page="0004-0006">ಪ್ರಸ್ತಾವನೆ</li>
+		<li page="0009-0021">ಸಾಮಾನ್ಯ ವಿಜ್ಞಾನ
+			<ol>
+				<li page="0009-0011">ಅನಂತಗಳ ತಲೆಬಿಸಿ</li>
+				<li page="0011-0014">'ಶೂನ್ಯ' (0) ಸಂಪಾದನೆ</li>
+				<li page="0014-0021">ಮಾನವನು ಯಂತ್ರಕ್ಕೆ ಆಳಾಗುವನೇ?</li>
+			</ol>
+		</li>
+		<li page="0022-0056">ಖಗೋಳ ವಿಜ್ಞಾನ
+			<ol>
+				<li page="0022-0027">ಪ್ರತಿ-ವಿಶ್ವ ಇರಬಹುದೆ?</li>
+				<li page="0027-0030">ಮಾನವ ಮತ್ತು ಹವಾಮಾನ</li>
+				<li page="0030-0034">ಕಾಲರಾಯನ ಕುಟಿಲತನ</li>
+				<li page="0034-0039">ಮಂಗಳಕ್ಕೆ ಮಾನವ ಯಾತ್ರೆ</li>
+				<li page="0039-0043">ಚಂದ್ರಲೋಕದಲ್ಲಿನ್ನು ಮನುಷ್ಯ ವಸತಿಯೇ?</li>
+				<li page="0043-0048">ಅನ್ಯಲೋಕಗಳಲ್ಲಿ ಜೀವಿಗಳಿಗಾಗಿ ಶೋಧ</li>
+				<li page="0049-0056">ಯುಗಾದಿಯ ಕಥೆ</li>
+			</ol>
+		</li>
+		<li page="0057-0085">ಭೂ-ಭೌತಿಕ ವಿಜ್ಞಾನ
+			<ol>
+				<li page="0057-0063">ಮಾನವ ನೀರ್ಮಾನಿಸನಾಗಿದ್ದನೆ?</li>
+				<li page="0064-0068">ಅಪಾಯಕರ ಮಿತ್ರ-ಮಿಂಚು</li>
+				<li page="0068-0074">ವಿಶ್ವಸೃಷ್ಟಿ ಹೇಗಾಯಿತು?</li>
+				<li page="0074-0079">ಭೂಮಿಯು ಉಬ್ಬುತ್ತಿದೆ!</li>
+				<li page="0079-0085">ಹವಳದ ಮಹಾಶಿಲ್ಪ</li>
+			</ol>
+		</li>
+		<li page="0086-0091">ಸಸ್ಯಲೋಕ
+			<ol>
+				<li page="0086-0088">ಸಸ್ಯಗಳಿಗೆ ಸಂಗೀತ ಮೆಚ್ಚುತ್ತದೆಯೇ?</li>
+				<li page="0089-0091">ಮೇಫ್ಲೈ : ಒಂದು ದಿನದ ಬೆಡಗು</li>
+			</ol>
+		</li>
+		<li page="0092-0111">ಪ್ರಾಣಿಲೋಕ
+			<ol>
+				<li page="0092-0095">ನಮ್ಮ ರಾಷ್ಟ್ರೀಯ ಹಕ್ಕಿ : ನವಿಲು</li>
+				<li page="0096-0099">ಮಾನವ ಪ್ರಯೋಗ ಪಶುಗಳು</li>
+				<li page="0100-0104">ಬೆಕ್ಕು ಎಷ್ಟು ಜಾಣ ಪ್ರಾಣಿ?</li>
+				<li page="0104-0108">ಡಿನೋಸಾರ್​ಗಳ ಅದ್ಭುತ ಪ್ರಪಂಚ</li>
+				<li page="0109-0111">ಕಸ್ತೂರಿ</li>
+			</ol>
+		</li>
+		<li page="0112-0183">ವೈದ್ಯಕೀಯ
+			<ol>
+				<li page="0112-0114">ಆಸ್ಪಿರಿನ್ ನಿರುಪದ್ರವಿಯೇ?</li>
+				<li page="0114-0117">ಎಕ್ಸ್-ರೇ ತೆಗೆಯುವುದೆಂದರೇನು?</li>
+				<li page="0117-0123">ಕ್ಯಾನ್ಸರ್‌ ಸಂಶೋಧನೆಯಲ್ಲಿ ಹೊಸ ಹೆಜ್ಜೆಗಳು</li>
+				<li page="0123-0127">ಸಾವನ್ನು ಗೆಲ್ಲುವ ಪುಟ್ಟ ಯಂತ್ರ</li>
+				<li page="0127-0130">ಸಿದ್ದವಾಗಿದೆ ಭೀಕರವಾದ ಹೊಸ ಅಸ್ತ್ರ!</li>
+				<li page="0131-0135">ಮಧುಮೇಹ ರೋಗ</li>
+				<li page="0136-0139">ಸ್ವಲ್ಪ ಅಸ್ವಸ್ಥವಾಗಿದೆಯೇ? ಅದು ಶುಭ!</li>
+				<li page="0140-0144">ಶ್ವಸನ ಯಂತ್ರ ಪುಪ್ಫುಸ</li>
+				<li page="0145-0149">ರಕ್ತದ ಗುಂಪಿನ ರಹಸ್ಯ</li>
+				<li page="0149-0156">ಮಲೇರಿಯಾದ ಮೇಲೆ ಸಮರ</li>
+				<li page="0157-0159">ಮಧುಮೇಹವೋ ಅಲ್ಲವೋ?</li>
+				<li page="0159-0163">ಬಿ.ಸಿ.ಜಿ. ಎಂದರೇನು?</li>
+				<li page="0163-0169">ನೀವು ಬಲಮಿದುಳಿನವರೋ? ಎಡಮಿದುಳಿನವರೋ?</li>
+				<li page="0170-0175">ನಿಮ್ಮ ಜೀವಕಣಗಳ ಮಾಯಾಲೋಕ</li>
+				<li page="0175-0178">ಥರ್ಮೋಗ್ರಾಫ್ : ಅದು ಭೂತ ಭವಿಷ್ಯತ್ ವರ್ತಮಾನಗಳನ್ನು ಕಾಣಬಲ್ಲದು!</li>
+				<li page="0179-0183">ಎಚ್ಚರಿಕೆ! ಪೆನಿಸಿಲಿನ್!</li>
+			</ol>
+		</li>
+		<li page="0184-0187">ಮನೋವಿಜ್ಞಾನ
+			<ol>
+				<li page="0184-0187">ಸ್ಮರಣಶಕ್ತಿಯನ್ನು ಹೇಗೆ ಹೆಚ್ಚಿಸಿಕೊಳ್ಳಬೇಕು?</li>
+			</ol>
+		</li>
+		<li page="0188-0207">ಆನ್ವಯಿಕ ವಿಜ್ಞಾನ
+			<ol>
+				<li page="0188-0193">ಹೆಲಿಕಾಪ್ಟರಿನ ಜನ್ಮದಾತ ಸಿಕೋರ್ಸ್ಕಿ</li>
+				<li page="0194-0196">ಬಡವರ ರೇಷ್ಮೆ ರೇಯಾನ್</li>
+				<li page="0197-0201">ಕಾರ್ಬನ್ - ೧೪ರಿಂದ ಕಾಲನಿರ್ಣಯ</li>
+				<li page="0202-0207">'ಚಂದ್ರಬಲ'ದಿಂದ ವಿದ್ಯುಚ್ಛಕ್ತಿ!</li>
+			</ol>
+		</li>
+		<li page="0208-0240">ವಿಜ್ಞಾನಿಗಳು
+			<ol>
+				<li page="0208-0211">ಬ್ರಹ್ಮಗುಪ್ತ : ಭಾರತದ ಮಹಾಗಣಕ</li>
+				<li page="0212-0217">ವಿಜ್ಞಾನದ ಯುಗಪುರುಷ ಕೊಪರ್ನಿಕಸ್</li>
+				<li page="0218-0223">ಗೆಲಿಲಿಯೋನ ಗಳಿಕೆ</li>
+				<li page="0224-0229">ಡಾ. ಸಿ. ವಿ. ರಾಮನ್</li>
+				<li page="0230-0234">ಜೆ. ಬಿ. ಎಸ್. ಹ್ಯಾಲ್ಡೇನ್ – ಭಾರತೀಯನಾದ ಬ್ರಿಟಿಷ್ ವಿಜ್ಞಾನಿ</li>
+				<li page="0235-0240">ದಾರ್ಶನಿಕ ವಿಜ್ಞಾನಿ : ಸತ್ಯೇನ್ ಬೋಸ್</li>
+			</ol>
+		</li>
+	</ol>
 </div>
