--- a/application/views/flat/3-Books/003.xhtml
+++ b/application/views/flat/3-Books/003.xhtml
@@ -1,35 +1,35 @@
 ﻿<div data-bcode="003">
 	<h1 class="title" data-language="kannada">ಜಗದ್ವಿಖ್ಯಾತರು</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ಮಹಾ ದಾರ್ಶನಿಕ ಪ್ಲೇಟೋ</li>
-<li page="0001-0001">ದ ವಿಂಚಿಯ ಸರ್ವತೋಮುಖ ಪ್ರತಿಭೆ </li>
-<li page="0001-0001">ಡಾನ್ ಕ್ವಿಕ್ಸೋಟನ ಜನಕ ಸರ್ವಾಂಟಿಸ್ </li>
-<li page="0001-0001">ಯುರೋಪಿನ ಕ್ರಾಂತಿದೂತ ರೂಸೊ </li>
-<li page="0001-0001">ಸಂಗೀತದ ಬಾಲಾದ್ಭುತ - ಮೊಜಾರ್ಟ್ </li>
-<li page="0001-0001">ವಿಕ್ಷಿಪ್ತ ಚಿತ್ರಕಾರ - ಹೊಕುಸಾಯಿ</li>
-<li page="0001-0001">ಫ್ರೆಂಚ್ ಸಾಹಿತ್ಯ ಚಕ್ರವರ್ತಿ ವಿಕ್ಟರ್ ಹ್ಯೂಗೋ </li>
-<li page="0001-0001">ಯುಗಪುರುಷ ಲೆನಿನ್ </li>
-<li page="0001-0001">ಟ್ರಾಟ್‌ಸ್ಕಿಗೆ ಮರಣ ಬಂತು </li>
-<li page="0001-0001">ಮಹಾಮುತ್ಸದ್ದಿ ಕ್ರುಶ್ಚೇವ್</li>
-<li page="0001-0001">ಅಂಡರ್‌ಸನ್ - ಮಕ್ಕಳ ಕಥೆಗಳ ರಾಜ </li>
-<li page="0001-0001">ಉಡಾಳ ಹುಡುಗ ಶ್ರೇಷ್ಠ ಸಾಹಿತಿಯಾದ (ಮಾರ್ಕ್ ಟ್ವೇನ್)</li>
-<li page="0001-0001">ಐನ್‌ಸ್ಟೈನರ ಬಾಲ್ಯ ಜೀವನ </li>
-<li page="0001-0001">ಕಲಾಪ್ರತಿಭೆಯ ಗಾಗಿನ್ </li>
-<li page="0001-0001">ಕೋಟ್ಯಧೀಶ ಸಾಹಿತಿ - ಸಮರ್ಸೆಟ್  ಮಾಮ್</li>
-<li page="0001-0001">ಮಹಾವಿಜ್ಞಾನಿ ಜಾನ್ ಬಾರ್ಡಿನ್ </li>
-<li page="0001-0001">ಅನ್ಯಾಯದ ವಿರುದ್ಧ - ಎಮಿಲಿ ಜೋಲಾ</li>
-<li page="0001-0001">ಶತಕೋಟಿ ದಾನಿ ಆಂಡ್ರೂ ಕಾರ್ನೆಜಿ </li>
-<li page="0001-0001">ಧ್ಯೇಯವಾದೀ ಸಾಹಿತಿ - ಆಂದ್ರೆ ಮಲ್ರಾ</li>
-<li page="0001-0001">ಡಾಕ್ಟರ್ ಆಲ್ಬರ್ಟ್ ಶ್ವೈತ್ಸರ್</li>
-<li page="0001-0001">ಜಪಾನಿನ ವಿಚಿತ್ರ ಲೇಖಕ - ಮಿಶಿಮಾ </li>
-<li page="0001-0001">ವಿಶ್ವಶಾಂತಿ ಸಾಧಕ ರಾಲ್ಫ್  ಬುಂಚ್ </li>
-<li page="0001-0001">ದಕ್ಷಿಣ ಅಮೇರಿಕದ ಮಹಾಕವಿ - ಪಾಬ್ಲೊ ನೇರುದಾ </li>
-<li page="0001-0001">ನಿರಾಶ್ರಿತರ ಆಶ್ರಯದಾತ : ಫಾದರ್ ಪಿಯರ್</li>
-<li page="0001-0001">ಪಾಸ್ಟರ್‌ನಾಕ್ ಮತ್ತು ಅವರ ಕಾದಂಬರಿ </li>
-<li page="0001-0001">ಅದೃಷ್ಟಹೀನ ರಾಜ ಲಿಯೊಪಾಲ್ಡ್ </li>
-<li page="0001-0001">ಜಾರ್ಜ್ ಸ್ಯಾಂಡ್ - ಗಂಡು ಬದುಕಿನ ಹೆಣ್ಣು ಸಾಹಿತಿ</li>
-<li page="0001-0001">ಕೆನ್ಯಾ ದೇಶದ ಸ್ವಾತಂತ್ರ್ಯ ಯೋಧರು </li>
-<li page="0001-0001">ಚದುರಂಗ ಚಕ್ರವರ್ತಿ - ಬಾಬಿ ಫಿಷರ್</li>
-</ol>
+		<li page="0000g-0000o">ಸಮಗ್ರ ಪಾ. ವೆಂ. ಆಚಾರ್ಯ</li>
+		<li page="0001-0007">೧. ಮಹಾ ದಾರ್ಶನಿಕ ಪ್ಲೇಟೋ<br /> (ನಾಗರಿಕತೆಯ ಇತಿಹಾಸದಲ್ಲಿ ಅವನೊಂದು ಮೈಲುಗಲ್ಲು)</li>
+		<li page="0008-0019">೨. ದ ವಿಂಚಿಯ ಸರ್ವತೋಮುಖ ಪ್ರತಿಭೆ<br /> (ಚಿತ್ರಕಲಾವಿದನಾಗಿ ಪ್ರಸಿದ್ಧನಾದ ದ ವಿಂಚಿಯ ಪ್ರತಿಭೆ ಹರಿಯದ ರಂಗವಿಲ್ಲ)</li>
+		<li page="0020-0027">೩. ಡಾನ್ ಕ್ವಿಕ್ಸೋಟನ ಜನಕ ಸರ್ವಾಂಟೀಸ್<br /> (ಜಗತ್ತಿನ ಅತ್ಯಂತ ಜನಪ್ರಿಯ ಕೃತಿಯನ್ನು ಸೃಷ್ಟಿಸಿದ ಅವನು ಬಡತನದಲ್ಲೇ ಸತ್ತ)</li>
+		<li page="0028-0035">೪. ಯುರೋಪಿನ ಕ್ರಾಂತಿದೂತ ರೂಸೋ</li>
+		<li page="0036-0040">೫. ಸಂಗೀತದ ಬಾಲಾದ್ಭುತ : ಮೊಜಾರ್ಟ್<br /> (ಅವನ ಜೀವನ ಪ್ರತಿಭೆ ಮತ್ತು ಕಲಾಸಾಧನೆ ದುರ್ದೈವದ ಕಥೆಯಾಗಿತ್ತು)</li>
+		<li page="0041-0045">೬. ವಿಕ್ಷಿಪ್ತ ಚಿತ್ರಕಾರ - ಹೋಕುಸಾಯಿ</li>
+		<li page="0046-0051">೭. ಫ್ರೆಂಚ್ ಸಾಹಿತ್ಯ ಚಕ್ರವರ್ತಿ - ವಿಕ್ಟರ್ ಹ್ಯೂಗೋ</li>
+		<li page="0052-0062">೮. ಯುಗಪುರುಷ ಲೆನಿನ್<br /> (ಆತ ಕಾರ್ಮಿಕ ಕ್ರಾಂತಿಯ ಕನಸನ್ನು ನನಸಾಗಿ ಮಾಡಿದ)</li>
+		<li page="0063-0073">೯. ಟ್ರಾಟ್‌ಸ್ಕಿಗೆ ಮೃತ್ಯು ಬಂತು<br /> (ಈ ಶತಮಾನದ ಅತಿ ಭೀಕರ ರಾಜಕೀಯ ಹತ್ಯೆಯ ಕಥೆ)</li>
+		<li page="0074-0080">೧೦. ರಶಿಯಾದ ಮಹಾಮುತ್ಸದ್ದಿ  - ಕ್ರುಶ್ಚೇವ್<br /> (ಅವನು ಕಮ್ಯುನಿಸ್ಟ್ ಜಗತ್ತಿನ ರೂಪವನ್ನೇ ಮಾರ್ಪಡಿಸಿದ)</li>
+		<li page="0081-0088">೧೧. ಹ್ಯಾನ್ಸ್ ಆಂಡರ್‌ಸನ್ - ಮಕ್ಕಳ ಕಥೆಗಳ ರಾಜ<br /> (ಹ್ಯಾನ್ಸ್ ಆಂಡರ್‌ಸನ್ನನ ಜೀವನ ಅವನು ಬರೆದ ಯಕ್ಷಿಣಿ ಕಥೆಗಳಷ್ಟೇ ಅಪೂರ್ವವಾಗಿತ್ತು)</li>
+		<li page="0089-0094">೧೨. ಉಡಾಳ ಹುಡುಗ ಶ್ರೇಷ್ಠ ಸಾಹಿತಿಯಾದ<br /> (ಅಮೇರಿಕದ ಹಾಸ್ಯ ಲೇಖಕ ಮಾರ್ಕ್ ಟ್ವೇನನ ಜೀವನ ದರ್ಶನ)</li>
+		<li page="0095-0100">೧೩. ಐನ್‌ಸ್ಟೈನರ ಬಾಲ್ಯ ಜೀವನ<br /> (ಅವರು ಶಾಲೆಯಲ್ಲಿ ದಡ್ಡರಾಗಿದ್ದರು!)</li>
+		<li page="0101-0106">೧೪. ಪ್ರತಿಭಾಶಾಲಿ ಗಾಗಿನ್</li>
+		<li page="0107-0114">೧೫. ಸಮರ್ಸೆಟ್  ಮಾಮ್ - ಕೋಟ್ಯಧೀಶ ಸಾಹಿತಿ<br /> (ಈ ಶತಮಾನದ ಜನಪ್ರಿಯ ಇಂಗ್ಲಿಷ್ ಕಲಾಶಿಲ್ಪಿಯ ಕಥೆ)</li>
+		<li page="0115-0119">೧೬. ಮಹಾವಿಜ್ಞಾನಿ ಜಾನ್ ಬಾರ್ಡಿನ್<br /> (ಇಮ್ಮಡಿ ಬಹುಮಾನ ಗಳಿಸಿದ ವಿಜ್ಞಾನಿ)</li>
+		<li page="0120-0126">೧೭. ಎಮಿಲಿ ಜೋಲಾ<br /> (ಪರರಿಗಾದ ಅನ್ಯಾಯದ ವಿರುದ್ಧ ಬುದ್ಧಿಜೀವಿಯೊಬ್ಬನ ಹೋರಾಟ)</li>
+		<li page="0127-0133">೧೮. ಶತಕೋಟಿ ದಾನಿ ಆಂಡ್ರೂ ಕಾರ್ನೆಜಿ<br /> (ಸಂಪತ್ತು ಬಿಟ್ಟು ಸಾಯುವುದು ನಾಚಿಕೆಗೇಡು ಎಂದು ಆತ ಹೇಳಿದ)</li>
+		<li page="0134-0140">೧೯. ಧ್ಯೇಯವಾದಿ ಸಾಹಿತಿ - ಆಂದ್ರೆ ಮಾಲ್ರಾ<br /> (ಬಂಗ್ಲಾ ವಿಮುಕ್ತಿಗಾಗಿ ಶಸ್ತ್ರ ಹಿಡಿಯಲು ಅವರು ಸಿದ್ಧರಿದ್ದರು)</li>
+		<li page="0141-0147">೨೦. ಡಾಕ್ಟರ್ ಆಲ್ಬರ್ಟ್ ಶ್ವೈತ್ಸರ್ - ಜೀವದಯಾಧರ್ಮದ ಕೈವಾರಿ</li>
+		<li page="0148-0153">೨೧. ಜಪಾನಿನ ವಿಚಿತ್ರ ಸಾಹಿತಿ - ಯುಕಿಯೋ ಮಿಶಿಮಾ<br /> (ಜಪಾನಿನ ಸಾಹಿತಿ)</li>
+		<li page="0154-0157">೨೨. ವಿಶ್ವಶಾಂತಿ ಸಾಧಕ ರಾಲ್ಫ್  ಬುಂಚ್<br /> (ಈ ನಿಗ್ರೋ ಮನುಷ್ಯ ಮೊದಲ ಸ್ಥಾನ ಪಡೆಯುವುದರಲ್ಲಿ ಪ್ರವೀಣನಿದ್ದ)</li>
+		<li page="0158-0162">೨೩. ದಕ್ಷಿಣ ಅಮೇರಿಕಾದ ಮಹಾಕವಿ - ಪಾಬ್ಲೊ ನೇರುದಾ<br /> (ನೋಬಲ್ ಬಹುಮಾನ ಹೊಂದಿದ ಕವಿ)</li>
+		<li page="0163-0168">೨೪. ನಿರಾಶ್ರಿತರ ಆಶ್ರಯದಾತ : ಫಾದರ್ ಪಿಯರ್<br /> (ಯುರೋಪಿನ ಹರಿಜನರನ್ನು ಅವರು ಉದ್ಧರಿಸಿದ್ದಾರೆ)</li>
+		<li page="0169-0176">೨೫. ಪಾಸ್ಟರ್‌ನಾಕ್ ಮತ್ತು ಅವರ ಕಾದಂಬರಿ<br /> (ನೋಬಲ್ ಬಹುಮಾನ ಪಡೆದ ರಶಿಯನ್ ಕವಿಯ ಕಾದಂಬರಿಗಾಗಿ ರಶಿಯದಲ್ಲಿ ಎದ್ದ ಕೂಗಾಟದ ಹಿನ್ನೆಲೆ)</li>
+		<li page="0177-0185">೨೬. ಅದೃಷ್ಟಹೀನ ರಾಜ ಲಿಯೊಪಾಲ್ಡ್</li>
+		<li page="0186-0193">೨೭. ಜಾರ್ಜ್ ಸ್ಯಾಂಡ್ - ಗಂಡು ಬದುಕಿನ ಹೆಣ್ಣು ಸಾಹಿತಿ</li>
+		<li page="0194-0202">೨೮. ಕೆನ್ಯಾ ದೇಶದ ಸ್ವಾತಂತ್ರ್ಯ ವೀರರು</li>
+		<li page="0203-0209">೨೯. ಚದುರಂಗ ಚಕ್ರವರ್ತಿ - ಬಾಬಿ ಫಿಷರ್<br /> (ಚದುರಂಗದ ಅಭಿಮನ್ಯುವಿನ ಜೀವನ ಕಥೆ)</li>
+	</ol>
 </div>
