--- a/application/views/flat/3-Books/004.xhtml
+++ b/application/views/flat/3-Books/004.xhtml
@@ -1,7 +1,11 @@
 ﻿<div data-bcode="004">
 	<h1 class="title" data-language="kannada">ಪದಾರ್ಥ ಚಿಂತಾಮಣಿ</h1>
 	<ol>
-<li page="0001-0001"></li>
-
-</ol>
+		<li page="0003-0009">ನುಡಿನಮನ</li>
+		<li page="0010-0012">ಎರಡು ಮಾತು</li>
+		<li page="0013-0024">ಹೀಗೊಂದು ಮುನ್ನುಡಿ</li>
+		<li page="0025-0025">ಪ್ರಕಾಶಕರ ನುಡಿ</li>
+		<li page="0026-0026">ಪಾ. ವೆಂ. ಆಚಾರ್ಯ - ಕವಿ ಕತೆಗಾರ ಹರಟೆಗಾರ ವಿಮರ್ಶಕ ಪತ್ರಿಕೋದ್ಯೋಗಿ</li>
+		<li page="0027-0325">ಪದಾರ್ಥ ಚಿಂತಾಮಣಿ : ಭಾಗ - ೧</li>
+	</ol>
 </div>
