--- a/application/views/flat/3-Books/005.xhtml
+++ b/application/views/flat/3-Books/005.xhtml
@@ -1,49 +1,49 @@
 ﻿<div data-bcode="005">
-	<h1 class="title" data-language="kannada">ಖ್ಯಾತಿವೆತ್ತ ಭಾರತೀಯರು</h1>
+	<h1 class="title" data-language="kannada">ಖ್ಯಾತಿವೆತ್ತ ಭಾರತೀಯರು - ಜಗದ್ವಿಖ್ಯಾತರು ಭಾಗ - ೨</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ಲೇಖನ</li>
-<li page="0001-0001">ಅಂಬೇಡಕರರು ಹಾಗೇಕಾದರು ? </li>
-<li page="0001-0001">ಪಶ್ಚಿಮಕ್ಕೆ ಯೋಗಮಾರ್ಗ ತೋರಿಸಿದ ಸುಂದರರಾಜ ಅಯ್ಯಂಗಾರ್ </li>
-<li page="0001-0001">ಆದರ್ಶ ರೈತ ಚೆನ್ನಮಲ್ಲಪ್ಪ ಅಸುಂಡಿಯವರು </li>
-<li page="0001-0001">ಆನಂದಿಬಾಯಿ ಜೋಶಿ </li>
-<li page="0001-0001">ಶಿಕ್ಷಣತಜ್ಞ ಒಡೆಯರರೊಂದಿಗೆ ಒಂದೆರಡು ಗಂಟೆ </li>
-<li page="0001-0001">ಟೈಪ್‌ರೈಟರ್ ನಿರ್ಮಿಸಿದ ಕಟ್ಟಿಯವರು </li>
-<li page="0001-0001">ರಂಟೆಯಿಂದ ಮೋಟಾರ್: ಕಿರ್ಲೋಸ್ಕರ ನಡೆದು ಬಂದ ದಾರಿ </li>
-<li page="0001-0001">ಡಾ. ಆನಂದ ಕುಮಾರಸ್ವಾಮಿ </li>
-<li page="0001-0001">ನಾಟ್ಯಾಚಾರ ಶ್ರೀನಿವಾಸ ಕುಲಕರ್ಣಿ </li>
-<li page="0001-0001">ಸುಚೇತಾ ಕೃಪಲಾನಿ </li>
-<li page="0001-0001">ಜಗದ್ಗುರುವಾಗಲೊಲ್ಲದ ಜೆ. ಕೃಷ್ಣಮೂರ್ತಿ</li>
-<li page="0001-0001">ಗಾಂಧೀಜಿಯ ಅಂತರ್ವಾಣಿ </li>
-<li page="0001-0001">ಅಪಾರ ಆತ್ಮಬಲದ ಜಗದೀಶನ್ </li>
-<li page="0001-0001">ಜನಪ್ರಿಯ ಸ್ತ್ರೀರೋಗತಜ್ಞ ಡಾ. ಶ್ರೀನಿವಾಸ ಕೌಲಗೌಡ </li>
-<li page="0001-0001">ಸಂಗೀತ ಪಂಡಿತ ಭೀಮಸೇನ ಜೋಶಿ </li>
-<li page="0001-0001">ಬ್ರಹ್ಮರ್ಷಿ ದೈವರಾತರು </li>
-<li page="0001-0001">ಕಲಾಗುರು ಜಿ.ಎಸ್. ದಂಡಾವತಿಮಠ </li>
-<li page="0001-0001">ಶಂಕರನ್ ನಂಬೂದ್ರಿಪಾದ ಯಾರು ? </li>
-<li page="0001-0001">ಆ ನಹರು ಕೋಪ !</li>
-<li page="0001-0001">ಕಮಲಾ ನೆಹರು </li>
-<li page="0001-0001">ಬಿಳಿಯ ಕನ್ನಡಿಗ: ಎ.ಸಿ. ಫ್ಯಾರನ್ </li>
-<li page="0001-0001">ನ್ಯಾಯಮೂರ್ತಿ ಮಹಾಜನ </li>
-<li page="0001-0001">ಮಹರ್ಷಿ ಮಹೇಶಯೋಗಿಗಳ ಕ್ರಾಂತಧ್ಯಾನ </li>
-<li page="0001-0001">ನಮ್ಮ ಹೊಸ ಮುಖ್ಯ ಸೇನಾಪತಿ </li>
-<li page="0001-0001">ಮುರಾರಜಿ ದೇಸಾಯಿ ಪಾ.ವೆಂ.ರವರ ಮೊರಾರ್ಜಿ ಮೇಲಿನ ಲೇಖನಕ್ಕೆ ಬಂದ ಪ್ರತಿಕ್ರಿಯೆಗೆ ಪ್ರತ್ಯುತ್ತರ </li>
-<li page="0001-0001">ಸಿ.ಪಿ. ರಾಮಸ್ವಾಮಿ ಅಯ್ಯರ್ </li>
-<li page="0001-0001">ಲಾಲ ಬಹಾದುರ ಶಾಸ್ತ್ರಿ </li>
-<li page="0001-0001">ರಾಮಮನೋಹರ ಲೋಹಿಯಾ </li>
-<li page="0001-0001">ಶ್ರೀಮತಿ ವಿಜಯಲಕ್ಷ್ಮಿ ಪಂಡಿತ </li>
-<li page="0001-0001">ಡಾ. ಮೇರಿ ವರ್ಗಿಸ್ </li>
-<li page="0001-0001">ಹರಿಜನ ಕೈವಾರಿ ಸರದಾರ ವೀರನಗೌಡರ </li>
-<li page="0001-0001">ಹುತಾತ್ಮ ಮೀರ್ ಮಕಬಲ್ ಶೆರ್ವಾನಿ </li>
-<li page="0001-0001">ವೀಣೆ ಶೇಷಣ್ಣ </li>
-<li page="0001-0001">ಭಾರತದ ಕೋಗಿಲೆ: ಸರೋಜಿನಿದೇವಿ </li>
-<li page="0001-0001">ಪಂಡಿತ ಸಾವಳೇಕರ </li>
-<li page="0001-0001">ಆರ್.ಎಸ್.ಎಸ್. ಸಂಸ್ಥಾಪಕ ಹೆಡಗೇವಾರ್ </li>
-<li page="0001-0001">ಗೋಪಾಲ ಗಣೇಶ ಆಗರಕರ್ </li>
-<li page="0001-0001">ರಮಾನಂದ ಚಟರ್ಜಿ </li>
-<li page="0001-0001">ಗಾಂಧೀಜಿಯ ಅಗ್ನಿಪರೀಕ್ಷೆ </li>
-<li page="0001-0001">CHAACHA NEHRU </li>
-<li page="0001-0001">ಚೀನಾ ಯಾತ್ರಿಕ ಕಶ್ಯಪ ಮಾತಂಗ </li>
-<li page="0001-0001">ಯವನಿಯನ್ನು ವರಿಸಿದ ಬ್ರಾಹ್ಮಣ ಕವಿ</li>
-</ol>
+		<li page="0000g-0000o">ಸಮಗ್ರ ಪಾ. ವೆಂ. ಆಚಾರ್ಯ</li>
+		<li page="0001-0005">೧. ಅಂಬೇಡಕರರು ಹಾಗೇಕಾದರು?<br /> (ಭಾರತದ ಪ್ರತಿಭಾಶಾಲಿಯೊಬ್ಬನು ಜಾತಿಯ ದೆಸೆಯಿಂದ ಪಟ್ಟ ಪಾಡು)</li>
+		<li page="0006-0012">೨. ಪಶ್ಚಿಮಕ್ಕೆ ಯೋಗಮಾರ್ಗ ತೋರಿಸಿದ ಸುಂದರರಾಜ ಅಯ್ಯಂಗಾರ್<br /> (ಅವರು ರಾಣಿಯೊಬ್ಬಳಿಗೆ ಶೀರ್ಷಾಸನ ಕಲಿಸಿದ್ದಾರೆ)</li>
+		<li page="0013-0017">೩. ಆದರ್ಶ ರೈತ ಚೆನ್ನಮಲ್ಲಪ್ಪ ಅಸುಂಡಿಯವರು<br /> (ಒಮ್ಮೆ ದಿನಕ್ಕೆರಡಾಣೆಗೆ ದುಡಿದವರು ಇಂದು ಇನ್ನೂರೈವತ್ತು ಎಕರೆ ಉಳುತ್ತಾರೆ)</li>
+		<li page="0018-0021">೪. ಆನಂದಿಬಾಯಿ ಜೋಶಿ<br /> (ವಿದೇಶದಲ್ಲಿ ವೈದ್ಯಕೀಯ ಪದವಿ ಪಡೆದ ಮೊದಲನೇ ಭಾರತೀಯ ಸ್ತ್ರೀ)</li>
+		<li page="0022-0032">೫. ಶಿಕ್ಷಣತಜ್ಞ ಒಡೆಯರರೊಂದಿಗೆ ಒಂದೆರಡು ಗಂಟೆ</li>
+		<li page="0033-0037">೬. ಟೈಪ್‌ರೈಟರ್ ನಿರ್ಮಿಸಿದ ಕಟ್ಟಿಯವರು<br /> (ಯಂತ್ರಶಾಸ್ತ್ರ ಕಲಿಯದಿದ್ದರೂ ಕನ್ನಡಕ್ಕೊಂದು ಟೈಪ್‌ರೈಟರ್ ನಿರ್ಮಿಸಿದವರು)</li>
+		<li page="0038-0042">೭. ರಂಟೆಯಿಂದ ಮೋಟರ್: ಕಿರ್ಲೋಸ್ಕರ ನಡೆದು ಬಂದ ದಾರಿ<br /> (ಅವರ ಮೊದಲ ಆರು ರಂಟೆಗಳು ಎರಡು ವರ್ಷ ಮಾರಲಿಲ್ಲ! ಆದರೆ ಇಂದು ....)</li>
+		<li page="0043-0047">೮. ಡಾ. ಆನಂದ ಕುಮಾರಸ್ವಾಮಿ<br /> (ಭಾರತೀಯ ಕಲೆಗೆ ಜಗತ್ತಿನಲ್ಲಿ ಸ್ಥಾನ ದೊರಕಿಸಿಕೊಟ್ಟ ಮಹಾಪುರುಷ)</li>
+		<li page="0048-0055">೯. ನಾಟ್ಯಾಚಾರ್ಯ ಶ್ರೀನಿವಾಸ ಕುಲಕರ್ಣಿ<br /> (ಈಗವರ ಹಂಬಲ ನಟರಾಜನ ಸೇವೆ ಮಾತ್ರ)</li>
+		<li page="0056-0060">೧೦. ಸುಚೇತಾ ಕೃಪಲಾನಿ<br /> (ಬೆಂಕಿಯನ್ನು ಪಳಗಿಸಿದ ನಾರಿ)</li>
+		<li page="0061-0065">೧೧. ಜಗದ್ಗುರುವಾಗಲೊಲ್ಲದ ಜೆ. ಕೃಷ್ಣಮೂರ್ತಿ<br /> (ಭಾರತೀಯ ತತ್ವಜ್ಞಾನಿಯೊಬ್ಬನ ವಿಚಿತ್ರ ಜೀವನ)</li>
+		<li page="0066-0070">೧೨. ಗಾಂಧೀಜಿಯ ಅಂತರ್ವಾಣಿ</li>
+		<li page="0071-0076">೧೩. ಅಪಾರ ಆತ್ಮಬಲದ ಜಗದೀಶನ್<br /> (ಕುಷ್ಠರೋಗಿಗಳಿಗೆ ಆಶಾಕಿರಣ)</li>
+		<li page="0077-0089">೧೪. ಜನಪ್ರಿಯ ಸ್ತ್ರೀರೋಗ ತಜ್ಞ ಡಾ. ಶ್ರೀನಿವಾಸ ಕೌಲಗುಡ್ಡ<br /> (ರಾಜ್ಯಪ್ರಶಸ್ತಿ ವಿಜೇತ ಅಪೂರ್ವ ಸ್ತ್ರೀರೋಗ ತಜ್ಞ)</li>
+		<li page="0090-0095">೧೫. ಸಂಗೀತ ಪಂಡಿತ ಭೀಮಸೇನ ಜೋಶಿ<br /> (ಸಂಗೀತ ಅವರ ಜೀವನದ ಜೀವವಾಗಿದೆ)</li>
+		<li page="0096-0104">೧೬. ಬ್ರಹ್ಮರ್ಷಿ ದೈವರಾತರು<br /> (ಅವರು ಮಂತ್ರದ್ರಷ್ಟಾರರಾಗಿದ್ದಾರೆ)</li>
+		<li page="0105-0111">೧೭. ಕಲಾಗುರು ಜಿ. ಎಸ್. ದಂಡಾವತಿಮಠ<br /> (ಅವರು ಸಾವಿರಾರು ಕಲಾವಿದರನ್ನು ನಾಡಿಗೆ ಕೊಟ್ಟಿದ್ದಾರೆ)</li>
+		<li page="0112-0116">೧೮. ಶಂಕರನ್ ನಂಬೂದ್ರಿಪಾದ ಯಾರು?<br /> (ಕೇರಳದ ಮುಖ್ಯಮಂತ್ರಿಯ ಪರಿಚಯ)</li>
+		<li page="0117-0121">೧೯. ಆ ನೆಹರೂ ಕೋಪ!<br /> (ಅದು ಎಷ್ಟು ಬೇಗ ಬರುವುದೋ ಅಷ್ಟು ಬೇಗ ಮಾಯವಾಗುತ್ತದೆ!)</li>
+		<li page="0122-0127">೨೦. ಕಮಲಾ ನೆಹರು<br /> (ಮಹಾಪುರುಷನ ಪತ್ನಿಯಾದ ತರಳೆಯ ಜೀವನ)</li>
+		<li page="0128-0133">೨೧. ಬಿಳಿಯ ಕನ್ನಡಿಗ: ಎ. ಸಿ. ಫ್ಯಾರನ್<br /> (ಅವರು ಧಾರವಾಡವನ್ನು ಪ್ರೀತಿಸಿದರು)</li>
+		<li page="0134-0138">೨೨. ನ್ಯಾಯಮೂರ್ತಿ ಮಹಾಜನ<br /> (ಅವರು ಹುಟ್ಟಿದ್ದು ಕೆಟ್ಟ ಗಳಿಗೆಯಂತೆ)</li>
+		<li page="0139-0145">೨೩. ಮಹರ್ಷಿ ಮಹೇಶಯೋಗಿಗಳ ಕ್ರಾಂತಧ್ಯಾನ<br /> (ಚಿಂತೆಯ ಬೆಂತರದಿಂದ ಬೆದರಿದ ಆಧುನಿಕ ಯುಗಕ್ಕೆ ಇದೊಂದು ವರವಾದೀತೇ?)</li>
+		<li page="0146-0150">೨೪. ನಮ್ಮ ಹೊಸ ಮುಖ್ಯ ಸೇನಾಪತಿ - ಮಾನೆಕ್ ಶಾ</li>
+		<li page="0151-0156">೨೫. ಕೆ. ಎಂ. ಮುನಶಿ - ಒಂದು ಅಘಟಿತ ಘಟನೆ<br /> (ಬದಲಾವಣೆ ಯೌವನಧರ್ಮವಾಗಿದ್ದರೆ ಇವರಿನ್ನೂ ಯುವಕರು)</li>
+		<li page="0157-0168">೨೬. ಮುರಾರಜಿ ದೇಸಾಯಿ ಪಾ.ವೆಂ.ರವರ ಮೊರಾರ್ಜಿ ಮೇಲಿನ ಲೇಖನಕ್ಕೆ ಬಂದ ಪ್ರತಿಕ್ರಿಯೆಗೆ ಪ್ರತ್ಯುತ್ತರ<br /> (ಪ್ರತಿಕ್ರಿಯೆ ಪತ್ರ ದೊರೆತಿಲ್ಲ, ಈ ಪ್ರತ್ಯುತ್ತರ ಪ್ರಕಟವಾಗಿಲ್ಲ)</li>
+		<li page="0169-0175">೨೭. ಸಿ. ಪಿ. ರಾಮಸ್ವಾಮಿ ಅಯ್ಯರ್<br /> (ಉಜ್ವಲ ಜೀವನವೊಂದರ ಏಳುಬೀಳುಗಳು)</li>
+		<li page="0176-0183">೨೮. ಲಾಲ ಬಹಾದುರ ಶಾಸ್ತ್ರಿ</li>
+		<li page="0184-0189">೨೯. ಡಾ. ರಾಮಮನೋಹರ ಲೋಹಿಯಾ<br /> (ಭಾರತೀಯ ರಾಜಕಾರಣದ ಸಿಡಿಲ ಮರಿ)</li>
+		<li page="0190-0195">೩೦. ಶ್ರೀಮತಿ ವಿಜಯಲಕ್ಷ್ಮಿ ಪಂಡಿತ<br /> (ನೆಹರೂ ಮನೆತನದ ಸೌಮ್ಯವಿಧೇಯ ಹುಡುಗಿ ಜಗತ್ತಿನ ಶ್ರೇಷ್ಠ ಮಹಿಳೆಯಾದಳು)</li>
+		<li page="0196-0203">೩೧. ಡಾ. ಮೇರಿ ವರ್ಗೀಸ್<br /> (ಅದೃಷ್ಟದ ವಿರುದ್ಧ ಧೈರ್ಯದ ವಿಜಯ)</li>
+		<li page="0204-0211">೩೨. ಹರಿಜನ ಕೈವಾರಿ ಸರದಾರ ವೀರನಗೌಡರು<br /> (ಹರಿಜನರು ಮತ್ತು ಮಹಿಳೆಯರ ಕಲ್ಯಾಣಕ್ಕಾಗಿ ಇವರ ಜೀವನ ಸವೆದಿದೆ)</li>
+		<li page="0212-0215">೩೩. ಹುತಾತ್ಮ ಮೀರ್ ಮಕಬುಲ್ ಶೆರ್ವಾನಿ<br /> (ಜಾತ್ಯತೀತ ತತ್ವಕ್ಕಾಗಿ ಹುತಾತ್ಮನಾದ ಅವನನ್ನು ಮರೆಯೋಣ ಬೇಡ)</li>
+		<li page="0216-0220">೩೪. ವೀಣೆ ಶೇಷಣ್ಣ<br /> (ಮೈಸೂರಿನಲ್ಲೇ ಏಕೆ, ಎಲ್ಲಿಯೂ ಅವರ ಹಾಗೆ ವೀಣೆಯನ್ನು ನುಡಿಸಬಲ್ಲವರಿರಲಿಲ್ಲ)</li>
+		<li page="0221-0227">೩೫. ಭಾರತದ ಕೋಗಿಲೆ: ಸರೋಜಿನಿದೇವಿ<br /> (ರಾಜಕಾರಣದಲ್ಲಿ ತೊಡಗಿದ ಕವಯಿತ್ರಿ)</li>
+		<li page="0228-0235">೩೬. ಪಂಡಿತ ಸಾತವಳೇಕರ<br /> (ವೇದವಿದ್ಯೆಗಾಗಿ ಜೀವವನ್ನು ಮೀಸಲಿಟ್ಟಿದ್ದಾರೆ)</li>
+		<li page="0236-0241">೩೭. ಆರ್.ಎಸ್.ಎಸ್. ಸಂಸ್ಥಾಪಕ ಹೆಡಗೇವಾರ್<br /> (‘ಸಂಘ’ ಜೀವನದ ದ್ರಷ್ಟಾರ)</li>
+		<li page="0242-0259">೩೮. ಗೋಪಾಲ ಗಣೇಶ ಆಗರಕರ್</li>
+		<li page="0261-0277">೩೯. ರಮಾನಂದ ಚಟರ್ಜಿ</li>
+		<li page="0278-0303">೪೦. ಗಾಂಧೀಜಿಯ ಅಗ್ನಿಪರೀಕ್ಷೆ<br /> (ನೌಖಾಲಿಯಲ್ಲಿ ಗಾಂಧೀಯಾತ್ರೆಯ ಕಥೆ)</li>
+		<li page="0304-0305">41. CHAACHA NEHRU<br /> (ಹೈಸ್ಕೂಲು ವಿದ್ಯಾರ್ಥಿನಿ ಮೊಮ್ಮಗಳಿಗಾಗಿ ಬರೆದುಕೊಟ್ಟ ಪ್ರಬಂಧ)</li>
+		<li page="0306-0310">೪೨. ಚೀನಾ ಯಾತ್ರಿಕ ಕಶ್ಯಪ ಮಾತಂಗ<br /> (ಧರ್ಮಪ್ರಚಾರಕ್ಕಾಗಿ ಚೀನಕ್ಕೆ ಹೋದ ಪ್ರಥಮ ಭಾರತೀಯ)</li>
+		<li page="0311-0319">೪೩. ಯವನಿಯನ್ನು ವರಿಸಿದ ಬ್ರಾಹ್ಮಣ ಕವಿ<br /> (ಜಗನ್ನಾಥ ಪಂಡಿತನ ದುರಂತ ಚರಿತ್ರ)</li>
+	</ol>
 </div>
