--- a/application/views/flat/3-Books/006.xhtml
+++ b/application/views/flat/3-Books/006.xhtml
@@ -1,7 +1,10 @@
 ﻿<div data-bcode="006">
 	<h1 class="title" data-language="kannada">ವರ್ಧಮಾನ</h1>
 	<ol>
-<li page="0001-0001"></li>
-
-</ol>
+		<li page="0000g-0000g">ಸಂಪಾದಕೀಯ</li>
+		<li page="000೦i-000೦o">1979ರ ವರ್ಧಮಾನ ಪ್ರಶಸ್ತಿ ಸಮಾರಂಭದ ಸವಿನೆನಪುಗಳು</li>
+		<li page="0001-0006">ಶ್ರೀ ಪಾ. ವೆಂ. ಆಚಾರ್ಯರ ವಿಪರೀತ - ಪ್ರೊ॥ ಅ. ರಾ. ಮಿತ್ರ</li>
+		<li page="0007-0009">ಶ್ರೀ ಎಂ. ಎಸ್. ಕೆ. ಪ್ರಭು ಅವರ ‘ಬಕ’ - ಶ್ರೀ ಜಯರಾಮ ಕಾರಂತ</li>
+		<li page="0010-0012">ಜನಪದರ ಅಭಿಮಾನ ಸಂಸ್ಥೆ ವರ್ಧಮಾನ ಪ್ರಶಸ್ತಿ ಪೀಠ - ಹರಿಹರಪ್ರಿಯ</li>
+	</ol>
 </div>
