--- a/application/views/flat/3-Books/009.xhtml
+++ b/application/views/flat/3-Books/009.xhtml
@@ -1,27 +1,30 @@
 ﻿<div data-bcode="009">
 	<h1 class="title" data-language="kannada">ಪಾ ವೆಂ ನಾವು ಕಂಡಂತೆ</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ಪಾವೆಂ ವಂಶವೃಕ್ಷದ ಪರವಾಗಿ - ಶ್ರೀನಿವಾಸ ವಿ. ಪಾಡಿಗಾರ </li>
-<li page="0001-0001">ಅರ್ಪಣೆ: ಶ್ರೀಕೃಷ್ಣನಿಗೆ - ಪಾವೆಂ</li>
-<li page="0001-0001">ನನ್ನ ತಂದೆ ಪಾವೆಂ - ರಾಧಾಕೃಷ್ಣ ಆಚಾರ್ಯ</li>
-<li page="0001-0001">ನನ್ನ ಸ್ಮೃತಿ ಪಟಲದಲ್ಲಿ ತಂದೆ ಪಾವೆಂ - ರಮಾನಂದ ಪಾಡಿಗಾರ</li>
-<li page="0001-0001">ಮಾವ ಪಾವೆಂ - ವಿಜಯಲಕ್ಷ್ಮಿ ರಮಾನಂದ ಪಾಡಿಗಾರ</li>
-<li page="0001-0001">ಮಗಳ ದೃಷ್ಟಿಯಲ್ಲಿ ತಂದೆ - ಅನಸೂಯ ಜಿ. ಮಾರ್ಕೋಡ</li>
-<li page="0001-0001">ನನ್ನ ಬಾಲ್ಯದ ಸವಿನೆನಪುಗಳು - ಅಹಲ್ಯಾ ಕೃಷ್ಣಮೂರ್ತಿ ರಾವ್</li>
-<li page="0001-0001">ವ್ಯಕ್ತಿಯಲ್ಲ, ಶಕ್ತಿ ! - ಕೆ. ಕೃಷ್ಣಮೂರ್ತಿ ರಾವ್</li>
-<li page="0001-0001">ತಂದೆಯವರು ಮತ್ತು ನಾನು - ಶ್ರೀನಿವಾಸ ವಿ. ಪಾಡಿಗಾರ</li>
-<li page="0001-0001">ಅಜ್ಜನ ಮನೆಗೆ ಹೋದಾಗ - ಉಪೇಂದ್ರ ಎಂ. ಪಾಡಿಗಾರ</li>
-<li page="0001-0001">ಪಾವೆಂ - ಅತ್ತೆ, ಮಾವನವರಿಂದ ಕೇಳಿದಂತೆ - ಭವಾನಿ ಶ್ಯಾಮ್ ಪಾಡಿಗಾರ</li>
-<li page="0001-0001">ಪಾವೆಂ ಬರಹವೇ ಬದುಕು - ಜ್ಯೋತಿ ವೆಂಕಟಗಿರಿ ಉಪಾಧ್ಯ </li>
-<li page="0001-0001">ಹೀಗೂ ಇದ್ದರು ನಮ್ಮಜ್ಜ - ಛಾಯ ಕೆ. ಉಪಾಧ್ಯ </li>
-<li page="0001-0001">ಪಾವೆಂ ನುಡಿ ಸ್ಮರಣೆ - ಚಂದ್ರಕಾಂತ ವಿ. ಆಚಾರ್ಯ</li>
-<li page="0001-0001">ಅಜ್ಜನ ಆರೋಹಣ - ಮಾಯಾ ಕಿರಣ್</li>
-<li page="0001-0001">ಪಾವೆಂ ಅಜ್ಜ ನಾನು ಕಂಡಂತೆ - ಮೀರಾ ಗೋಪಿನಾಥ</li>
-<li page="0001-0001">ಪಾವೆಂ ಅಜ್ಜ ನನ್ನ ಮನದಲ್ಲಿ & .. ನನ್ನ ಜೀವನ ಪಾಠವಾಗಿ - ವೀಣಾ ಅಡಿಗ</li>
-<li page="0001-0001">My Hubli Ajja - Manjunath Padigar</li>
-<li page="0001-0001">ನಾ ಕಂಡ ಅಜ್ಜ - ಭಾರತಿ ರಾಘವೇಂದ್ರ</li>
-<li page="0001-0001">ನನ್ನ ಸ್ಮೃತಿಯಲ್ಲಿ ನನ್ನ ಹುಬ್ಬಿ ಅಜ್ಜ ಪಾವೆಂ - ಸುಬ್ರಹ್ಮಣ್ಯ ಜಿ. ಮಾರ್ಕೋಡ</li>
-<li page="0001-0001">ನಾ ಕಂಡ ನನ್ನಜ್ಜ - ಕುಮಾರ ಮಾರ್ಕೊಡ ಪುರಾಣಿಕ</li>
-</ol>
+		<li page="0003-0003">ಪಾ.ವೆಂ. ವಂಶವೃಕ್ಷದ ಪರವಾಗಿ - ಶ್ರೀನಿವಾಸ ವಿ. ಪಾಡಿಗಾರ</li>
+		<li page="0005-0005">ಅರ್ಪಣೆ: ಶ್ರೀಕೃಷ್ಣನಿಗೆ - ಪಾವೆಂ</li>
+		<li page="0009-0016">ನನ್ನ ತಂದೆ ಪಾವೆಂ - ರಾಧಾಕೃಷ್ಣ ಆಚಾರ್ಯ</li>
+		<li page="0017-0020">ನನ್ನ ಸ್ಮೃತಿ ಪಟಲದಲ್ಲಿ ತಂದೆ ಪಾವೆಂ - ರಮಾನಂದ ಪಾಡಿಗಾರ</li>
+		<li page="0021-0023">ಮಾವ ಪಾವೆಂ - ವಿಜಯಲಕ್ಷ್ಮಿ ರಮಾನಂದ ಪಾಡಿಗಾರ</li>
+		<li page="0024-0025">ಪಾವೆಂ ಅವರಿಗೆ ನಮನ - ವಿಜಯಲಕ್ಷ್ಮಿ ರಮಾನಂದ ಪಾಡಿಗಾರ</li>
+		<li page="0026-0027">ಮಗಳ ದೃಷ್ಟಿಯಲ್ಲಿ ತಂದೆ - ಅನಸೂಯ ಜಿ. ಮಾರ್ಕೋಡ</li>
+		<li page="0028-0028">ಅಜ್ಜ ಬೆಳೆಸಿದ ಕನ್ನಡವ ಕಾಪಾಡಿ - ಅನಸೂಯ ಜಿ. ಮಾರ್ಕೋಡ</li>
+		<li page="0029-0032">ನನ್ನ ಬಾಲ್ಯದ ಸವಿನೆನಪುಗಳು - ಅಹಲ್ಯಾ ಕೃಷ್ಣಮೂರ್ತಿ ರಾವ್</li>
+		<li page="0033-0036">ವ್ಯಕ್ತಿಯಲ್ಲ, ಶಕ್ತಿ! - ಕೆ. ಕೃಷ್ಣಮೂರ್ತಿ ರಾವ್</li>
+		<li page="0037-0046">ತಂದೆಯವರು ಮತ್ತು ನಾನು - ಶ್ರೀನಿವಾಸ ವಿ. ಪಾಡಿಗಾರ</li>
+		<li page="0047-0049">ಅಜ್ಜನ ಮನೆಗೆ ಹೋದಾಗ - ಉಪೇಂದ್ರ ಎಂ. ಪಾಡಿಗಾರ</li>
+		<li page="0050-0051">ಪಾವೆಂ - ಅತ್ತೆ, ಮಾವನವರಿಂದ ಕೇಳಿದಂತೆ - ಭವಾನಿ ಶ್ಯಾಮ್ ಪಾಡಿಗಾರ</li>
+		<li page="0052-0053">ಪಾವೆಂ ಬರಹವೇ ಬದುಕು - ಜ್ಯೋತಿ ವೆಂಕಟಗಿರಿ ಉಪಾಧ್ಯ</li>
+		<li page="0054-0055">ಹೀಗೂ ಇದ್ದರು ನಮ್ಮಜ್ಜ - ಛಾಯ ಕೆ. ಉಪಾಧ್ಯ</li>
+		<li page="0056-0056">ನಮ್ಮಜ್ಜನವರ ಅಸ್ತಮಾ (ಗದ್ಯ - ಪದ್ಯ) - ಛಾಯ ಕೆ. ಉಪಾಧ್ಯ</li>
+		<li page="0057-0058">ಪಾವೆಂ ನುಡಿ ಸ್ಮರಣೆ - ಚಂದ್ರಕಾಂತ ವಿ. ಆಚಾರ್ಯ</li>
+		<li page="0059-0061">ಅಜ್ಜನ ಆರೋಹಣ - ಮಾಯಾ ಕಿರಣ್</li>
+		<li page="0062-0063">ಪಾವೆಂ ಅಜ್ಜ ನಾನು ಕಂಡಂತೆ - ಮೀರಾ ಗೋಪಿನಾಥ</li>
+		<li page="0064-0067">ಪಾವೆಂ ಅಜ್ಜ ನನ್ನ ಮನದಲ್ಲಿ &amp; ... ನನ್ನ ಜೀವನ ಪಾಠವಾಗಿ - ವೀಣಾ ಅಡಿಗ</li>
+		<li page="0068-0069">My Hubli Ajja - Manjunath Padigar</li>
+		<li page="0070-0072">ನಾ ಕಂಡ ಅಜ್ಜ - ಭಾರತಿ ರಾಘವೇಂದ್ರ</li>
+		<li page="0073-0073">ಅಜ್ಜನಿಗೆ ನಮನ - ಭಾರತಿ ರಾಘವೇಂದ್ರ</li>
+		<li page="0074-0075">ನನ್ನ ಸ್ಮೃತಿಯಲ್ಲಿ ನನ್ನ ಹುಬ್ಳಿ ಅಜ್ಜ ಪಾವೆಂ - ಸುಬ್ರಹ್ಮಣ್ಯ ಜಿ. ಮಾರ್ಕೋಡ</li>
+		<li page="0076-0078">ನಾ ಕಂಡ ನನ್ನಜ್ಜ - ಕುಮಾರ ಮಾರ್ಕೋಡ ಪುರಾಣಿಕ</li>
+	</ol>
 </div>
