--- a/application/views/flat/3-Books/011.xhtml
+++ b/application/views/flat/3-Books/011.xhtml
@@ -1,48 +1,48 @@
 ﻿<div data-bcode="011">
 	<h1 class="title" data-language="kannada">ಲೋಕದ ಡೊಂಕು</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ನಾನು ಹುಟ್ಟಿದ್ದು </li>
-<li page="0001-0001">ನನ್ನ ಗಣಿತ ಸಮಸ್ಯೆಗಳು </li>
-<li page="0001-0001">ಬೇಂದ್ರೆ ಅಂದ್ರೆ </li>
-<li page="0001-0001">ದೇವರ ಭಾಷೆ </li>
-<li page="0001-0001">ಸಿಗರೇಟಿನ ಹೊಗೆ ವರ್ತುಲ ವರ್ತುಲ</li>
-<li page="0001-0001">ನಾನು ಯಾರು ? </li>
-<li page="0001-0001">ಯಾರಿಗಾಗಿ ಬದುಕುತ್ತೇವೆ? </li>
-<li page="0001-0001">ಬೈಗಳಿಗೊಂದು ನಿಘಂಟು </li>
-<li page="0001-0001">ದ್ರೋಣಾಚಾರ್ಯರನ್ನು ಕಂಡೆ </li>
-<li page="0001-0001">ಈ ಶಬ್ದಕ್ಕೆ ಅಂಜುತ್ತೇನೆ </li>
-<li page="0001-0001">ಮರಳಿ ಸೈಕಲ್ ಯುಗಕ್ಕೆ </li>
-<li page="0001-0001">ಕನ್ನಡ ! ಕನ್ನಡ ! ಇದೆಲ್ಲಾವುಂ ಎನ್ನಡ ? </li>
-<li page="0001-0001">ಸತ್ಯ, ನಾನು ಮತ್ತು ಹರಿಶ್ಚಂದ್ರ </li>
-<li page="0001-0001">ಮಂತ್ರದಿಂದ ಅಗ್ನಿ </li>
-<li page="0001-0001">ಗಗನಯುಗದಲ್ಲಿ ಜ್ಯೋತಿಷ್ಯ </li>
-<li page="0001-0001">ಅದೃಷ್ಟ ಅಪ್ಪಳಿಸಿದರೆ ... </li>
-<li page="0001-0001">ನಾನು ಕಾಣದ ಭೂತಗಳು- ೧ </li>
-<li page="0001-0001">ನಾನು ಕಾಣದ ಭೂತಗಳು-೨ </li>
-<li page="0001-0001">ಬೀಳುವ ಸುಖ </li>
-<li page="0001-0001">ಲಿಯಾಕತ್ ಅಲಿಯವರನ್ನು ಕಂಡೆ  </li>
-<li page="0001-0001">ಉಪಕಾರ ಮಾಡಿ ನೋಡಿ ! </li>
-<li page="0001-0001">ಸ್ನಾನಾಸ್ನಾನ ವಿವೇಕಂ </li>
-<li page="0001-0001">ಮೈಸೂರು ದರ್ಶನ </li>
-<li page="0001-0001">ಸನಾತನ ಧರ್ಮ ಮತ್ತು ಸೈಕಲ್</li>
-<li page="0001-0001">ಮಾದರಿ ಮಡದಿ ಬೇಕೆ ? </li>
-<li page="0001-0001">ಮನೆಗೊಂದು ಹೆಸರು </li>
-<li page="0001-0001">ಭಾಷೆ ಮತ್ತು ಮುಖ  </li>
-<li page="0001-0001">ಇಡಲೀ ಶಾಸ್ತ್ರ </li>
-<li page="0001-0001">ನಮ್ಮ ರಾವಣನನ್ನು ಕಾಪಾಡಿ !</li>
-<li page="0001-0001">ನನ್ನ ಆಧ್ಯಾತ್ಮಿಕ ಅಲರ್ಜಿ </li>
-<li page="0001-0001">ಸಕ್ಕರೆ ಗೀತ </li>
-<li page="0001-0001">ಗೊಣಗಿ ಗೊಣಗಿ ಕ್ರಾಂತಿ ತಪ್ಪಿಸಿರಿ </li>
-<li page="0001-0001">ಇಸು...</li>
-<li page="0001-0001">ಸವಿಗನಸುಗಳು </li>
-<li page="0001-0001">ಸೈಟ-ಸ್ಟಿಕ್ಕುಗಳು  </li>
-<li page="0001-0001">ನಾಸಿಕಾವಿಲಾಸಂ  </li>
-<li page="0001-0001">ಆಸ್ಪತ್ರೆಯಲ್ಲಿ ಆಚಾರ್ಯರು </li>
-<li page="0001-0001">ನಿಕ್ಸನ್ನರೊಡನೆ    ನಾನು </li>
-<li page="0001-0001">ಗಾಂಧೀಜಿ ಬದುಕಿದ್ದಾರೆ! </li>
-<li page="0001-0001">ನನ್ನ ಆಸ್ತ್ಮಾ ಷಷ್ಯ್ಟಬ್ದಿ </li>
-<li page="0001-0001">ಸಾವಿನ ಸಮಸ್ಯೆ : ಮಕ್ಕಳು ಕಂಡಂತೆ </li>
-<li page="0001-0001">ಲಾಂಗೂಲಾಚಾರ್ಯ ಯಾರು ?</li>
-</ol>
+		<li page="0000e-0000e">ಎರಡೇ ಮಾತು</li>
+		<li page="0001-0006">ನಾನು ಹುಟ್ಟಿದ್ದು</li>
+		<li page="0006-0010">ನನ್ನ ಗಣಿತ ಸಮಸ್ಯೆಗಳು</li>
+		<li page="0010-0015">ಬೇಂದ್ರೆ ಅಂದ್ರೆ</li>
+		<li page="0015-0018">ದೇವರ ಭಾಷೆ</li>
+		<li page="0018-0022">ಸಿಗರೇಟಿನ ಹೊಗೆ ವರ್ತುಲ ವರ್ತುಲ</li>
+		<li page="0022-0028">ನಾನು ಯಾರು?</li>
+		<li page="0028-0035">ಯಾರಿಗಾಗಿ ಬದುಕುತ್ತೇವೆ?</li>
+		<li page="0035-0038">ಬೈಗಳಿಗೊಂದು ನಿಘಂಟು</li>
+		<li page="0038-0046">ದ್ರೋಣಾಚಾರ್ಯರನ್ನು ಕಂಡೆ</li>
+		<li page="0046-0049">ಈ ಶಬ್ದಕ್ಕೆ ಅಂಜುತ್ತೇನೆ</li>
+		<li page="0049-0054">ಮರಳಿ ಸೈಕಲ್ ಯುಗಕ್ಕೆ</li>
+		<li page="0054-0057">ಕನ್ನಡ! ಕನ್ನಡ! ಇದೆಲ್ಲಾವುಂ ಎನ್ನಡ?</li>
+		<li page="0058-0062">ಸತ್ಯ, ನಾನು ಮತ್ತು ಹರಿಶ್ಚಂದ್ರ</li>
+		<li page="0062-0065">ಮಂತ್ರದಿಂದ ಅಗ್ನಿ</li>
+		<li page="0066-0072">ಗಗನಯುಗದಲ್ಲಿ ಜ್ಯೋತಿಷ್ಯ</li>
+		<li page="0072-0075">ಅದೃಷ್ಟ ಅಪ್ಪಳಿಸಿದರೆ ...</li>
+		<li page="0075-0086">ನಾನು ಕಾಣದ ಭೂತಗಳು - ೧</li>
+		<li page="0086-0095">ನಾನು ಕಾಣದ ಭೂತಗಳು - ೨</li>
+		<li page="0095-0099">ಬೀಳುವ ಸುಖ</li>
+		<li page="0099-0103">ಲಿಯಾಕತ್ ಅಲಿಯವರನ್ನು ಕಂಡೆ</li>
+		<li page="0103-0109">ಉಪಕಾರ ಮಾಡಿ ನೋಡಿ!</li>
+		<li page="0109-0116">ಸ್ನಾನಾಸ್ನಾನ ವಿವೇಕಂ</li>
+		<li page="0116-0119">ಮೈಸೂರು ದರ್ಶನ</li>
+		<li page="0119-0121">ಸನಾತನ ಧರ್ಮ ಮತ್ತು ಸೈಕಲ್</li>
+		<li page="0122-0130">ಮಾದರಿ ಮಡದಿ ಬೇಕೆ?</li>
+		<li page="0130-0133">ಮನೆಗೊಂದು ಹೆಸರು</li>
+		<li page="0133-0140">ಭಾಷೆ ಮತ್ತು ಮುಖ</li>
+		<li page="0140-0144">ಇಡಲೀ ಶಾಸ್ತ್ರ</li>
+		<li page="0144-0148">ನಮ್ಮ ರಾವಣನನ್ನು ಕಾಪಾಡಿ!</li>
+		<li page="0148-0152">ನನ್ನ ಆಧ್ಯಾತ್ಮಿಕ ಅಲರ್ಜಿ</li>
+		<li page="0152-0155">ಸಕ್ಕರೆ ಗೀತ</li>
+		<li page="0155-0161">ಗೊಣಗಿ ಗೊಣಗಿ ಕ್ರಾಂತಿ ತಪ್ಪಿಸಿರಿ</li>
+		<li page="0161-0163">ಇಸು...</li>
+		<li page="0163-0171">ಸವಿಗನಸುಗಳು</li>
+		<li page="0171-0174">ಸ್ಟೆಟಿ-ಸ್ಟಿಕ್ಕುಗಳು</li>
+		<li page="0175-0178">ನಾಸಿಕಾವಿಲಾಸಂ</li>
+		<li page="0178-0181">ಆಸ್ಪತ್ರೆಯಲ್ಲಿ ಆಚಾರ್ಯರು</li>
+		<li page="0181-0189">ನಿಕ್ಸನ್ನರೊಡನೆ ನಾನು</li>
+		<li page="0189-0193">ಗಾಂಧೀಜಿ ಬದುಕಿದ್ದಾರೆ!</li>
+		<li page="0193-0198">ನನ್ನ ಆಸ್ತ್ಮಾ ಷಷ್ಟ್ಯಬ್ದಿ</li>
+		<li page="0198-0204">ಸಾವಿನ ಸಮಸ್ಯೆ : ಮಕ್ಕಳು ಕಂಡಂತೆ</li>
+		<li page="0204-0207">ಲಾಂಗೂಲಾಚಾರ್ಯ ಯಾರು?</li>
+	</ol>
 </div>
