--- a/application/views/flat/3-Books/012.xhtml
+++ b/application/views/flat/3-Books/012.xhtml
@@ -1,91 +1,104 @@
 ﻿<div data-bcode="012">
 	<h1 class="title" data-language="kannada">ಹೌಸಿಂಗ್ ಕಾಲನಿ</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ಪಾ.ವೆಂ. ಅವರ ಪಂಚದಶಿ - ಡಾ. ಶ್ರೀನಿವಾಸ ಹಾವನೂರ</li>
-<li page="0001-0001">ಸಂಪಾದಕರ ನುಡಿ</li>
-<li page="0001-0001">ಪ್ರಾರಂಭದ ಕಲವು ಕವಿತೆಗಳು </li>
-<li page="0001-0001">ಕಾವ್ಯ ಸಾಮ್ರಾಜ್ಯ </li>
-<li page="0001-0001">ಚಿಕ್ಕಂದಿನ ನೆನಹು </li>
-<li page="0001-0001">ರಣಭೇರಿ 'ನವನೀರದ' ದಿಂದ ಬರೆದವನ ಮಾತು </li>
-<li page="0001-0001">ಹೂಬುಟ್ಟಿ </li>
-<li page="0001-0001">ಹೂವಿನ ಹಂಬಲ </li>
-<li page="0001-0001">ಉದ್ಗಾರ </li>
-<li page="0001-0001">ಮುರಲಿಯ ಹಾಡು </li>
-<li page="0001-0001">ಬೆಳಕೆಲ್ಲಿ</li>
-<li page="0001-0001">ಕವಿತೆಗೆ</li>
-<li page="0001-0001">ನನ್ನ ಹಾಡು </li>
-<li page="0001-0001">ಇಪ್ಪತ್ತನೆಯ ಹುಟ್ಟಿದ ದಿನದಂದು</li>
-<li page="0001-0001">ಜಸದ ಮರುಳು </li>
-<li page="0001-0001">ಇನಿಯನ ಸ್ವಾಗತ </li>
-<li page="0001-0001">ಸಂಯುಕ್ತ </li>
-<li page="0001-0001">ಕರೆ</li>
-<li page="0001-0001">ಕವಿತೆ- ದಯಿತೆ</li>
-<li page="0001-0001">ಚುಕ್ಕೆಗಳಿಗೆ</li>
-<li page="0001-0001">ವಿಮರ್ಶಕ</li>
-<li page="0001-0001">ಕೊನೆಯ ಹಾಡು </li>
-<li page="0001-0001">ಏನನೆಣಿಸುತಲಿರುವೆ ? </li>
-<li page="0001-0001">ರೊಟ್ಟಿಯ ರಾಗ </li>
-<li page="0001-0001">ಶ್ರೀ ಕೃಷ್ಣನಿಗೆ</li>
-<li page="0001-0001">ನುಸಿಗೆ </li>
-<li page="0001-0001">ನಾ ಕವಿಂ ಮಾನವಂ ಮನ್ಯೇ </li>
-<li page="0001-0001">ಹೊಸ ಕವಿತೆಯನ್ನು ದೂರುವವರಿಗೆ </li>
-<li page="0001-0001">ಆರೆಂಬರೀಜಗವು ದುಗುಡದರಮನೆಯೆಂದು</li>
-<li page="0001-0001">ಗುಲಾಬಿ ಹೂವಿಗೆ </li>
-<li page="0001-0001">ಯುದ್ಧ </li>
-<li page="0001-0001">ನನ್ನ ಗೋರಿಯ ಮೇಲೆ </li>
-<li page="0001-0001">ಇದು ಏಕೆ ಹೀಗಾಯ್ತು </li>
-<li page="0001-0001">ಆಕಾಂಕ್ಷೆಯೊಂದಿಹುದು </li>
-<li page="0001-0001">ನನ್ನ ಕಾವ್ಯ </li>
-<li page="0001-0001">ಮಗುವಿಗೆ</li>
-<li page="0001-0001">ಬಾರೆಂದು ಕರೆದಾಗ </li>
-<li page="0001-0001">ಒಂದು ಕಾಗದ</li>
-<li page="0001-0001">ಬಯಕೆಯ ಬೆನ್ನು ಹತ್ತಿ </li>
-<li page="0001-0001">ಅಮರ ಮಹಾತ್ಮ </li>
-<li page="0001-0001">ಸತ್ಯದರ್ಶನ </li>
-<li page="0001-0001">ಗಾತ್ರ - ಚಿತ್ರ </li>
-<li page="0001-0001">ಉದ್ದೇಶ </li>
-<li page="0001-0001">ಕವಿ- ವಿಜ್ಞಾನಿಗೆ </li>
-<li page="0001-0001">ಸುಗ್ಗಿ ಯ ಹಾಡು </li>
-<li page="0001-0001">ನವನೀರದ</li>
-<li page="0001-0001">'ಕೆಲವು ಪದ್ಯಗಳು' ಸಂಗ್ರಹದಿಂದ ಎರಡು ಮಾತು </li>
-<li page="0001-0001">ನಲುವತ್ತರ ನೆರೆಯಲ್ಲಿ </li>
-<li page="0001-0001">ಉಪೋದ್-ಘಾತ </li>
-<li page="0001-0001">ಗೋಪಿ</li>
-<li page="0001-0001">ಅಸಿಧಾರಾವೃತ </li>
-<li page="0001-0001">ಮೊಸ </li>
-<li page="0001-0001">ಅನಿಸುತಿದೆ </li>
-<li page="0001-0001">ವಿಕಾರಿ</li>
-<li page="0001-0001">ಬದಲಾವಣೆ </li>
-<li page="0001-0001">ಆತ್ಮಬಾಂಬು</li>
-<li page="0001-0001">ಹೌಸಿಂಗ್ ಕಾಲನಿ</li>
-<li page="0001-0001">ಅರಳಿಮರ </li>
-<li page="0001-0001">ನವ್ಯ</li>
-<li page="0001-0001">ಕಲೆ</li>
-<li page="0001-0001">ನೋಣ</li>
-<li page="0001-0001">ಶಿಲ್ಪಪ್ರಿಯ</li>
-<li page="0001-0001">ಸತ್ತವರು</li>
-<li page="0001-0001">ದುರಂತಗಳು</li>
-<li page="0001-0001">ಅಫಲಿತ</li>
-<li page="0001-0001">ಕಾಲ</li>
-<li page="0001-0001">ಗಾಂಧಿಗೆ </li>
-<li page="0001-0001">ಎರಡು ದಾರಿ</li>
-<li page="0001-0001">ಸಂಜೆ ಹೊತ್ತು</li>
-<li page="0001-0001">ಕವಿ ಮತ್ತು ಕೋಗಿಲೆ </li>
-<li page="0001-0001">ಬಲಿ</li>
-<li page="0001-0001">ದತ್ತನ ನೆನಪು</li>
-<li page="0001-0001">ಕೊಡೆ</li>
-<li page="0001-0001">ದ್ವಾ ಸುಪರ್ಣಾ</li>
-<li page="0001-0001">ಬಿನ್ನಹ</li>
-<li page="0001-0001">ಗೀತಾಧ್ಯಾಯ ೧೯</li>
-<li page="0001-0001">ಯಾಹ್ಯಾ ಖಾನ್ ಹೇಳದೇ ಇದ್ದದ್ದು </li>
-<li page="0001-0001">ತುರ್ತಿನ ರಾಮಾಯಣ</li>
-<li page="0001-0001">ಬದುಕಿನ ಬದುಕು</li>
-<li page="0001-0001">ರಾಮದೇವರ ಸತ್ಯ</li>
-<li page="0001-0001">ಪೆಂಗೋಪದೇಶ </li>
-<li page="0001-0001">ಅನುಬಂಧಗಳು : </li>
-<li page="0001-0001">गोपी-गीता  </li>
-<li page="0001-0001">ಅಭಿಮತ  ಡಾ. ಸಿದ್ಧಲಿಂಗ ಪಟ್ಟಣಶೆಟ್ಟಿ</li>
-<li page="0001-0001">ಪದ್ಯಗಳ ಅಕಾರಾದಿ ಸೂಚಿ</li>
-</ol>
+		<li page="0000i-0000k">ಪಾ.ವೆಂ. ಅವರ ಪಂಚದಶಿ - ಡಾ. ಶ್ರೀನಿವಾಸ ಹಾವನೂರ</li>
+		<li page="0000l-0000o">ಸಂಪಾದಕರ ನುಡಿ</li>
+		<li page="0001-0006">ಆರಂಭ ಕಾಲದ ಕೆಲವು ಪದ್ಯಗಳು
+			<ol>
+				<li page="0001-0001">ಕಾವ್ಯ ಸಾಮ್ರಾಜ್ಯ</li>
+				<li page="0002-0004">ಚಿಕ್ಕಂದಿನ ನೆನಹು</li>
+				<li page="0005-0006">ರಣಭೇರಿ</li>
+			</ol>
+		</li>
+		<li page="0007-0087">'ನವನೀರದ' ದಿಂದ
+			<ol>
+				<li page="0008-0008">ಬರೆದವನ ಮಾತು</li>
+				<li page="0009-0009">ಹೂಬುಟ್ಟಿ</li>
+				<li page="0010-0010">ಹೂವಿನ ಹಂಬಲ</li>
+				<li page="0011-0012">ಉದ್ಗಾರ</li>
+				<li page="0013-0013">ಮುರಲಿಯ ಹಾಡು</li>
+				<li page="0014-0015">ಬೆಳಕೆಲ್ಲಿ</li>
+				<li page="0016-0018">ಕವಿತೆಗೆ</li>
+				<li page="0019-0020">ನನ್ನ ಹಾಡು</li>
+				<li page="0021-0022">ಇಪ್ಪತ್ತನೆಯ ಹುಟ್ಟಿದ ದಿನದಂದು</li>
+				<li page="0023-0024">ಜಸದ ಮರುಳು</li>
+				<li page="0025-0027">ಇನಿಯನ ಸ್ವಾಗತ</li>
+				<li page="0028-0031">ಸಂಯುಕ್ತೆ</li>
+				<li page="0032-0032">ಕರೆ</li>
+				<li page="0033-0033">ಕವಿತೆ- ದಯಿತೆ</li>
+				<li page="0034-0035">ಚುಕ್ಕೆಗಳಿಗೆ</li>
+				<li page="0036-0036">ವಿಮರ್ಶಕ</li>
+				<li page="0037-0038">ಕೊನೆಯ ಹಾಡು</li>
+				<li page="0039-0040">ಏನನೆಣಿಸುತಲಿರುವೆ?</li>
+				<li page="0041-0041">ರೊಟ್ಟಿಯ ರಾಗ</li>
+				<li page="0042-0042">ಶ್ರೀಕೃಷ್ಣನಿಗೆ</li>
+				<li page="0043-0043">ನುಸಿಗೆ</li>
+				<li page="0044-0044">ನಾ ಕವಿಂ ಮಾನವಂ ಮನ್ಯೇ</li>
+				<li page="0045-0046">ಹೊಸ ಕವಿತೆಯನ್ನು ತೆಗಳುವವರಿಗೆ</li>
+				<li page="0047-0048">ಆರೆಂಬರೀ ಜಗವು ದುಗುಡದರಮನೆಯೆಂದು?</li>
+				<li page="0049-0050">ಗುಲಾಬಿ ಹೂವಿಗೆ</li>
+				<li page="0051-0052">ಯುದ್ಧ</li>
+				<li page="0053-0053">ನನ್ನ ಗೋರಿಯ ಮೇಲೆ</li>
+				<li page="0054-0054">ಇದು ಏಕೆ ಹೀಗಾಯ್ತು</li>
+				<li page="0055-0057">ಆಕಾಂಕ್ಷೆಯೊಂದಿಹುದು</li>
+				<li page="0058-0059">ನನ್ನ ಕಾವ್ಯ</li>
+				<li page="0060-0063">ಮಗುವಿಗೆ</li>
+				<li page="0064-0064">ಬಾರೆಂದು ಕರೆದಾಗ</li>
+				<li page="0065-0065">ಒಂದು ಕಾಗದ</li>
+				<li page="0066-0066">ಬಯಕೆಯ ಬೆನ್ನುಹತ್ತಿ</li>
+				<li page="0067-0067">ಅಮರ ಮಹಾತ್ಮ</li>
+				<li page="0068-0068">ಸತ್ಯ ದರ್ಶನ</li>
+				<li page="0069-0071">ಗಾತ್ರ - ಚಿತ್ರ</li>
+				<li page="0072-0079">ಉದ್ದೇಶ</li>
+				<li page="0080-0082">ಕವಿ-ವಿಜ್ಞಾನಿಗೆ</li>
+				<li page="0083-0084">ಸುಗ್ಗಿಯ ಹಾಡು</li>
+				<li page="0085-0087">ನವ-ನೀರದ</li>
+			</ol>
+		</li>
+		<li page="0088-0135">'ಕೆಲವು ಪದ್ಯಗಳು' ಸಂಗ್ರಹದಿಂದ
+			<ol>
+				<li page="0088-0088">ಎರಡು ಮಾತು</li>
+				<li page="0089-0089">ನಲುವತ್ತರ ನೆರೆಯಲ್ಲಿ</li>
+				<li page="0090-0091">ಉಪೋದ್-ಘಾತ (ವಿ. ಜಿ. ಭಟ್ಟರ ‘ಕಾವ್ಯವೇದನೆ’ಗೆ ಬರೆದದ್ದು)</li>
+				<li page="0092-0092">ಗೋಪಿ</li>
+				<li page="0093-0094">ಅಸಿಧಾರಾವ್ರತ</li>
+				<li page="0094-0094">ಮೋಸ</li>
+				<li page="0095-0095">ಅನಿಸುತಿದೆ</li>
+				<li page="0096-0098">ವಿಕಾರಿ</li>
+				<li page="0099-0099">ಬದಲಾವಣೆ</li>
+				<li page="0100-0102">ಆತ್ಮಬಾಂಬು</li>
+				<li page="0103-0104">ಹೌಸಿಂಗ್ ಕಾಲನಿ</li>
+				<li page="0104-0104">ಅರಳೀಮರ</li>
+				<li page="0105-0105">ನವ್ಯ</li>
+				<li page="0105-0105">ಕಲೆ</li>
+				<li page="0106-0107">ನೊಣ</li>
+				<li page="0108-0108">ಶಿಲ್ಪಪ್ರಿಯ</li>
+				<li page="0109-0109">ಸತ್ತವರು</li>
+				<li page="0110-0110">ದುರಂತಗಳು</li>
+				<li page="0110-0110">ಅಫಲಿತ</li>
+				<li page="0111-0111">ಕಾಲ</li>
+				<li page="0111-0111">ಗಾಂಧಿಗೆ</li>
+				<li page="0112-0112">ಎರಡು ದಾರಿ</li>
+				<li page="0113-0114">ಸಂಜೆ ಹೊತ್ತು</li>
+				<li page="0115-0116">ಕವಿ ಮತ್ತು ಕೋಗಿಲೆ</li>
+				<li page="0117-0117">ಬಲಿ</li>
+				<li page="0118-0118">ದತ್ತನ ನೆನಪು</li>
+				<li page="0119-0121">ಕೊಡೆ</li>
+				<li page="0122-0123">ದ್ವಾ ಸುಪರ್ಣಾ</li>
+				<li page="0124-0127">ಬಿನ್ನಹ</li>
+				<li page="0128-0129">ಗೀತಾಧ್ಯಾಯ ೧೯</li>
+				<li page="0130-0130">ಯಾಹ್ಯಾ ಖಾನ್ ಹೇಳದೇ ಇದ್ದದ್ದು</li>
+				<li page="0131-0131">ತುರ್ತಿನ ರಾಮಾಯಣ</li>
+				<li page="0132-0132">ಬದುಕಿದ ಬದುಕು</li>
+				<li page="0133-0135">ರಾಮದೇವರ ಸತ್ಯ</li>
+			</ol>
+		</li>
+		<li page="0136-0150">ಪೆಂಗೋಪದೇಶ</li>
+		<li page="0151-0157">ಅನುಬಂಧಗಳು
+			<ol>
+				<li page="0151-0152">गोपी - गीता</li>
+				<li page="0153-0157">ಅಭಿಮತ - ಡಾ. ಸಿದ್ಧಲಿಂಗ ಪಟ್ಟಣಶೆಟ್ಟಿ</li>
+			</ol>
+		</li>
+	</ol>
 </div>
