--- a/application/views/flat/3-Books/013.xhtml
+++ b/application/views/flat/3-Books/013.xhtml
@@ -1,47 +1,65 @@
 ﻿<div data-bcode="013">
 	<h1 class="title" data-language="kannada">ಹೊಸಗನ್ನಡದ ಹಿರಿಯರು</h1>
 	<ol>
-<li page="0001-0001">ಹೊಸಗನ್ನಡದ ಹಿರಿಯರು ಮತ್ತು ಕೃತಿ-ಚಿಂತನೆ </li>
-<li page="0001-0001">ಗೋವಿಂದ ಪೈಗಳೊಂದಿಗೆ </li>
-<li page="0001-0001">ಬೇಂದ್ರೆ ಅಂದ್ರೆ </li>
-<li page="0001-0001">ಪೊಳಲಿ ಶೀನಪ್ಪ ಹೆಗ್ಗಡೆ </li>
-<li page="0001-0001">ಶಿವರಾಮ ಕಾರಂತ 'ಪ್ರಪಂಚ' </li>
-<li page="0001-0001">ಕಾದಂಬರಿ ಯುಗಪ್ರವರ್ತಕ, ಅ.ನ.ಕೃ. </li>
-<li page="0001-0001">ಸಾರಸ್ವತಲೋಕದ ಸಲಗ - ಶಂ. ಬಾ. </li>
-<li page="0001-0001">ಸಮನ್ವಯದ ಉಪಾಸಕ ಗೋಕಾಕರು </li>
-<li page="0001-0001">ಅಡಿಗರ ಮಾನವ ಕಾಳಜಿ</li>
-<li page="0001-0001">ಬಿ. ಎಚ್. ಶ್ರೀಧರರು</li>
-<li page="0001-0001">ನಾ ಕಂಡ ಮೊಹರೆಯವರು</li>
-<li page="0001-0001">ಗುರುವರ್ಯ ಹ. ರಾ. ಪುರೋಹಿತರು </li>
-<li page="0001-0001">ಬುರ್ಲಿ ಬಿಂದುಮಾಧವರು </li>
-<li page="0001-0001">ಕನಸುಗಾರ ಜಿ ಬಿ ಜೋಶಿ  </li>
-<li page="0001-0001">ಮಿತ್ರ ದ ಬಾ ಕುಲಕರ್ಣಿ  </li>
-<li page="0001-0001">ಕ. ದಾಸಭಟ್ಟರು </li>
-<li page="0001-0001">ಹುಕ್ಕೇರಿ ಬಾಳಪ್ಪನವರು </li>
-<li page="0001-0001">ಹೆಮಂತಗಾನದ ಬಲ್ಲಾಳರು </li>
-<li page="0001-0001">ಕನ್ನಡ ಪತ್ರಿಕೋದ್ಯೋಗ </li>
-<li page="0001-0001">ಪತ್ರಿಕೋದ್ಯಮಿ 'ಪಾ.ವೆಂ.' ವಿಚಾರಧಾರೆ</li>
-<li page="0001-0001">ಒಂದಿಷ್ಟು ಪ್ರಾಚೀನ ಪ್ರಮೇಯಗಳು </li>
-<li page="0001-0001">ಹಳಗನ್ನಡ ಸಾಹಿತ್ಯ</li>
-<li page="0001-0001">ಗಂಗಾಧರಂ ಶಾಸನ </li>
-<li page="0001-0001">ಕವಿಸಮಯ ವಿಲಾಸಂ </li>
-<li page="0001-0001">ನೇಮಿಚಂದ್ರನ ಒಂದು ಪದ್ಯ </li>
-<li page="0001-0001">ಒಂದು ಅಪೂರ್ವ ಷಟ್ಟದಿ </li>
-<li page="0001-0001">ಕುಮಾರವ್ಯಾಸ - ಕೆಲ ಬಿಡಿ ಆಲೋಚನೆಗಳು </li>
-<li page="0001-0001">ಲಕ್ಷ್ಮೀಶನ ಸ್ಥಳ ಸಮಸ್ಯೆ</li>
-<li page="0001-0001">ಸಂಸ್ಕೃತ ಸಾಹಿತ್ಯ </li>
-<li page="0001-0001">ಸಂಸ್ಕೃತ ಮುಕ್ತಕ </li>
-<li page="0001-0001">ಅಮರುಕನ ಶೃಂಗಾರ ಸೌರಭ </li>
-<li page="0001-0001">ಸಂಸ್ಕೃತದಲ್ಲಿ ಪ್ರಣಯ ವ್ಯಾಪಾರ </li>
-<li page="0001-0001">ವೆಂಕಟಾಧ್ವರಿ ಕಂಡ ದಕ್ಷಿಣ ಭಾರತ </li>
-<li page="0001-0001">ಈ ನ್ಯಾಯಗಳೇ ಬೇರೆ</li>
-<li page="0001-0001">ಭಾಷಾ ವಿಚಾರ</li>
-<li page="0001-0001">ಭಾಷೆಗಳ ವಿಲಕ್ಷಣ ಗತಿ </li>
-<li page="0001-0001">ಭಾಷೆ ಮತ್ತು ಅವಯವಗಳು </li>
-<li page="0001-0001">'ಕ್ಷ' ಮತ್ತು 'ಜ್ಞ'</li>
-<li page="0001-0001">'ಭಗ'-ವತ್ </li>
-<li page="0001-0001">ಸ್ಮಿತ ಪೂರ್ವಾಭಿಭಾಷಿ ಚ </li>
-<li page="0001-0001">'ರಾಮ' ಶಬ್ಬದ ಬಗ್ಗೆ ವಿಚಾರಲಹರಿ </li>
-<li page="0001-0001">ಸಂಸ್ಕೃತಿ, ಸಂಸ್ಕಾರ, ಸಂಸ್ಕೃತ</li>
-</ol>
+		<li page="0000e-0000e">ಅಧ್ಯಕ್ಷರ ನುಡಿ</li>
+		<li page="0000f-0000h">ಮುನ್ನುಡಿ</li>
+		<li page="0000i-0000k">ಕೃತಿ ಪರಿಚಯಾತ್ಮಕ</li>
+		<li page="0001-0122">ಹೊಸಗನ್ನಡದ ಹಿರಿಯರು ಮತ್ತು ಕೃತಿ-ಚಿಂತನೆ
+			<ol>
+				<li page="0001-0006">೧. ಗೋವಿಂದ ಪೈಗಳೊಂದಿಗೆ</li>
+				<li page="0007-0010">೨. ಬೇಂದ್ರೆ ಅಂದ್ರೆ (ಲಾಂಗೂಲಾಚಾರ್ಯರಾಗಿ ಹರಟೆಯ ರೂಪದಲ್ಲಿ ಬರೆದದ್ದು)</li>
+				<li page="0011-0017">೩. ಪೊಳಲಿ ಶೀನಪ್ಪ ಹೆಗ್ಗಡೆ</li>
+				<li page="0018-0022">೪. ಶಿವರಾಮ ಕಾರಂತ 'ಪ್ರಪಂಚ'</li>
+				<li page="0023-0025">೫. ಕಾದಂಬರಿ ಯುಗಪ್ರವರ್ತಕ - ಅ.ನ.ಕೃ.</li>
+				<li page="0026-0044">೬. ಸಾರಸ್ವತ ಲೋಕದ ಸಲಗ - ಶಂ. ಬಾ.</li>
+				<li page="0045-0049">೭. ಸಮನ್ವಯದ ಉಪಾಸಕ ಗೋಕಾಕರು</li>
+				<li page="0050-0056">೮. ಅಡಿಗರ ಮಾನವ ಕಾಳಜಿ</li>
+				<li page="0057-0060">೯. ಬಿ. ಎಚ್. ಶ್ರೀಧರರು</li>
+				<li page="0061-0061">೧೦. ನಾ ಕಂಡ ಮೊಹರೆಯವರು</li>
+				<li page="0062-0069">೧೧. ಗುರುವರ್ಯ ಹ. ರಾ. ಪುರೋಹಿತರು</li>
+				<li page="0070-0072">೧೨. ಬುರ್ಲಿ ಬಿಂದುಮಾಧವರು</li>
+				<li page="0073-0078">೧೩. ಕನಸುಗಾರ ಜಿ. ಬಿ. ಜೋಶಿ</li>
+				<li page="0079-0087">೧೪. ಮಿತ್ರ ದ. ಬಾ. ಕುಲಕರ್ಣಿ</li>
+				<li page="0088-0089">೧೫. ಕು. ಶಿ. ಹರಿದಾಸಭಟ್ಟ</li>
+				<li page="0090-0091">೧೬. ಹುಕ್ಕೇರಿ ಬಾಳಪ್ಪನವರು</li>
+				<li page="0092-0094">೧೭. ಬಲ್ಲಾಳರ ‘ಹೇಮಂತಗಾನ’</li>
+				<li page="0095-0100">ಕನ್ನಡ ಪತ್ರಿಕೋದ್ಯೋಗ (ಮುಂದೆ ಬರುವ ಪಾ. ವೆಂ. ಪತ್ರಿಕಾ ಸಂದರ್ಶನಕ್ಕೆ ಹಿನ್ನೆಲೆಯಾಗಿ)</li>
+				<li page="0101-0122">ಹೊಸಗನ್ನಡದಲ್ಲಿ ತಾವೂ ಒಬ್ಬ ಹಿರಿಯರಾದ ಪಾ. ವೆಂ. ಆಚಾರ್ಯರ ವಿಚಾರಧಾರೆ (ಸಂದರ್ಶನಗಳ ಮೂಲಕ)</li>
+			</ol>
+		</li>
+		<li page="0123-0212">(ಆ) ಒಂದಿಷ್ಟು ಪ್ರಾಚೀನ ಪ್ರಮೇಯಗಳು
+			<ol>
+				<li page="0125-0155">ಹಳಗನ್ನಡ ಸಾಹಿತ್ಯ
+					<ol>
+						<li page="0125-0126">1. ಗಂಗಾಧರಂ ಶಾಸನ - ಒಂದು ಟಿಪ್ಪಣಿ</li>
+						<li page="0127-0134">2. ಕವಿಸಮಯ ವಿಲಾಸಂ</li>
+						<li page="0135-0136">3. ನೇಮಿಚಂದ್ರನ ಒಂದು ಪದ್ಯ</li>
+						<li page="0137-0138">4. ಒಂದು ಅಪೂರ್ವ ಷಟ್ಟದಿ</li>
+						<li page="0139-0153">5. ಕುಮಾರವ್ಯಾಸ - ಕೆಲ ಬಿಡಿ ಆಲೋಚನೆಗಳು</li>
+						<li page="0154-0155">6. ಲಕ್ಷ್ಮೀಶನ ಸ್ಥಳ ಸಮಸ್ಯೆ</li>
+					</ol>
+				</li>
+				<li page="0156-0188">ಸಂಸ್ಕೃತ ಸಾಹಿತ್ಯ
+					<ol>
+						<li page="0156-0166">7. ಸಂಸ್ಕೃತ ಮುಕ್ತಕ</li>
+						<li page="0167-0171">8. ಅಮರುಕನ ಶೃಂಗಾರ ಸೌರಭ</li>
+						<li page="0172-0179">9. ಸಂಸ್ಕೃತದಲ್ಲಿ ಪ್ರಣಯ ವ್ಯಾಪಾರ</li>
+						<li page="0180-0185">10. ವೆಂಕಟಾಧ್ವರಿ ಕಂಡ ದಕ್ಷಿಣ ಭಾರತ</li>
+						<li page="0186-0188">11. ಈ ನ್ಯಾಯಗಳೇ ಬೇರೆ!</li>
+					</ol>
+				</li>
+				<li page="0189-0212">ಭಾಷಾ ವಿಚಾರ
+					<ol>
+						<li page="0189-0193">12. ಭಾಷೆಗಳ ವಿಲಕ್ಷಣ ಗತಿ</li>
+						<li page="0194-0198">13. ಭಾಷೆ ಮತ್ತು ‘ಅವಯವ’ಗಳು</li>
+						<li page="0199-0200">14. 'ಕ್ಷ' ಮತ್ತು 'ಜ್ಞ'</li>
+						<li page="0201-0203">15. 'ಭಗ'-ವತ್</li>
+						<li page="0204-0205">16. ಸ್ಮಿತ ಪೂರ್ವಾಭಿಭಾಷೀ ಚ</li>
+						<li page="0206-0208">17. “ರಾಮ” ಶಬ್ಬದ ಬಗ್ಗೆ ವಿಚಾರಲಹರಿ</li>
+						<li page="0209-0212">18. ಸಂಸ್ಕೃತಿ, ಸಂಸ್ಕಾರ, ಸಂಸ್ಕೃತ</li>
+					</ol>
+				</li>
+			</ol>
+		</li>
+	</ol>
 </div>
