--- a/application/views/flat/3-Books/014.xhtml
+++ b/application/views/flat/3-Books/014.xhtml
@@ -1,73 +1,72 @@
 ﻿<div data-bcode="014">
-	<h1 class="title" data-language="kannada">ಚಿತ್ರ ವಿಚಿತ್ರ ಈ ಜಗತ್ತು!</h1>
+	<h1 class="title" data-language="kannada">ಚಿತ್ರ - ವಿಚಿತ್ರ ಈ ಜಗತ್ತು!</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ಪ್ರಾಸ್ತಾವಿಕ </li>
-<li page="0001-0001">ಪಾ.ವೆಂ. ಆಚಾರ್ಯ: ಪರಿಚಯ </li>
-<li page="0001-0001">ಅಂಟಾರ್ಕ್ಟಿಕಾ ವಿರುದ್ದ ಮೂವರು </li>
-<li page="0001-0001">ಅಂತಃಪುರದ ಅಂತರಂಗದಲ್ಲಿ </li>
-<li page="0001-0001">ಅಟ್ಲಾಂಟಿಸ್: ಮುಳುಗಿ ಹೋದ ಸಾಮ್ರಾಜ್ಯ </li>
-<li page="0001-0001">ಅವರು ಫೋಟೋ ತೆಗೆದುಕೊಳ್ಳಲು ಜೀವ ತೆತ್ತಾರು </li>
-<li page="0001-0001">ಅವಳಿನ್ನು ವಯಸ್ಸು ಕದಿಯುವಂತಿಲ್ಲ </li>
-<li page="0001-0001">ಅವಳು ಪ್ರೇಮಿಕನನ್ನು ಕೊಂದಳೆ?</li>
-<li page="0001-0001">ಆಗಲಿಲ್ಲ ಬಾವಲಿ ಯುದ್ಧ </li>
-<li page="0001-0001">ಆತ ನಿಜವಾಗಿ ಮಗುವನ್ನು ಕೊಂದನೆ? </li>
-<li page="0001-0001">ಆತ್ಮರಕ್ಷಣೆಗಾಗಿ ಜೂಡೋ   </li>
-<li page="0001-0001">ಇದಕ್ಕೆನ್ನಬೇಕು ಎಕ್ಸ್‌ಪ್ರೆಸ್ ಗಾಡಿ </li>
-<li page="0001-0001">ಇದು ಕ್ರಿಸ್ತನ ಪವಿತ್ರ ಶವವೆ? </li>
-<li page="0001-0001">ಇವರಿಗೆ ಗುಪ್ತಗಾಮಿನಿಯ ಮೋಹ </li>
-<li page="0001-0001">ಎರಡು ತಲೆಯ ನಾಯಿಗಳು </li>
-<li page="0001-0001">ಕಳೆದ ಬಾಂಬಿನ ಕೋಲಾಹಲ </li>
-<li page="0001-0001">ಅವರು ಕಾಲ ಪ್ರವಾಹದಲ್ಲಿ ೧೧೨ ವರ್ಷ ಹಿಂದೆ ಜಾರಿದರು </li>
-<li page="0001-0001">ಕಾಲೇಜಿಗೆ ಹೆಣಗಳು ಬೇಕೆ? </li>
-<li page="0001-0001">ಕು ಕ್ಲಕ್ಸ್ ಕ್ಲಾನ್ (K K K) </li>
-<li page="0001-0001">ಕೇಳಿದ್ದೀರಾ ವಾರಕ್ಕೆ ನಾಲ್ವೇ ದಿನ ಕೆಲಸ </li>
-<li page="0001-0001">ಗಲ್ಲಿಗೇರಿ ಬದುಕಿದ </li>
-<li page="0001-0001">ಗಿನ್ನೆಸ್ ಪುಸ್ತಕ </li>
-<li page="0001-0001">ಗುಬ್ಬಿಯ ಮೇಲೆ ಬ್ರಹ್ಮಾಸ್ತ್ರ </li>
-<li page="0001-0001">ಗ್ರೀನ್‌ವಿಚ್ ವೇಳೆ ಹೇಳುತ್ತದೆ </li>
-<li page="0001-0001">ಚರ್ಮದಿಂದ ನೋಡಬಹುದೆ? </li>
-<li page="0001-0001">ಜೋನ್ ಮರಿಯಮ್‌ಳ ಮಹಾಯಾತ್ರೆ </li>
-<li page="0001-0001">ಟೂರ್-ಡಿ-ಫ್ರಾನ್ಸ್ </li>
-<li page="0001-0001">ಟ್ರಸ್ಟನ್ ಡ ಕುನ್ಹಾದ ವಿಚಿತ್ರ ಕಥೆ </li>
-<li page="0001-0001">ಟೈಟಾನಿಕ್ ದುರಂತ </li>
-<li page="0001-0001">ತಾರೀಖುಗಳ ತಾರುಮಾರು </li>
-<li page="0001-0001">ದುಂದುಗಾರ ರಾಜ </li>
-<li page="0001-0001">ನೆಸ್ ಸರೋವರದ ದೈತ್ಯ </li>
-<li page="0001-0001">ಪತ್ತೇದಾರ ಸರದಾರನಾದ ಕಳ್ಳ</li>
-<li page="0001-0001">ಪೆಟ್ಟಿಗೆಯಲ್ಲಿ ೧೦,೦೦೦ ಮೈಲು ಸವಾರಿ </li>
-<li page="0001-0001">ಪೇಚಿನಲ್ಲಿ ಬಿದ್ದ ಸುಧಾರಕರು </li>
-<li page="0001-0001">ಪ್ರಚಂಡ ಗಣಿತ ಪರಾಕ್ರಮಿಗಳು </li>
-<li page="0001-0001">ಪ್ರಪಂಚದ ಆದಿಮ ಚಿತ್ರಕಾರರು </li>
-<li page="0001-0001">ಪ್ರಬುದ್ದನೆನಿಸಬೇಕಾದರೆ ಸಾವಿನೊಡನೆ ಸೆಣಸಬೇಕು </li>
-<li page="0001-0001">ಬಲೂನು ಪ್ರಯಾಣದ ರಮ್ಯ ಕಥೆ </li>
-<li page="0001-0001">ಬಾಲಿ ದ್ವೀಪದ ಮಹಾ ನೃತ್ಯ </li>
-<li page="0001-0001">ಬಿರ್ಲಾ ತಾರಾಮಂಡಲಕ್ಕೆ ಬನ್ನಿ </li>
-<li page="0001-0001">ಬೀಟಲ್ಸ್ ನಿಮಗೆ ಗೊತ್ತ? </li>
-<li page="0001-0001">ಭೂ ಪ್ರದಕ್ಷಿಣೆ ಮಾಡಿದ ಜೇಮ್ಸ್ ಕುಕ್ </li>
-<li page="0001-0001">ಮತ್ಯ ಯುದ್ದದ ಮೋಜು </li>
-<li page="0001-0001">ಮುದಿ ರಾಣಿಯ ತರುಣ ಪ್ರಿಯಕರ </li>
-<li page="0001-0001">ಮುದಕ ಮತ್ತು ಸಾಗರ </li>
-<li page="0001-0001">ರಾಜಕುಮಾರಿಯ ಭಗ್ನ ಪ್ರಣಯ </li>
-<li page="0001-0001">ರಾಜತೂತರಿದ್ದಾರೆ ಎಚ್ಚರಿಕೆ </li>
-<li page="0001-0001">ರಾಣಿ ಕೆರೋಲಿನ್ನಳ ವಿಚಾರಣೆ </li>
-<li page="0001-0001">ಲಾಟರಿ ಇಂದು ನಿನ್ನೆಯದಲ್ಲ </li>
-<li page="0001-0001">ವಂಚಕ ಶಿಖಾಮಣಿ ಕ್ರೂಗರ್ </li>
-<li page="0001-0001">ವಿಮಾನದಿಂದ ಜಿಗಿದ ಮಹಿಳೆ </li>
-<li page="0001-0001">ಶ್ರದ್ದೆಯಿಂದ ರೋಗ ವಾಸಿಯಾಗುತ್ತದೆ </li>
-<li page="0001-0001">ಸಂಮೋಹಿನಿಯಿಂದ ಕೊಲೆ ಮಾಡಿಸಬಹುದೆ? </li>
-<li page="0001-0001">ಸತ್ತರೂ ಅವಳ ಶವಕ್ಕೆ ಸಾವಿಲ್ಲ </li>
-<li page="0001-0001">ಸತ್ತವರ ದಿಬ್ಬ ಮೊಹೆಂಜದಾರೋ </li>
-<li page="0001-0001">ಸಾಗರ ಬಯಲಲ್ಲಿ ಏಳು ದಿನ </li>
-<li page="0001-0001">ಸುಳ್ಳು ನೋಟುಗಳ ಕಾಟ </li>
-<li page="0001-0001">ಸೆರೆಮನೆಗಳಿಗೆ ಇಲ್ಲಿ ದ್ವಾರಗಳೇ ಇಲ್ಲ </li>
-<li page="0001-0001">ಸೈಪ್ರಸ್ಸಿನಲ್ಲಿ ಮುದುವೆ </li>
-<li page="0001-0001">ಸೌದಿ ಅರಸರ ಅದ್ಭುತ ಕೊಡುಗೈ </li>
-<li page="0001-0001">ಹತ್ತು ವರ್ಷಗಳ ಹೆರಿಗೆ ಸ್ಪರ್ಧೆ </li>
-<li page="0001-0001">ಹಿಮದೊಡನೆ ಒಕ್ಕೈ ಹೋರಾಟ </li>
-<li page="0001-0001">ಹಿಮ ಶಿಖರ ಜರಿಯಿತು </li>
-<li page="0001-0001">ಹೆಗ್ಗಳಿಕೆಗಾಗಿ ಮಾಡಿದ ಕೊಲೆ </li>
-<li page="0001-0001">ಹೌದಿನಿಯ ಅಪ್ರತಿಮ ಜಾದು</li>
-<li page="0001-0001">ಸಂದರ್ಭ ಸೂಚಿ</li>
-</ol>
+		<li page="0000g-0000h">ಪ್ರಸ್ತಾವನೆ</li>
+		<li page="0000i-0000o">ಪಾ. ವೆಂ. ಆಚಾರ್ಯ: ಪರಿಚಯ</li>
+		<li page="0001-0005">೧. ಅಂಟಾರ್ಕ್ಟಿಕಾ ವಿರುದ್ಧ ಈ ಮೂವರು</li>
+		<li page="0006-0011">೨. ಅಂತಃಪುರದ ಅಂತರಂಗದಲ್ಲಿ</li>
+		<li page="0012-0015">೩. ಅಟ್ಲಾಂಟಿಸ್ - ಮುಳುಗಿ ಹೋದ ಸಾಮ್ರಾಜ್ಯ (ಅಟ್ಲಾಂಟಿಕ್ ಸಾಗರದಲ್ಲೊಂದು ಭೂಖಂಡ ಇತ್ತೆ?)</li>
+		<li page="0016-0019">೪. ಅವರು ಫೋಟೋ ತೆಗೆದುಕೊಳ್ಳಲು ಜೀವ ತೆತ್ತಾರು!</li>
+		<li page="0020-0022">೫. ಅವಳಿನ್ನು ವಯಸ್ಸು ಕದಿಯುವಂತಿಲ್ಲ</li>
+		<li page="0023-0028">೬. ಅವಳು ಪ್ರೇಮಿಕನನ್ನು ಕೊಂದಳೇ?</li>
+		<li page="0029-0033">೭. ಆಗಲಿಲ್ಲ ಬಾವಲಿ ಯುದ್ಧ</li>
+		<li page="0034-0041">೮. ಆತ ನಿಜವಾಗಿ ಮಗುವನ್ನು ಕೊಂದನೆ?</li>
+		<li page="0042-0045">೯. ಆತ್ಮ ರಕ್ಷಣೆಗಾಗಿ ಜುಡೋ</li>
+		<li page="0046-0049">೧೦. ಇದಕ್ಕೆನ್ನಬೇಕು ಎಕ್ಸ್‌ಪ್ರೆಸ್ ಗಾಡಿ</li>
+		<li page="0050-0055">೧೧. ಇದು ಕ್ರಿಸ್ತನ ಶವ ವಸ್ತ್ರವೇ?</li>
+		<li page="0056-0060">೧೨. ಇವರಿಗೆ ಗುಪ್ತಗಾಮಿನಿಯ ಮೋಹ</li>
+		<li page="0061-0063">೧೩. ಎರಡು ತಲೆಯ ನಾಯಿಗಳು</li>
+		<li page="0064-0068">೧೪. ಕಳೆದ ಬಾಂಬಿನ ಕೋಲಾಹಲ</li>
+		<li page="0069-0072">೧೫. ಕಾಲಪ್ರವಾಹದಲ್ಲಿ ೧೧೨ ವರ್ಷ ಹಿಂದೆ ಜಾರಿದರು</li>
+		<li page="0073-0077">೧೬. ಕಾಲೇಜಿಗೆ ಹೆಣಗಳು ಬೇಕೆ?</li>
+		<li page="0078-0084">೧೭. K K K<br /> ಕು ಕ್ಲಕ್ಸ್ ಕ್ಲಾನ್</li>
+		<li page="0085-0089">೧೮. ಕೇಳಿದ್ದೀರಾ ವಾರಕ್ಕೆ ನಾಲ್ಕೇ ದಿನ ಕೆಲಸ!</li>
+		<li page="0090-0092">೧೯. ಗಲ್ಲಿಗೇರಿಯೂ ಬದುಕಿದ!</li>
+		<li page="0093-0096">೨೦. ಗಿನ್ನೆಸ್ ಪುಸ್ತಕ</li>
+		<li page="0097-0099">೨೧. ಗುಬ್ಬಿಯ ಮೇಲೆ ಬ್ರಹ್ಮಾಸ್ತ್ರ</li>
+		<li page="0100-0104">೨೨. ಗ್ರೀನ್‌ವಿಚ್ ವೇಳೆ ಹೇಳುತ್ತದೆ</li>
+		<li page="0105-0107">೨೩. ಚರ್ಮದಿಂದ ನೋಡಬಹುದೆ?</li>
+		<li page="0108-0113">೨೪. ಜೋನ್ ಮರಿಯಮ್‌ಳ ಮಹಾ ಯಾತ್ರೆ</li>
+		<li page="0114-0117">೨೫. ಟೂರ್ - ಡಿ - ಫ್ರಾನ್ಸ್</li>
+		<li page="0118-0123">೨೬. ಟ್ರಿಸ್ಟನ್ ಡ ಕುನ್ಹಾದ ವಿಚಿತ್ರ ಕಥೆ</li>
+		<li page="0124-0130">೨೭. ಟೈಟಾನಿಕ್ ದುರಂತ</li>
+		<li page="0131-0133">೨೮. ತಾರೀಖುಗಳ ತಾರುಮಾರು!</li>
+		<li page="0134-0137">೨೯. ದುಂದುಗಾರರ ರಾಜ!</li>
+		<li page="0138-0141">೩೦. ನೆಸ್ ಸರೋವರದ ದೈತ್ಯ</li>
+		<li page="0142-0146">೩೧. ಪತ್ತೇದಾರ ಸರದಾರನಾದ ಕಳ್ಳ</li>
+		<li page="0147-0150">೩೨. ಪೆಟ್ಟಿಗೆಯಲ್ಲಿ ೧೦,೦೦೦ ಮೈಲು ಸವಾರಿ</li>
+		<li page="0151-0154">೩೩. ಪೇಚಿನಲ್ಲಿ ಬಿದ್ದ ಸುಧಾರಕರು!</li>
+		<li page="0155-0158">೩೪. ಪ್ರಚಂಡ ಗಣಿತ ಪರಾಕ್ರಮಿಗಳು</li>
+		<li page="0159-0161">೩೫. ಪ್ರಪಂಚದ ಆದಿಮ ಚಿತ್ರಕಾರರು</li>
+		<li page="0162-0164">೩೬. ಪ್ರಬುದ್ಧನೆನಿಸಬೇಕಾದರೆ ಸಾವಿನೊಡನೆ ಸೆಣೆಸಬೇಕು</li>
+		<li page="0165-0167">೩೭. ಬಲೂನು ಪ್ರಯಾಣದ ರಮ್ಯ ಕಥೆ</li>
+		<li page="0168-0171">೩೮. ಬಾಲಿ ದ್ವೀಪದ ಮಹಾ ನೃತ್ಯ ಬಲಿ</li>
+		<li page="0172-0175">೩೯. ಬಿರ್ಲಾ ತಾರಾಮಂಡಲಕ್ಕೆ ಬನ್ನಿ</li>
+		<li page="0176-0180">೪೦. ಬೀಟಲ್ಸ್ ನಿಮಗೆ ಗೊತ್ತೆ?</li>
+		<li page="0181-0187">೪೧. ಭೂ ಪ್ರದಕ್ಷಿಣೆ ಮಾಡಿದ ಜೇಮ್ಸ್  ಕುಕ್</li>
+		<li page="0188-0189">೪೨. ಮತ್ಸ್ಯ ಯುದ್ಧದ ಮೋಜು</li>
+		<li page="0190-0194">೪೩. ಮುದಿ ರಾಣಿಯ ತರುಣ ಪ್ರಿಯಕರ</li>
+		<li page="0195-0200">೪೪. ಮುದುಕ ಮತ್ತು ಸಾಗರ</li>
+		<li page="0201-0206">೪೫. ರಾಜಕುಮಾರಿಯ ಭಗ್ನ ಪ್ರಣಯ</li>
+		<li page="0207-0210">೪೬. ರಾಜದೂತರಿದ್ದಾರೆ ಎಚ್ಚರಿಕೆ!</li>
+		<li page="0211-0216">೪೭. ರಾಣಿ ಕೆರೋಲಿನ್ನಳ ವಿಚಾರಣೆ</li>
+		<li page="0217-0221">೪೮. ಲಾಟರಿ ಇಂದು ನಿನ್ನೆಯದಲ್ಲ</li>
+		<li page="0222-0226">೪೯. ವಂಚಕ ಶಿಖಾಮಣಿ ಕ್ರೂಗರ್</li>
+		<li page="0227-0229">೫೦. ವಿಮಾನದಿಂದ ಜಿಗಿದ ಮಹಿಳೆ</li>
+		<li page="0230-0236">೫೧. ಶ್ರದ್ಧೆಯಿಂದ ರೋಗ ವಾಸಿಯಾಗುತ್ತದೆಯೆ?</li>
+		<li page="0237-0240">೫೨. ಸಂಮೋಹಿನಿಯಿಂದ ಕೊಲೆ ಮಾಡಿಸಬಹುದೆ?</li>
+		<li page="0241-0245">೫೩. ಸತ್ತರೂ ಅವಳ ಶವಕ್ಕೆ ಸಾವಿಲ್ಲ</li>
+		<li page="0246-0253">೫೪. ಸತ್ತವರ ದಿಬ್ಬ: ಮೊಹೆಂಜದಾರೋ</li>
+		<li page="0254-0260">೫೫. ಸಾಗರದ ಬಯಲಲ್ಲಿ ಏಳು ದಿನ</li>
+		<li page="0261-0265">೫೬. ಸುಳ್ಳು ನೋಟುಗಳ ಕಾಟ</li>
+		<li page="0265-0267">೫೭. ಇಲ್ಲಿನ ಸೆರೆಮನೆಗಳಿಗೆ ದ್ವಾರಗಳೇ ಇಲ್ಲ!</li>
+		<li page="0268-0270">೫೮. ಸೈಪ್ರಸ್ಸಿನಲ್ಲಿ ಮದುವೆ</li>
+		<li page="0271-0274">೫೯. ಸೌದಿ ಅರಸರ ಅದ್ಭುತ ಕೊಡುಗೈ</li>
+		<li page="0275-0278">೬೦. ಹತ್ತು ವರ್ಷಗಳ ಹೆರಿಗೆ ಸ್ಪರ್ಧೆ</li>
+		<li page="0279-0284">೬೧. ಹಿಮದೊಡನೆ ಒಕ್ಕೈ ಹೋರಾಟ</li>
+		<li page="0285-0288">೬೨. ಹಿಮಶಿಖರ ಜರಿಯಿತು!</li>
+		<li page="0289-0294">೬೩. ಹೆಗ್ಗಳಿಕೆಗಾಗಿ ಕೊಲೆ ಮಾಡಿದ</li>
+		<li page="0295-0299">೬೪. ಹೌದಿನಿಯ ಅಪ್ರತಿಮ ಜಾದೂ</li>
+		<li page="0301-0303">ಸಂದರ್ಭ ಸೂಚಿ/ಲೇಖನದ ಸಂಖ್ಯೆ</li>
+	</ol>
 </div>
