--- a/application/views/flat/3-Books/015.xhtml
+++ b/application/views/flat/3-Books/015.xhtml
@@ -1,62 +1,65 @@
 ﻿<div data-bcode="015">
-	<h1 class="title" data-language="kannada">ಇವರೇ ಲಾಂಗೂಲಾಚಾರ್ಯರು !</h1>
+	<h1 class="title" data-language="kannada">ಇವರೇ ಲಾಂಗೂಲಾಚಾರ್ಯರು!</h1>
 	<ol>
-<li page="0001-0001">ಕಳಾಪೂರ್ಣ ಆಯುಷ್ಕರ್ಮಶಾಲಾ</li>
-<li page="0001-0001">ಕಳ್ಳನ ಹೆಜ್ಜೆ ಮತ್ತು ಈಶಸಂಕಲ್ಪ</li>
-<li page="0001-0001">ಕಳೆದುಹೋದ ಪ್ರವಾಸಾನಂದ </li>
-<li page="0001-0001">ಕಿಂ ಕರ್ತವ್ಯ......?</li>
-<li page="0001-0001">ಕುರಿನಾಡಿನಲ್ಲಿ ಕಲಿಗಾಲ </li>
-<li page="0001-0001">ಕೂಷ್ಮಾಂಡ ವಿಜಯಂ</li>
-<li page="0001-0001">ಕೊಡೆಯಂಬರ್ ಆತಪತ್ರವನ್ </li>
-<li page="0001-0001">ಕ್ಯೂ ಗಾಂಧಿ ಮತ್ತು ನಾನು ! </li>
-<li page="0001-0001">ಕ್ಷೌರಚಿಂತನೆ </li>
-<li page="0001-0001">ಗಾರ್ದಭೋಪಾಖ್ಯಾನಂ </li>
-<li page="0001-0001">ಒಂದು ಗಣಿತ ಸಮಸ್ಯೆ </li>
-<li page="0001-0001">ಒಂದು ಕಪ್ ಚಹಾ </li>
-<li page="0001-0001">ಎಷ್ಟು ಕರ್ನಾಟಕ ? </li>
-<li page="0001-0001">ಉಪಕಾರ ಮಾಡಿ ನೋಡಿ ! </li>
-<li page="0001-0001">ಈರುಳ್ಳಿ ಮಹಿಮೆ </li>
-<li page="0001-0001">ಇರಬೇಕು ನಿಂದಕರು </li>
-<li page="0001-0001">ಇಡಲಿ ಶಾಸ್ತ್ರ </li>
-<li page="0001-0001">'ಇಜಂ' ವಿರೋಧಿ 'ಜಂ' </li>
-<li page="0001-0001">ಅಭಿಮಾನ ಕಾಡಿತ್ತು ನೋಡಾ ! </li>
-<li page="0001-0001">ಅತ್ಯಂತ ಶಾಸ್ತ್ರಿಗಳು </li>
-<li page="0001-0001">ಗೊಣಗಿ ಗೊಣಗಿ ಕ್ರಾಂತಿ ತಪ್ಪಿಸಿರಿ </li>
-<li page="0001-0001">ಗೋಹತ್ಯೆ ಮಾಡಿರಿ </li>
-<li page="0001-0001">ಜೀವನ ವ್ಯಾಪಾರ </li>
-<li page="0001-0001">ಟಪಾಲು ಸಂಪು ಮತ್ತು ಆಚಾರ್ಯರರು </li>
-<li page="0001-0001">"ನಡೆಯುತ್ತದೆ !"  </li>
-<li page="0001-0001">ನನ್ನ ಮಿತ್ರ ತಾಮಸಾನಂದರು </li>
-<li page="0001-0001">ನಾಮಾಂತಕರಣ </li>
-<li page="0001-0001">ನಾರದ ವಿಜಯ</li>
-<li page="0001-0001">ನಿಮಗೆ ಬೋರಾಗುತ್ತಾ? </li>
-<li page="0001-0001">ನಿಮ್ಮ ಹೆಸರಿನ ಬಾಲ</li>
-<li page="0001-0001">ನಿಶ್ಯಬ್ದ ಸಂಘ </li>
-<li page="0001-0001">ನಿರುದ್ಯೋಗಿಗಳ ಪರಿಷತ್ತು </li>
-<li page="0001-0001">ನಿವೃತ್ತಾಧಿಕಾರಿಗಳ ವಾನಪ್ರಮಗೆ ಬೋರಾಗುತ್ತಾ? </li>
-<li page="0001-0001">ನಿಷ್ಕರ್ಮ ಸಿದ್ಧರ ಮಹತಿ </li>
-<li page="0001-0001">ನೀವು ಹೆಂಡತೀನ ಹೊಡೆಯೋದು ಬಿಟ್ಟಿದ್ದೀರಾ? </li>
-<li page="0001-0001">ಪತಿಪೂಜನ - ಲೇಟೆಸ್ಟ್ ಯಜ್ಞ </li>
-<li page="0001-0001">ಪರಮ ಪುರುಷ ಚಕ್ರ </li>
-<li page="0001-0001">ಪರೀಕ್ಷಾ ಪರೀಕ್ಷಣಮ್ </li>
-<li page="0001-0001">ಪಶ್ಚಾತ್ತಾಪದ ಮುದ್ದೆಗಳು </li>
-<li page="0001-0001">ಪಾಶಜಿಜ್ಞಾಸಾ </li>
-<li page="0001-0001">ಪಿಡುಗಿಗೆ ನಮಸ್ಕಾರ </li>
-<li page="0001-0001">ಪ್ರಮೀಳೆಯರ ಪೂರ್ಣ ಸ್ವರಾಜ್ಯ </li>
-<li page="0001-0001">ಪ್ರಾಮಾಣಿಕರಿಗೇಕೆ ಚುನಾವಣಿ ಭಾಷಣ? </li>
-<li page="0001-0001">ಬನ್ನಿ ರೆಕಾರ್ಡ್ ಒಡೆಯಿರಿ! </li>
-<li page="0001-0001">ಬುದ್ಧಿದಾನವೋ ಬಲಸಂವರ್ಧನೆಯೊ? </li>
-<li page="0001-0001">ಬ್ರಹ್ಮಚಾರಿಗಳ ಶಪಥ </li>
-<li page="0001-0001">ಭಪ್ಪರೆ ಮೆಣಸಿನಕಾಯಿ! </li>
-<li page="0001-0001">ಮದುವೆ ಮತ್ತು ಹುಚ್ಚು </li>
-<li page="0001-0001">ಮಾದರಿ ಮಡದಿ ಬೇಕೆ ? </li>
-<li page="0001-0001">ಶಂಕು ಸ್ಥಾಪನಾ ನಿಯಂತ್ರಣ ಮಸೂದೆ </li>
-<li page="0001-0001">ಶಾಸ್ತ್ರಾರ್ಥ ಸಂಜೀವಿನಿ </li>
-<li page="0001-0001">ಶ್ಮಶ್ರು ಚಿಂತಾರತ್ನಂ </li>
-<li page="0001-0001">ಸಂಕ್ಷೇಪ ರಾಮಾಯಣಂ </li>
-<li page="0001-0001">ಸಲಹೆಗಳು - ಅನ್-ಲಿಮಿಟೆಡ್ </li>
-<li page="0001-0001">ಸವ್ವಾಸೇರು </li>
-<li page="0001-0001">ಸಹಸ್ರನಾಮ್ನೇ ಪುರುಷಾಯ </li>
-<li page="0001-0001">ಸೇವಕರೇ ಎಲ್ಲಾ</li>
-</ol>
+		<li page="0000e-0000k">ಸಮಗ್ರ ಪಾ. ವೆಂ. ಆಚಾರ್ಯ</li>
+		<li page="0000l-0000l">ನೆನವರಿಕೆಗಳು</li>
+		<li page="0000m-0000p">ಪ್ರಕಾಶಕರ ಮಾತು</li>
+		<li page="0001-0008">೧. ಕಳಾಪ್ರಪೂರ್ಣ ಆಯುಷ್ಕರ್ಮಶಾಲಾ</li>
+		<li page="0009-0012">೨. ಕಳ್ಳನ ಹೆಜ್ಜೆ ಮತ್ತು ಈಶಸಂಕಲ್ಪ</li>
+		<li page="0013-0018">೩. ಕಳೆದುಹೋದ ಪ್ರವಾಸಾನಂದ</li>
+		<li page="0019-0021">೪. ಕಿಂ ಕರ್ತವ್ಯ......?</li>
+		<li page="0022-0026">೫. ಕುರಿನಾಡಿನಲ್ಲಿ ಕಲಿಗಾಲ</li>
+		<li page="0027-0029">೬. ಕೂಷ್ಮಾಂಡ ವಿಜಯಂ</li>
+		<li page="0030-0033">೭. ಕೊಡೆಯೆಂಬರ್ ಆತಪತ್ರವನ್</li>
+		<li page="0034-0036">೮. ಕ್ಯೂ ಗಾಂಧಿ ಮತ್ತು ನಾನು!</li>
+		<li page="0037-0039">೯. ಕ್ಷೌರಚಿಂತನೆ</li>
+		<li page="0040-0044">೧೦. ಗಾರ್ದಭೋಪಾಖ್ಯಾನಂ</li>
+		<li page="0045-0048">೧೧. ಒಂದು ಗಣಿತ ಸಮಸ್ಯೆ</li>
+		<li page="0049-0051">೧೨. ಒಂದು ಕಪ್ ಚಹಾ</li>
+		<li page="0052-0054">೧೩. ಎಷ್ಟು ಕರ್ನಾಟಕ?</li>
+		<li page="0055-0059">೧೪. ಉಪಕಾರ ಮಾಡಿ ನೋಡಿ!</li>
+		<li page="0060-0062">೧೫. ಈರುಳ್ಳೀ ಮಹಿಮೆ</li>
+		<li page="0063-0065">೧೬. ಇರಬೇಕು ನಿಂದಕರು</li>
+		<li page="0066-0069">೧೭. ಇಡಲೀ ಶಾಸ್ತ್ರ</li>
+		<li page="0070-0072">೧೮. 'ಇಜಂ' ವಿರೋಧಿ 'ಜಂ'</li>
+		<li page="0073-0075">೧೯. ಅಭಿಮಾನ ಕಾಡಿತ್ತು ನೋಡಾ!</li>
+		<li page="0076-0079">೨೦. ಅತ್ಯಂತ ಶಾಸ್ತ್ರಿಗಳು</li>
+		<li page="0080-0084">೨೧. ಗೊಣಗಿ ಗೊಣಗಿ ಕ್ರಾಂತಿ ತಪ್ಪಿಸಿರಿ</li>
+		<li page="0085-0089">೨೨. ಗೋಹತ್ಯೆ ಮಾಡಿರಿ</li>
+		<li page="0090-0093">೨೩. ಜೀವನ ವ್ಯಾಪಾರ</li>
+		<li page="0094-0096">೨೪. ಟಪಾಲು ಸಂಪು ಮತ್ತು ಆಚಾರ್ಯರು</li>
+		<li page="0097-0102">೨೫. "ನಡೆಯುತ್ತದೆ!"</li>
+		<li page="0103-0108">೨೬. ನನ್ನ ಮಿತ್ರ ತಾಮಸಾನಂದರು</li>
+		<li page="0109-0111">೨೭. ನಾಮಾಂತರಕರಣ</li>
+		<li page="0112-0118">೨೮. ನಾರದ ವಿಜಯ</li>
+		<li page="0119-0123">೨೯. ನಿಮಗೆ ಬೋರಾಗುತ್ತಾ?</li>
+		<li page="0124-0125">೩೦. ನಿಮ್ಮ ಹೆಸರಿನ ಬಾಲ</li>
+		<li page="0126-0128">೩೧. ನಿಶ್ಶಬ್ದ ಸಂಘ</li>
+		<li page="0129-0132">೩೨. ನಿರುದ್ಯೋಗಿಗಳ ಪರಿಷತ್ತು</li>
+		<li page="0133-0134">೩೩. ನಿವೃತ್ತಾಧಿಕಾರಿಗಳ ವಾನಪ್ರಸ್ಥ</li>
+		<li page="0135-0137">೩೪. ನಿಷ್ಕರ್ಮ ಸಿದ್ಧರ ಮಹತಿ</li>
+		<li page="0138-0141">೩೫. ನೀವು ಹೆಂಡತೀನ ಹೊಡೆಯೋದು ಬಿಟ್ಟಿದ್ದೀರಾ?</li>
+		<li page="0142-0144">೩೬. ಪತಿಪೂಜನ - ಲೇಟೆಸ್ಟ್ ಯಜ್ಞ</li>
+		<li page="0145-0148">೩೭. ಪರಮ ಪುರುಷ ಚಕ್ರ</li>
+		<li page="0149-0152">೩೮. ಪರೀಕ್ಷಾ ಪರೀಕ್ಷಣಮ್</li>
+		<li page="0153-0155">೩೯. ಪಶ್ಚಾತ್ತಾಪದ ಮುದ್ದೆಗಳು</li>
+		<li page="0156-0159">೪೦. ಪಾಶಜಿಜ್ಞಾಸಾ</li>
+		<li page="0160-0162">೪೧. ಪಿಡುಗಿಗೆ ನಮಸ್ಕಾರ</li>
+		<li page="0163-0165">೪೨. ಪ್ರಮೀಳೆಯರ ಪೂರ್ಣ ಸ್ವರಾಜ್ಯ</li>
+		<li page="0166-0168">೪೩. ಪ್ರಾಮಾಣಿಕರಿಗೇಕೆ ಚುನಾವಣಿ ಭಾಷಣ?</li>
+		<li page="0169-0171">೪೪. ಬನ್ನಿ, ರೆಕಾರ್ಡ್ ಒಡೆಯಿರಿ!</li>
+		<li page="0172-0173">೪೫. ಬುದ್ಧಿದಾನವೋ ಬಲಸಂವರ್ಧನೆಯೊ?</li>
+		<li page="0174-0176">೪೬. ಬ್ರಹ್ಮಚಾರಿಗಳ ಶಪಥ</li>
+		<li page="0177-0179">೪೭. ಭಪ್ಪರೆ ಮೆಣಸಿನಕಾಯಿ!</li>
+		<li page="0180-0181">೪೮. ಮದುವೆ ಮತ್ತು ಹುಚ್ಚು</li>
+		<li page="0182-0188">೪೯. ಮಾದರಿ ಮಡದಿ ಬೇಕೆ?</li>
+		<li page="0189-0191">೫೦. ಶಂಕು ಸ್ಥಾಪನಾ ನಿಯಂತ್ರಣ ಮಸೂದೆ</li>
+		<li page="0192-0197">೫೧. ಶಾಸ್ತ್ರಾರ್ಥ ಸಂಜೀವಿನಿ</li>
+		<li page="0198-0201">೫೨. ಶ್ಮಶ್ರು ಚಿಂತಾರತ್ನಂ</li>
+		<li page="0202-0205">೫೩. ಸಂಕ್ಷೇಪ ರಾಮಾಯಣಂ</li>
+		<li page="0206-0211">೫೪. ಸಲಹೆಗಳು - ಅನ್-ಲಿಮಿಟೆಡ್</li>
+		<li page="0212-0215">೫೫. ಸವ್ವಾಸೇರು</li>
+		<li page="0216-0218">೫೬. ಸಹಸ್ರನಾಮ್ನೇ ಪುರುಷಾಯ</li>
+		<li page="0219-0224">೫೭. ಸೇವಕರೇ ಎಲ್ಲಾ</li>
+	</ol>
 </div>
