--- a/application/views/flat/3-Books/016.xhtml
+++ b/application/views/flat/3-Books/016.xhtml
@@ -1,23 +1,24 @@
 ﻿<div data-bcode="016">
-	<h1 class="title" data-language="kannada">ಪಾ. ವೆಂ. ಆಚಾರ್ಯ ಆಯ್ದ ನಗೆಬರಹಗಳು</h1>
+	<h1 class="title" data-language="kannada">ಆಯ್ದ ನಗೆಬರಹಗಳು</h1>
 	<ol>
-<li>ಒಳಪುಟಗಳಲ್ಲಿ...</li>
-<li page="0001-0001">ಬೀದಿಯ ಕಾಮಣ್ಣರು</li>
-<li page="0001-0001">ಅಮ್ಮಾವ್ರ ಗಂಡಾಯಣ </li>
-<li page="0001-0001">ಇಮ್ಮಡಿ ತೊಗಲಖ</li>
-<li page="0001-0001">ಯಾರಿಗಾಗಿ ಬದುಕುತ್ತೇವೆ?</li>
-<li page="0001-0001">ಸವಿಗನಸುಗಳು </li>
-<li page="0001-0001">ಸಾಯಲಿಕ್ಕೆ ಪುರುಸೊತ್ತಾಗಲಿಲ್ಲ</li>
-<li page="0001-0001">ಮಂಗಾಯಣಂ </li>
-<li page="0001-0001">ಕಪ್ಪು ಕಪ್ಪಂದೇಕೆ ಬೀಳುಗಳೆವಿರಿ? </li>
-<li page="0001-0001">ಯದ್ವಾತದ್ವಾ ಯೆಂಕಣ್ಣಯ್ಯನವರು </li>
-<li page="0001-0001">ಹೆಂಗಸರನ್ನು ಹೇಗೆ ಅರ್ಥಮಾಡಿಕೊಳ್ಳಬೇಕು ? </li>
-<li page="0001-0001">ಶ್ರೀ ಗಣೇಶಾಯ ನಮಃ </li>
-<li page="0001-0001">ಸೀರೆ ಮತ್ತು ಮಹಾಭಾರತ </li>
-<li page="0001-0001">ಹಾಸ್ಯ ಮೀಮಾಂಸೆ</li>
-<li page="0001-0001">ಭಾವೀ ಜಗತ್ತಿನಲ್ಲಿ ಮಹಿಳೆಯರ ಸ್ಥಾನ</li>
-<li page="0001-0001">ವಾನರಾಯಣ </li>
-<li page="0001-0001">ಮಶಕ ಪುರಾಣ </li>
-<li page="0001-0001">ಮದುವೆಯಾದರೂ ಸುಖಪಡುವುದು ಹೇಗೆ?</li>
-</ol>
+		<li page="0003-0005">ಹೀಗಿವೆ ಈ ಹರಟೆಗಳು</li>
+		<li page="0007-0014">ಪಾ. ವೆಂ. ಆಚಾರ್ಯ - ಪರಿಚಯ</li>
+		<li page="0017-0022">ಬೀದಿಯ ಕಾಮಣ್ಣರು</li>
+		<li page="0023-0026">ಅಮ್ಮಾವ್ರ ಗಂಡಾಯಣ</li>
+		<li page="0027-0034">ಇಮ್ಮಡಿ ತೊಗಲಖ</li>
+		<li page="0035-0040">ಯಾರಿಗಾಗಿ ಬದುಕುತ್ತೇವೆ?</li>
+		<li page="0041-0047">ಸವಿಗನಸುಗಳು</li>
+		<li page="0048-0055">ಸಾಯಲಿಕ್ಕೆ ಪುರುಸೊತ್ತಾಗಲಿಲ್ಲ</li>
+		<li page="0056-0059">ಮಂಗಾಯಣಂ</li>
+		<li page="0060-0063">ಕಪ್ಪು ಕಪ್ಪೆಂದೇಕೆ ಬೀಳುಗಳೆವಿರಿ?</li>
+		<li page="0064-0071">ಯದ್ವಾತದ್ವಾ ಯೆಂಕಣ್ಣಯ್ಯನವರು</li>
+		<li page="0072-0075">ಹೆಂಗಸರನ್ನು ಹೇಗೆ ಅರ್ಥಮಾಡಿಕೊಳ್ಳಬೇಕು ?</li>
+		<li page="0076-0082">ಶ್ರೀ ಗಣೇಶಾಯ ನಮಃ</li>
+		<li page="0083-0085">ಸೀರೆ ಮತ್ತು ಮಹಾಭಾರತ</li>
+		<li page="0086-0091">ಹಾಸ್ಯ ಮೀಮಾಂಸೆ</li>
+		<li page="0092-0099">ಭಾವೀ ಜಗತ್ತಿನಲ್ಲಿ ಮಹಿಳೆಯರ ಸ್ಥಾನ</li>
+		<li page="0100-0104">ವಾನರಾಯಣ</li>
+		<li page="0105-0112">ಮಶಕ ಪುರಾಣ</li>
+		<li page="0113-0119">ಮದುವೆಯಾದರೂ ಸುಖಪಡುವುದು ಹೇಗೆ?</li>
+	</ol>
 </div>
