--- a/application/views/flat/3-Books/017.xhtml
+++ b/application/views/flat/3-Books/017.xhtml
@@ -1,7 +1,10 @@
 ﻿<div data-bcode="017">
 	<h1 class="title" data-language="kannada">ಶಿವರಾಮ ಕಾರಂತ</h1>
 	<ol>
-<li page="0001-0001"></li>
-
-</ol>
+		<li page="0000e-0000e">ಮೊದಲ ಆವೃತ್ತಿಯ ಸಂಪಾದಕರ ಮಾತು</li>
+		<li page="0000f-0000f">ಮೊದಲ ಮಾತು</li>
+		<li page="0000g-0000h">ಹೊಸ ಆವೃತ್ತಿಯ ಮುಮ್ಮಾತು</li>
+		<li page="0000i-0021">ಕಾರಂತ : ಸಾಹಿತ್ಯ ದರ್ಶನ</li>
+		<li page="0023-0054">ಅನುಬಂಧ - ಕಾರಂತ : ಸಾಹಿತ್ಯ ದರ್ಶನ</li>
+	</ol>
 </div>
