--- a/application/views/flat/3-Books/018.xhtml
+++ b/application/views/flat/3-Books/018.xhtml
@@ -1,42 +1,43 @@
 ﻿<div data-bcode="018">
-	<h1 class="title" data-language="kannada">ಪಾ. ವೆಂ. ಆಚಾರ್ಯ ಆಯ್ದ ಹರಟೆಗಳು</h1>
+	<h1 class="title" data-language="kannada">ಆಯ್ದ ಹರಟೆಗಳು</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ಸಂಗೀತ ಮಹಿಮ </li>
-<li page="0001-0001">ಮಕ್ಷಿಕಧ್ವಂಸಕ ಯಂತ್ರ </li>
-<li page="0001-0001">ನಿಮ್ಮ ಅಲರ್ಜಿ ಯಾವುದು?</li>
-<li page="0001-0001">ಚಂದ್ರಲೋಕಕ್ಕೇಕೆ ಹೋಗಬೇಕು ? </li>
-<li page="0001-0001">ಸಂತೋಷ ಘಾತಕರು </li>
-<li page="0001-0001">ಶ್ರೀಮನ್ನಾರಾಯಣನ ನಿವೃತ್ತಿ...</li>
-<li page="0001-0001">ಆನೆಚರ್ಮ </li>
-<li page="0001-0001">ಮೂಷಕ ಪುರಾಣ</li>
-<li page="0001-0001">ಯಾರೂ ಕೆಮ್ಮಬಾರದು</li>
-<li page="0001-0001">ಅಡಿಗಲ್ಲು ಸಮಾರಂಭ </li>
-<li page="0001-0001">ದೇವರ ಕೆಲಸ </li>
-<li page="0001-0001">ಕಳೆದುಹೋದ ಚಪ್ಪಲಿ </li>
-<li page="0001-0001">"ಕಥಕ್ಕಳಿ"ಗೊಂದು ಅವಕಾಶ </li>
-<li page="0001-0001">ಏಕ ಬತ್ತಿ - ಏಕ ರಾಸ್ತಾ </li>
-<li page="0001-0001">ಐದು ಸಾಲದು, ಏಳು ಬೇಕು </li>
-<li page="0001-0001">ಪಾದುಕಾ ಉಪಚಾರ </li>
-<li page="0001-0001">ಮಾವು ಎಂಬ ಹಣ್ಣು </li>
-<li page="0001-0001">ಗದ್ದಲ ಮಾಡಿ </li>
-<li page="0001-0001">ಬೆಣ್ಣೆ ಹಾಕುವುದು </li>
-<li page="0001-0001">ರಾಜಕೀಯ ಗುಳಿಗೆಗಳು</li>
-<li page="0001-0001">ಬುದ್ದಿವಂತರು ಯಾರು ? </li>
-<li page="0001-0001">ಬಿರುದಿಲ್ಲದ ಭಾರತ </li>
-<li page="0001-0001">ಒಂದು ಪ್ರತ್ಯೇಕ ಸಂದರ್ಶನ </li>
-<li page="0001-0001">ಕಾಯದೆ ಮತ್ತು ದೊಡ್ಡವರು </li>
-<li page="0001-0001">ರೋಗಿಗಳು ಯಾಕೆ ಸತ್ತರು ? </li>
-<li page="0001-0001">ಚುಂಬನದ ರಾದ್ದಾಂತ </li>
-<li page="0001-0001">ನಿಮ್ಮ ನಾತೆ ಯಾವುದು? </li>
-<li page="0001-0001">ಹಳದಿ ಪತ್ರಿಕೆಗಳು </li>
-<li page="0001-0001">ಮಹಿಷ ನೀತಿ ಸುಧಾರಣೆ </li>
-<li page="0001-0001">ವೇದಾಂತ ಮತ್ತು ಸ್ತ್ರೀಕಲಹ </li>
-<li page="0001-0001">ಸವತಿ ಮತ್ಸರ </li>
-<li page="0001-0001">ಬಸ್ಸಿನಲ್ಲಿ ಸ್ವಾತಂತ್ರ್ಯ </li>
-<li page="0001-0001">ಎರಡನೇ ಮದುವೆ </li>
-<li page="0001-0001">ಚುನಾವಣೆ ಸ್ವಾರಸ್ಯಗಳು </li>
-<li page="0001-0001">ಘಾತಕ ಹರ್ಷೋನ್ಮಾದ </li>
-<li page="0001-0001">ಸುದ್ದಿಸ್ವಾರಸ್ಯ</li>
-</ol>
+		<li page="0005-0014">ಮುನ್ನುಡಿ</li>
+		<li page="0015-0022">ಪಾ. ವೆಂ. ಆಚಾರ್ಯ - ಪರಿಚಯ</li>
+		<li page="0025-0026">ಸಂಗೀತ ಮಹಿಮೆ</li>
+		<li page="0027-0029">ಮಕ್ಷಿಕಧ್ವಂಸಕ ಯಂತ್ರ</li>
+		<li page="0030-0034">ನಿಮ್ಮ ಅಲರ್ಜಿ ಯಾವುದು?</li>
+		<li page="0035-0037">ಚಂದ್ರಲೋಕಕ್ಕೇಕೆ ಹೋಗಬೇಕು?</li>
+		<li page="0038-0040">ಸಂತೋಷ ಘಾತಕರು</li>
+		<li page="0041-0045">ಶ್ರೀಮನ್ನಾರಾಯಣನ ನಿವೃತ್ತಿ...</li>
+		<li page="0046-0049">ಆನೆಚರ್ಮ</li>
+		<li page="0050-0051">ಮೂಷಕ ಪುರಾಣ</li>
+		<li page="0052-0054">ಯಾರೂ ಕೆಮ್ಮಬಾರದು</li>
+		<li page="0055-0057">ಅಡಿಗಲ್ಲು ಸಮಾರಂಭ</li>
+		<li page="0058-0059">ದೇವರ ಕೆಲಸ</li>
+		<li page="0060-0062">ಕಳೆದುಹೋದ ಚಪ್ಪಲಿ</li>
+		<li page="0063-0066">"ಕಥಕ್ಕಳಿ"ಗೊಂದು ಅವಕಾಶ</li>
+		<li page="0067-0070">ಏಕ ಬತ್ತಿ - ಏಕ ರಾಸ್ತಾ</li>
+		<li page="0071-0073">ಐದು ಸಾಲದು, ಏಳು ಬೇಕು</li>
+		<li page="0074-0076">ಪಾದುಕಾ ಉಪಚಾರ</li>
+		<li page="0077-0079">ಮಾವು ಎಂಬ ಹಣ್ಣು</li>
+		<li page="0080-0082">ಗದ್ದಲ ಮಾಡಿ</li>
+		<li page="0083-0085">ಬೆಣ್ಣೆ ಹಾಕುವುದು</li>
+		<li page="0086-0088">ರಾಜಕೀಯ ಗುಳಿಗೆಗಳು</li>
+		<li page="0089-0091">ಬುದ್ಧಿವಂತರು ಯಾರು?</li>
+		<li page="0092-0094">ಬಿರುದಿಲ್ಲದ ಭಾರತ</li>
+		<li page="0095-0097">ಒಂದು ಪ್ರತ್ಯೇಕ ಸಂದರ್ಶನ</li>
+		<li page="0098-0101">ಕಾಯದೆ ಮತ್ತು ದೊಡ್ಡವರು</li>
+		<li page="0102-0106">ರೋಗಿಗಳು ಯಾಕೆ ಸತ್ತರು?</li>
+		<li page="0107-0110">ಚುಂಬನದ ರಾದ್ಧಾಂತ</li>
+		<li page="0111-0119">ನಿಮ್ಮ ನಾತೆ ಯಾವುದು?</li>
+		<li page="0120-0121">ಹಳದಿ ಪತ್ರಿಕೆಗಳು</li>
+		<li page="0122-0124">ಮಹಿಷ ನೀತಿ ಸುಧಾರಣೆ</li>
+		<li page="0125-0126">ವೇದಾಂತ ಮತ್ತು ಸ್ತ್ರೀಕಲಹ</li>
+		<li page="0127-0128">ಸವತಿ ಮತ್ಸರ</li>
+		<li page="0129-0131">ಬಸ್ಸಿನಲ್ಲಿ ಸ್ವಾತಂತ್ರ್ಯ</li>
+		<li page="0132-0134">ಎರಡನೇ ಮದುವೆ</li>
+		<li page="0135-0136">ಚುನಾವಣೆ ಸ್ವಾರಸ್ಯಗಳು</li>
+		<li page="0137-0138">ಘಾತಕ ಹರ್ಷೋನ್ಮಾದ</li>
+		<li page="0139-0142">ಸುದ್ದಿಸ್ವಾರಸ್ಯ</li>
+	</ol>
 </div>
