--- a/application/views/flat/3-Books/019.xhtml
+++ b/application/views/flat/3-Books/019.xhtml
@@ -1,32 +1,33 @@
 ﻿<div data-bcode="019">
 	<h1 class="title" data-language="kannada">ಓದುಗರೊಡನೆಯ ಹರಟೆಗಳು</h1>
 	<ol>
-<li>ಪರಿವಿಡಿ </li>
-<li page="0001-0001">ಕನ್ನಡ ಕನ್ನಡ ಇದೆಲ್ಲಾವುಂ ಎನ್ನಡ? </li>
-<li page="0001-0001">ಕವಿಶೌರ್ಯ ಪ್ರಕರಣಂ </li>
-<li page="0001-0001">ಕವಿತ್ವ ಲಕ್ಷಣಮ್ </li>
-<li page="0001-0001">ಕಾಡಿಗೆ ಮತ್ತು ಕಾವ್ಯ </li>
-<li page="0001-0001">ಕುವೆಂಪು ದರ್ಶನ </li>
-<li page="0001-0001">ಚಂಡಿಕಾ ಬಲಿ </li>
-<li page="0001-0001">ನಾಗ-ಪಂಚಮಿ </li>
-<li page="0001-0001">ನೃಪತುಂಗ ಎಂದರೇನು? </li>
-<li page="0001-0001">ಪಂಪ ಹಾಗೂ ಪಂಪ್ </li>
-<li page="0001-0001">ಪುಷ್ಪ ವಿಹಾರ </li>
-<li page="0001-0001">ಶಕುಂತಲೋಪಾಖ್ಯಾನ </li>
-<li page="0001-0001">ಶಬ್ದಚ್ಛಟ ಎಂಬ ರೋಗ </li>
-<li page="0001-0001">ಶಬ್ದಶಕ್ತಿ ಹೆಚ್ಚಿಸಿಕೊಳ್ಳಿ </li>
-<li page="0001-0001">ಶುಕಪುರಾಣಂ </li>
-<li page="0001-0001">ಶೇಕ್ ಸ್ಪಿಯರನನ್ನು ಯಾರು ಬರೆದರು? </li>
-<li page="0001-0001">ಶ್ರೀಮದ್ರಾಮಾಯಣ ದರ್ಶನಂ </li>
-<li page="0001-0001">ಸಂಶೋಧನೆಯ ಸಮಸ್ಯೆಗಳು </li>
-<li page="0001-0001">ಸಪ್ತಾಕ್ಷರಿ ಮಂತ್ರ </li>
-<li page="0001-0001">ಸಕ್ಕರೆ ಗೀತ </li>
-<li page="0001-0001">ಸಾಹಿತ್ಯದ ಒಂದು ಅದ್ಭುತ</li>
-<li page="0001-0001">'ಇಸು' ಸಮೃದ್ಧಿ! </li>
-<li page="0001-0001">ಮಂತ್ರಿಗಳು ಮತ್ತು ಅವರ ವಾಕ್ ಸ್ವಾತಂತ್ರ್ಯ </li>
-<li page="0001-0001">ಲಾಂಗೂಲ ಪತ್ರಂಗಳ್ </li>
-<li page="0001-0001">ಜಬ್ಬಲಪುರದ ನರಭಕ್ಷಕ </li>
-<li page="0001-0001">ಲಾಂಗೂಲ ಪತ್ರಿಕೆಯಿಂದ</li>
-</ol>
+		<li page="0000e-0000e">ಪ್ರಕಾಶಕರ ಮಾತು</li>
+		<li page="0000g-0000l">ಪ್ರಸ್ತಾವನೆ</li>
+		<li page="0001-0003">೧. ಕನ್ನಡ! ಕನ್ನಡ? ಇದೆಲ್ಲಾವುಂ ಎನ್ನಡ?</li>
+		<li page="0004-0005">೨. ಕವಿಶೌರ್ಯ ಪ್ರಕರಣಂ</li>
+		<li page="0006-0008">೩. ಕವಿತ್ವ ಲಕ್ಷಣಮ್</li>
+		<li page="0009-0010">೪. ಕಾಡಿಗೆ ಮತ್ತು ಕಾವ್ಯ</li>
+		<li page="0011-0012">೫. ಕುವೆಂಪು ದರ್ಶನ</li>
+		<li page="0013-0014">೬. ಚಂಡಿಕಾ ಬಲಿ</li>
+		<li page="0015-0016">೭. ನಾಗ-ಪಂಚಮಿ</li>
+		<li page="0017-0018">೮. ನೃಪತುಂಗ ಎಂದರೇನು?</li>
+		<li page="0019-0021">೯. ಪಂಪ ಹಾಗೂ ಪಂಪ್</li>
+		<li page="0022-0024">೧೦. ಪುಷ್ಪವಿಹಾರ</li>
+		<li page="0025-0029">೧೧. ಶಕುಂತಲೋಪಾಖ್ಯಾನ</li>
+		<li page="0030-0034">೧೨. ಶಬ್ದಚ್ಛಟ ಎಂಬ ರೋಗ</li>
+		<li page="0035-0036">೧೩. ಶಬ್ದಶಕ್ತಿ ಹೆಚ್ಚಿಸಿಕೊಳ್ಳಿ</li>
+		<li page="0037-0039">೧೪. ಶುಕ ಪುರಾಣಂ</li>
+		<li page="0040-0041">೧೫. ಶೇಕ್​ಸ್ಪಿಯರನನ್ನು ಯಾರು ಬರೆದರು?</li>
+		<li page="0042-0046">೧೬. ಶ್ರೀಮದ್ರಾಮಾಯಣ ದರ್ಶನಂ</li>
+		<li page="0047-0048">೧೭. ಸಂಶೋಧನೆಯ ಸಮಸ್ಯೆಗಳು</li>
+		<li page="0049-0050">೧೮. ಸಪ್ತಾಕ್ಷರಿ ಮಂತ್ರ</li>
+		<li page="0051-0052">೧೯. ಸಕ್ಕರೆ ಗೀತ</li>
+		<li page="0053-0054">೨೦. ಸಾಹಿತ್ಯದ ಒಂದು ಅದ್ಭುತ</li>
+		<li page="0055-0055">೨೧. 'ಇಸು' ಸಮೃದ್ಧಿ!</li>
+		<li page="0056-0057">೨೨. ಮಂತ್ರಿಗಳು ಮತ್ತು ಅವರ ವಾಕ್ ಸ್ವಾತಂತ್ರ್ಯ</li>
+		<li page="0058-0060">೨೩. ಲಾಂಗೂಲ ಪತ್ರಂಗಳ್</li>
+		<li page="0061-0063">೨೪. ಜಬ್ಬಲಪುರದ ನರಭಕ್ಷಕ</li>
+		<li page="0064-0072">೨೫. ಲಾಂಗೂಲ ಪತ್ರಿಕೆಯಿಂದ</li>
+	</ol>
 </div>
 
