--- a/application/views/flat/3-Books/020.xhtml
+++ b/application/views/flat/3-Books/020.xhtml
@@ -1,7 +1,18 @@
 ﻿<div data-bcode="020">
-	<h1 class="title" data-language="kannada">ಪತ್ರಕರ್ತರ ಆಚಾರ್ಯ ಪಾ. ವೆಂ. ಆಚಾರ್ಯ</h1>
+	<h1 class="title" data-language="kannada">ಪಾಡಿಗಾರು ವೆಂಕಟರಮಣ ಆಚಾರ್ಯರು</h1>
 	<ol>
-<li page="0001-0001"></li>
-
-</ol>
+		<li page="0000e-0000f">ನಾಡಿಗೆ ನಮಸ್ಕಾರ</li>
+		<li page="0001-0006">೧. ಇವರೇ ನಮ್ಮ ಪಾ. ವೆಂ. ಆಚಾರ್ಯರು</li>
+		<li page="0007-0011">೨. ವ್ಯಕ್ತಿತ್ವ</li>
+		<li page="0012-0015">೩. ಸಾಹಿತ್ಯ ರಚನೆಯ ಸ್ಥೂಲ ನೋಟ</li>
+		<li page="0016-0019">೪. ಕಸ್ತೂರಿ</li>
+		<li page="0020-0024">೫. ಕತೆ-ಕವಿತೆ</li>
+		<li page="0025-0028">೬. ವ್ಯಕ್ತಿ ಚಿತ್ರಗಳು</li>
+		<li page="0029-0031">೭. ಚಿಂತನಪರ ಬರಹಗಳು</li>
+		<li page="0032-0033">೮. ವಿಜ್ಞಾನ ವಿಸ್ಮಯ</li>
+		<li page="0034-0036">೯. ಲಾಂಗೂಲಾಚಾರ್ಯರಾಗಿ</li>
+		<li page="0037-0040">೧೦. ಪದಾರ್ಥ ಚಿಂತಾಮಣಿ</li>
+		<li page="0041-0042">೧೧. ಜಗತ್ತಿನ ವಿಚಿತ್ರ ಘಟನಾವಳಿ</li>
+		<li page="0043-0044">ಸಮಾರೋಪ</li>
+	</ol>
 </div>
