--- a/application/views/flat/3-Books/022.xhtml
+++ b/application/views/flat/3-Books/022.xhtml
@@ -1,39 +1,53 @@
 ﻿<div data-bcode="022">
 	<h1 class="title" data-language="kannada">ಉಡುಪಿಯ ಪರಿಸರದಲ್ಲಿ ಪಾವೆಂ ಆಚಾರ್ಯರು</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ಶ್ರೀಕೃಷ್ಣನಿಗೆ (ಅರ್ಪಣ ಪದ್ಯ)</li>
-<li page="0001-0001">ಪ್ರಸ್ತಾವನೆ - ಸಂಪಾದಕರಿಂದ</li>
-<li page="0001-0001">(ಅ) ಶ್ರೀಕೃಷ್ಣ ಮಠದ ಪರಿಸರದಲ್ಲಿ </li>
-<li page="0001-0001">ಹುಲಿ ಕೊಂದ ಸ್ವಾಮಿಗಳು </li>
-<li page="0001-0001">ಮಠಾಧಿಪತ್ಯಕ್ಕೆ ಮೇಲಾಟ ಇರಲಿಲ್ಲ </li>
-<li page="0001-0001">ರಥದಿಂದ ಧುಮುಕಿದ ಸ್ವಾಮಿಗಳು </li>
-<li page="0001-0001">ಪೇಜಾವರ ಶ್ರೀ ವಿಶ್ವೇಶತೀರ್ಥರು </li>
-<li page="0001-0001">ಸೋದೆಯ ನೆನಪುಗಳು </li>
-<li page="0001-0001">ಒಂದು ಕಥೆ ; ಅದರ ವ್ಯಥೆ </li>
-<li page="0001-0001">(ಆ) ಗಣ್ಯ ವ್ಯಕ್ತಿಗಳ ಸನಿಹದಲ್ಲಿ </li>
-<li page="0001-0001">ಗೋವಿಂದ ಪೈಗಳೊಂದಿಗೆ </li>
-<li page="0001-0001">ಶಿವರಾಮ ಕಾರಂತ 'ಪ್ರಪಂಚ' </li>
-<li page="0001-0001">ಡಾ. ಟಿ. ಮಾಧವ ಪೈ </li>
-<li page="0001-0001">ಶ್ರೀ ತೋನ್ಸೆ ಅನಂತ ಪೈ </li>
-<li page="0001-0001">ಶ್ರೀ ಎಂ. ಮಧ್ವರಾಜರು </li>
-<li page="0001-0001">ಕು. ಶಿ. ಉತ್ಸಾಹದ ಬುಗ್ಗೆ </li>
-<li page="0001-0001">ಉಡುಪಿಯ ಕೆಲ ಪತ್ರಕರ್ತರು </li>
-<li page="0001-0001">ಪೊಳಲಿ ಶೀನಪ್ಪ ಹೆಗ್ಗಡೆ ಅವರ ಎರಡು ಪುಸ್ತಕಗಳು</li>
-<li page="0001-0001">(ಇ) ತುಳು, ಕನ್ನಡ ಶಬ್ದ ವಿಹಾರ </li>
-<li page="0001-0001">ಸಾಮಾನ್ಯ ತುಳು - ಬ್ರಾಹ್ಮಣ ತುಳು </li>
-<li page="0001-0001">'ಶ್ರೀ ಭಾಗವತೊ' ಹಾಗೂ 'ಸ್ಟ್' ವಿಚಾರ </li>
-<li page="0001-0001">ಪುತ್ತೂರು - ಶಬ್ದ ವಿವೇಚನೆ </li>
-<li page="0001-0001">'ಗುಯ್ಯಲ್' - ಒಂದು ವಿವೇಚನೆ </li>
-<li page="0001-0001">ಶಿವಳ್ಳಿ ಮತ್ತು ಶಿವರೂಪ </li>
-<li page="0001-0001">'ಖಾವಂದ' ರಿಂದ ಬಿರ್ಕಡ್ ಚೋತ್' ವರಗೆ</li>
-<li page="0001-0001">(ಈ) ನೆನಹುಗಳು</li>
-<li page="0001-0001">ನನ್ನ ಪತಿ - ಶ್ರೀಮತಿ ಲಕ್ಷ್ಮೀಬಾಯಿ ಆಚಾರ್ಯ </li>
-<li page="0001-0001">ನನ್ನ ಉಡುಪಿಯ ಜೀವನ - (ಪಾ.ವೆಂ.) </li>
-<li page="0001-0001">ಬದಲಾಗಿದ ಉಡುಪಿ </li>
-<li page="0001-0001">ಸಮ್ಮೇಳನಾಧ್ಯಕ್ಷರ ಭಾಷಣ</li>
-<li page="0001-0001">ಅನುಬಂಧಗಳು</li>
-<li page="0001-0001">ಸಮಗ್ರ ಪಾ.ವೆಂ. ಪ್ರಕಟನ ಯೋಜನೆ </li>
-<li page="0001-0001">ಪ್ರಮುಖ ಅಂಕಿತ ನಾಮ ಸೂಚಿ</li>
-</ol>
+		<li page="0003-0003">ಅರ್ಪಣ ಪದ್ಯ - ಶ್ರೀಕೃಷ್ಣನಿಗೆ</li>
+		<li page="0007-0011">ಪ್ರಸ್ತಾವನೆ</li>
+		<li page="0013-0040">(ಅ) ಶ್ರೀಕೃಷ್ಣ ಮಠದ ಪರಿಸರದಲ್ಲಿ
+			<ol>
+				<li page="0014-0017">೧. ಹುಲಿ ಕೊಂದ ಸ್ವಾಮಿಗಳು</li>
+				<li page="0018-0019">೨. ಮಠಾಧಿಪತ್ಯಕ್ಕೆ ಮೇಲಾಟ ಇರಲಿಲ್ಲ</li>
+				<li page="0020-0021">೩. ರಥದಿಂದ ಧುಮುಕಿದ ಸ್ವಾಮಿಗಳು</li>
+				<li page="0022-0028">೪. ಪೇಜಾವರ ಮಠದ ಶ್ರೀ ವಿಶ್ವೇಶತೀರ್ಥರು</li>
+				<li page="0029-0037">೫. ಸೋದೆಯ ನೆನಪುಗಳು</li>
+				<li page="0038-0040">೬. ಒಂದು ಕಥೆ - ಅದರ ವ್ಯಥೆ</li>
+			</ol>
+		</li>
+		<li page="0041-0088">(ಆ) ಗಣ್ಯ ವ್ಯಕ್ತಿಗಳ ಸನಿಹದಲ್ಲಿ
+			<ol>
+				<li page="0042-0047">೭. ಗೋವಿಂದ ಪೈಗಳೊಂದಿಗೆ</li>
+				<li page="0048-0052">೮. ಶಿವರಾಮ ಕಾರಂತ 'ಪ್ರಪಂಚ'</li>
+				<li page="0053-0056">೯. ಡಾ. ತೋನ್ಸೆ ಮಾಧವ ಪೈ</li>
+				<li page="0057-0062">೧೦. ಶ್ರೀ ತೋನ್ಸೆ ಅನಂತ ಪೈ</li>
+				<li page="0063-0069">೧೧. ಶ್ರೀ ಎಂ. ಮಧ್ವರಾಜರು</li>
+				<li page="0070-0072">೧೨. ಕು. ಶಿ. - ಉತ್ಸಾಹದ ಬುಗ್ಗೆ</li>
+				<li page="0073-0079">೧೩. ಉಡುಪಿಯ ಕೆಲ ಪತ್ರಕರ್ತರು</li>
+				<li page="0080-0088">೧೪. ಪೊಳಲಿ ಶೀನಪ್ಪ ಹೆಗ್ಗಡೆ ಅವರ ಎರಡು ಪುಸ್ತಕಗಳು</li>
+			</ol>
+		</li>
+		<li page="0089-0117">(ಇ) ತುಳು, ಕನ್ನಡ ಶಬ್ದ ವಿಹಾರ
+			<ol>
+				<li page="0090-0093">೧೫. ಸಾಮಾನ್ಯ ತುಳು - ಬ್ರಾಹ್ಮಣ ತುಳು</li>
+				<li page="0094-0103">೧೬. ವಿಷ್ಣುತುಂಗ ವಿರಚಿತ 'ಶ್ರೀ ಭಾಗವತೊ' ಮಹಾಕಾವ್ಯ (ಹಾಗೂ 'ಸ್ಟ್' ವಿಚಾರ)</li>
+				<li page="0104-0105">೧೭. ‘ಪುತ್ತೂರು’ - ಶಬ್ದ ವಿವೇಚನೆ</li>
+				<li page="0106-0108">೧೮. 'ಗುಯ್ಯಲ್' - ಒಂದು ವಿವೇಚನೆ</li>
+				<li page="0109-0112">೧೯. ಶಿವಳ್ಳಿ ಮತ್ತು ಶಿವರೂಪ್ಯ</li>
+				<li page="0113-0117">೨೦. 'ಖಾವಂದ'ರಿಂದ ಬಿರ್ಕಡ್​ಚೋತ್ ರವರೆಗೆ</li>
+			</ol>
+		</li>
+		<li page="0118-0166">(ಈ) ನೆನಹುಗಳು
+			<ol>
+				<li page="0119-0126">೨೧. ನನ್ನ ಪತಿ ಪಾವೆಂ - ಶ್ರೀಮತಿ ಲಕ್ಷ್ಮೀಬಾಯಿ ಆಚಾರ್ಯ</li>
+				<li page="0127-0140">೨೨. ನನ್ನ ಉಡುಪಿಯ ಜೀವನ - (ಪಾ.ವೆಂ. ಆಚಾರ್ಯ)</li>
+				<li page="0141-0149">೨೩. ಬದಲಾಗಿದೆ ಉಡುಪಿ</li>
+				<li page="0150-0166">೨೪. ಪಾ. ವೆಂ. ಆಚಾರ್ಯ; ಸಮ್ಮೇಳನಾಧ್ಯಕ್ಷರ ಭಾಷಣ</li>
+			</ol>
+		</li>
+		<li page="0167-0175">ಅನುಬಂಧಗಳು
+			<ol>
+				<li page="0167-0174">ಪಾ. ವೆಂ. ಆಚಾರ್ಯ - ಸಮಗ್ರ ಸಂಪುಟ ಯೋಜನೆ</li>
+				<li page="0175-0175">ಪ್ರಮುಖ ಅಂಕಿತ ನಾಮ ಸೂಚಿ</li>
+			</ol>
+		</li>
+	</ol>
 </div>
