--- a/application/views/flat/3-Books/023.xhtml
+++ b/application/views/flat/3-Books/023.xhtml
@@ -1,20 +1,23 @@
 ﻿<div data-bcode="023">
 	<h1 class="title" data-language="kannada">ರಶಿಯಾದ ರಾಜ್ಯಕ್ರಾಂತಿ</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ಪೂರ್ವರಂಗ</li>
-<li page="0001-0001"> ರಶಿಯಾದ ವಿಕಾಸದ ಹೆಗ್ಗುರುತುಗಳು</li>
-<li page="0001-0001"> ರಶಿಯಾದ ಬಂಡವಲಶಾಹಿಯ ವೈಶಿಷ್ಟ್ಯಗಳು</li>
-<li page="0001-0001"> ಪ್ರಜೆಗಳೂ ಪಕ್ಷಗಳೂ</li>
-<li page="0001-0001">ಬಾಲ್ಯೆವಿಕರೂ ಮೆನ್ಯೆವಿಕರೂ</li>
-<li page="0001-0001"> ಕ್ರಾಂತಿಯ ಪೂರ್ವಯೋಗ: ೧೯೦೫</li>
-<li page="0001-0001">೧೯೦೫ ಲಾಭ-ನಷ್ಟ</li>
-<li page="0001-0001">ಯುದ್ಧ - ಜನತೆ-ಝಾರಶಾಹಿ</li>
-<li page="0001-0001"> ಫೆಬ್ರುವರಿಯ ವಿಪ್ಲವ</li>
-<li page="0001-0001">ತಾತ್ಪೂರ್ತಿಕ ಸರಕಾರ ಮತ್ತು ಸೋವಿಯೆಟ್ ಘಟಕಗಳ: </li>
-<li page="0001-0001">ಅಂತಃಪ್ರವಾಹಗಳ ಗಮನ-ಪ್ರತಿಗವನ</li>
-<li page="0001-0001">ಅಕ್ಟೋಬರ ಕ್ರಾಂತಿ</li>
-<li page="0001-0001">ಹೋರಾಟ ಮತ್ತು ವಿಜಯ </li>
-<li page="0001-0001">ಉಳಿದುದು</li>
-</ol>
+		<li page="0000e-0000f">ಪ್ರಕಾಶಕರ ಅರಿಕೆ</li>
+		<li page="0000g-0000h">ಮುನ್ನುಡಿ</li>
+		<li page="0001-0019">ಪೂರ್ವರಂಗ</li>
+		<li page="0020-0034">ರಶಿಯಾದ ವಿಕಾಸದ ಹೆಗ್ಗುರುತುಗಳು</li>
+		<li page="0034-0039">ರಶಿಯಾದ ಬಂಡವಲಶಾಹಿಯ ವೈಶಿಷ್ಟ್ಯಗಳು</li>
+		<li page="0040-0043">ಪ್ರಜೆಗಳೂ ಪಕ್ಷಗಳೂ</li>
+		<li page="0044-0049">ಬಾಲ್ಶೆವಿಕರೂ ಮೆನ್ಶೆವಿಕರೂ</li>
+		<li page="0050-0068">ಕ್ರಾಂತಿಯ ಪೂರ್ವ ಪ್ರಯೋಗ: ೧೯೦೫</li>
+		<li page="0068-0079">೧೯೦೫: ಲಾಭ-ನಷ್ಟ</li>
+		<li page="0079-0093">ಯುದ್ಧ - ಜನತೆ-ಝಾರಶಾಹಿ</li>
+		<li page="0093-0105">ಫೆಬ್ರುವರಿಯ ವಿಪ್ಲವ</li>
+		<li page="0106-0115">ತಾತ್ಪೂರ್ತಿಕ ಸರಕಾರ ಮತ್ತು ಸೋವಿಯೆಟ್ ಘಟಕಗಳು</li>
+		<li page="0115-0132">ಅಂತಃಪ್ರವಾಹಗಳ ಗಮನ-ಪ್ರತಿಗಮನ</li>
+		<li page="0132-0153">ಅಕ್ಟೋಬರ ಕ್ರಾಂತಿ</li>
+		<li page="0154-0167">ಹೋರಾಟ ಮತ್ತು ವಿಜಯ</li>
+		<li page="0168-0169">ಉಳಿದುದು</li>
+		<li page="0170-0170">ಸೋವಿಯೆಟ್ಟುಗಳ ವಿಷಯದಲ್ಲಿ ವಿವರಣೆ</li>
+		<li page="0171-0172">ಒಪ್ಪೋಲೆ</li>
+	</ol>
 </div>
