--- a/application/views/flat/3-Books/024.xhtml
+++ b/application/views/flat/3-Books/024.xhtml
@@ -1,18 +1,20 @@
 ﻿<div data-bcode="024">
-<h1 class="title" data-language="kannada">ಹಿಂದೂ ಮುಸ್ಲಿಂ ಮತ್ತು ಇತರ ಕತೆಗಳು</h1>
-<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ಕರುಳಿನ ಮರುಳು ೧೯೩೫ </li>
-<li page="0001-0001">ಅಪರ ಜೀವನ ೧೯೩೮</li>
-<li page="0001-0001">ಪಿಶಾಚಿಯ ತವರು ಮನೆ ೧೯೪೦</li>
-<li page="0001-0001">ಕಣ್ -ಸನ್ನೆ </li>
-<li page="0001-0001">ನಿರುದ್ಯೋಗಿ </li>
-<li page="0001-0001">ಹಿಂದೂ-ಮುಸ್ಲಿಮ್ ೧೯೪೦ </li>
-<li page="0001-0001">ವಿನೋದದ ಪರಮಾವಧಿ ೧೯೩೮ </li>
-<li page="0001-0001">ಎರಡು ಮಹಾ ಕಥೆಗಳು ೧೯೭೦ </li>
-<li page="0001-0001">ಒಂದು ಅ-ನೀತಿ ಕಥೆ </li>
-<li page="0001-0001">ಕನಸು </li>
-<li page="0001-0001">ಒಬ್ಬ ಸ್ವಾಮಿಗಳ ಕಥೆ ೧೯೮೪</li>
-<li page="0001-0001">ವಾಕಿಂಗ್ ಸ್ಟಿಕ್ಕಿನ ಪ್ರಕರಣ ೧೯೯೦</li>
-</ol>
+	<h1 class="title" data-language="kannada">ಹಿಂದೂ ಮುಸ್ಲಿಂ ಮತ್ತು ಇತರ ಕತೆಗಳು</h1>
+	<ol>
+		<li page="0000e-0000f">ನೆನವರಿಕೆಗಳು...</li>
+		<li page="0000g-0000o">ಸಮಗ್ರ ಪಾ. ವೆಂ. ಆಚಾರ್ಯ</li>
+		<li page="0000p-0000q">ಸಂತಸದ ನಲ್ನುಡಿ</li>
+		<li page="0001-0006">೧. ಕರುಳಿನ ಮರುಳು</li>
+		<li page="0007-0014">೨. ಅಪರ ಜೀವನ</li>
+		<li page="0015-0018">೩. ಪಿಶಾಚಿಯ ತವರುಮನೆ</li>
+		<li page="0019-0028">೪. ಕಣ್-ಸನ್ನೆ</li>
+		<li page="0029-0039">೫. ನಿರುದ್ಯೋಗಿ</li>
+		<li page="0040-0045">೬. ಹಿಂದೂ-ಮುಸ್ಲಿಮ್</li>
+		<li page="0046-0051">೭. ವಿನೋದದ ಪರಮಾವಧಿ</li>
+		<li page="0052-0053">೮. ಎರಡು ಮಹಾ ಕಥೆಗಳು</li>
+		<li page="0054-0061">೯. ಒಂದು ಅ-ನೀತಿ ಕಥೆ</li>
+		<li page="0062-0068">೧೦. ಕನಸು</li>
+		<li page="0069-0078">೧೧. ಒಬ್ಬ ಸ್ವಾಮಿಗಳ ಕಥೆ</li>
+		<li page="0079-0084">೧೨. ವಾಕಿಂಗ್ ಸ್ಟಿಕ್ಕಿನ ಪ್ರಕರಣ</li>
+	</ol>
 </div>
