--- a/application/views/flat/3-Books/025.xhtml
+++ b/application/views/flat/3-Books/025.xhtml
@@ -1,27 +1,28 @@
 ﻿<div data-bcode="025">
 	<h1 class="title" data-language="kannada">ಸುಭಾಷಿತ ಚಮತ್ಕಾರ</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ಸಂಪಾದಕೀಯ - ಶ್ರೀನಿವಾಸ ಹಾವನೂರು </li>
-<li page="0001-0001">ಮುನ್ನುಡಿ - ಕೆ. ಕೃಷ್ಣಮೂರ್ತಿ </li>
-<li page="0001-0001">ನಾಲ್ಕುಮಾತು - ಪಾ.ವೆಂ. ಆಚಾರ್ಯ </li>
-<li page="0001-0001">ಸುಭಾಷಿತ ಚಮತ್ಕಾರ</li>
-<li page="0001-0001">ವಿಷಯ</li>
-<li page="0001-0001">ಸರಸ್ವತೀ ಮನೋಹರೀ </li>
-<li page="0001-0001">ಹರಿಂ ವಂದೇ ಹರಂ ವಂದೇ </li>
-<li page="0001-0001">ಮನೋಬಲಂ ಬಲಂ </li>
-<li page="0001-0001">ಧನಮಹಿಮ </li>
-<li page="0001-0001">ಬಡತನಕೆ ಗುಣವಿಲ್ಲ </li>
-<li page="0001-0001">ಈ ನಂಟು ಕಗ್ಗಂಟು </li>
-<li page="0001-0001">ಛೂಬಾಣ </li>
-<li page="0001-0001">ಸಜ್ಜನ - ದುರ್ಜನ </li>
-<li page="0001-0001">ಆಳುವವರ ಸ್ವರೂಪ </li>
-<li page="0001-0001">ಅನ್ಯೋಕ್ತಿ </li>
-<li page="0001-0001">ಸ್ತುತಿಚಮತ್ಕಾರ</li>
-<li page="0001-0001">ಬಗೆ ಬಗೆ ನಯ - ನೀತಿ </li>
-<li page="0001-0001">ವೈರಾಗ್ಯ ಭಾಗ್ಯ</li>
-<li page="0001-0001">ಸಂದರ್ಭ ಟಿಪ್ಪಣಿಗಳು </li>
-<li page="0001-0001">ಅಕಾರಾದಿ (ಕನ್ನಡ) </li>
-<li page="0001-0001">ಅಕಾರಾದಿ (ಸಂಸ್ಕೃತ)</li>
-</ol>
+		<li page="0006-0006">ಸಂಪಾದಕೀಯ - ಶ್ರೀನಿವಾಸ ಹಾವನೂರ</li>
+		<li page="0007-0011">ಮುನ್ನುಡಿ - ಡಾ॥ ಕೆ. ಕೃಷ್ಣಮೂರ್ತಿ</li>
+		<li page="0012-0016">ನಾಲ್ಕುಮಾತು - ಪಾ. ವೆಂ. ಆಚಾರ್ಯ</li>
+		<li page="0019-0147">ಸುಭಾಷಿತ ಚಮತ್ಕಾರ
+			<ol>
+				<li page="0019-0025">ಸರಸ್ವತೀ ಮನೋಹರೀ</li>
+				<li page="0026-0031">ಹರಿಂ ವಂದೇ ಹರಂ ವಂದೇ</li>
+				<li page="0032-0034">ಮನೋಬಲಂ ಬಲಂ</li>
+				<li page="0035-0041">ಧನ ಮಹಿಮೆ</li>
+				<li page="0042-0046">ಬಡತನಕೆ ಗುಣವಿಲ್ಲ</li>
+				<li page="0047-0068">ಈ ನಂಟು ಕಗ್ಗಂಟು</li>
+				<li page="0069-0087">ಛೂ ಬಾಣ</li>
+				<li page="0088-0097">ಸಜ್ಜನ ದುರ್ಜನ</li>
+				<li page="0098-0104">ಆಳುವವರ ಸ್ವರೂಪ</li>
+				<li page="0105-0110">ಅನ್ಯೋಕ್ತಿ</li>
+				<li page="0111-0113">ಸ್ತುತಿ ಚಮತ್ಕಾರ</li>
+				<li page="0114-0144">ಬಗೆ ಬಗೆ ನಯ-ನೀತಿ</li>
+				<li page="0145-0147">ವೈರಾಗ್ಯ ಭಾಗ್ಯ</li>
+			</ol>
+		</li>
+		<li page="0149-0150">ಸಂದರ್ಭ ಟಿಪ್ಪಣಿಗಳು</li>
+		<li page="0151-0154">ಕನ್ನಡ  ಅಕಾರಾದಿ</li>
+		<li page="0155-0158">ಸಂಸ್ಕೃತ ಪದ್ಯಗಳ ಅಕಾರಾದಿ</li>
+	</ol>
 </div>
