--- a/application/views/flat/3-Books/026.xhtml
+++ b/application/views/flat/3-Books/026.xhtml
@@ -1,7 +1,8 @@
 ﻿<div data-bcode="026">
-	<h1 class="title" data-language="kannada">ಪಾ. ವೆ. ಕಂಡಂತೆ</h1>
+	<h1 class="title" data-language="kannada">ಡಾ॥ ಶಂ. ಬಾ. ಪಾ. ವೆಂ. ಕಂಡಂತೆ</h1>
 	<ol>
-<li page="0001-0001"></li>
-
-</ol>
+		<li page="0003-0010">ಶಂ. ಬಾ. ಜೋಶಿ ನರತ್ವದಿಂದ ಮಾನವತ್ವಕ್ಕೆ</li>
+		<li page="0011-0025">ಅವರು ಬೆಳಕನ್ನು ಬೆಂಬತ್ತಿದ್ದಾರೆ</li>
+		<li page="0026-0032">ದೇವತೆಗಳ ಲೈಂಗಿಕ ಸ್ವರೂಪ</li>
+	</ol>
 </div>
