--- a/application/views/flat/3-Books/027.xhtml
+++ b/application/views/flat/3-Books/027.xhtml
@@ -1,22 +1,21 @@
 ﻿<div data-bcode="027">
 	<h1 class="title" data-language="kannada">ಬಯ್ಯ ಮಲ್ಲಿಗೆ</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ಬರೆತಿನಾಯನ ಅರಿಕೆ </li>
-<li page="0001-0001">ಪ್ರಕಾಶಕೆರ್‌ನ ಪಾತೆರ</li>
-<li page="0001-0001">ಸತ್ಯೊಗು ಪ್ರಾರ್ತನೆ </li>
-<li page="0001-0001">ತುಳುನಾಡ್ ದ  ನಿನೆಪು </li>
-<li page="0001-0001">ರಾಮದೇವೆರೆ ಸತ್ಯ </li>
-<li page="0001-0001">ಗೋಪಿ</li>
-<li page="0001-0001">ಅರ್ತ </li>
-<li page="0001-0001">ಯುಗಾದಿ-ದುರ್ಮತಿ </li>
-<li page="0001-0001">ಬಡವು </li>
-<li page="0001-0001">ಕೆಡಿ 1-4 </li>
-<li page="0001-0001">ಸಂಸ್ಕೃುತೊಡ್ಡು </li>
-<li page="0001-0001">ಗೌತಮಿ-ಗೌತಮೆ </li>
-<li page="0001-0001">ಬಿನ್ನಯ </li>
-<li page="0001-0001">ಎನ್ನ ರಾಮಾಯಣ </li>
-<li page="0001-0001">ಆಯಿಜಿ ನರಮಾನಿ </li>
-<li page="0001-0001">ಆಯೆ ಬತ್ತೆ ಉಂಬೈ ಬತ್ತೆ</li>
-</ol>
+		<li page="0003-0004">ಬರೆತಿನಾಯನ ಅರಿಕೆ</li>
+		<li page="0005-0006">ಪ್ರಕಾಶೆಕೆರ್‌ನ ಪಾತೆರ</li>
+		<li page="0009-0010">1. ಸತ್ಯೊಗು ಪ್ರಾರ್ತನೆ</li>
+		<li page="0011-0012">2. ತುಳುನಾಡ್​ದ  ನಿನೆಪು</li>
+		<li page="0013-0015">3. ರಾಮದೇವೆರೆ ಸತ್ಯ</li>
+		<li page="0016-0017">4. ಗೋಪಿ</li>
+		<li page="0018-0021">5. ಅರ್ತ</li>
+		<li page="0022-0023">6. ಯುಗಾದಿ-ದುರ್ಮತಿ</li>
+		<li page="0024-0025">7. ಬಡವು</li>
+		<li page="0026-0027">8. ಕೆಡಿ 1-4</li>
+		<li page="0028-0030">9. ಸಂಸ್ಕೃುತೊಡ್ಡು</li>
+		<li page="0031-0033">10. ಗೌತಮಿ-ಗೌತಮೆ</li>
+		<li page="0034-0034">11. ಬಿನ್ನಯ</li>
+		<li page="0035-0036">12. ಎನ್ನ ರಾಮಾಯಣ</li>
+		<li page="0037-0039">13. ಆಯಿಜಿ ನರಮಾನಿ</li>
+		<li page="0040-0044">14. ಆಯೆ ಬತ್ತೆ ಉಂಬ್ಯೆ  ಬತ್ತೆ</li>
+	</ol>
 </div>
