--- a/application/views/flat/3-Books/028.xhtml
+++ b/application/views/flat/3-Books/028.xhtml
@@ -1,29 +1,30 @@
 ﻿<div data-bcode="028">
 	<h1 class="title" data-language="kannada">ವಕ್ರ ದೃಷ್ಟಿ</h1>
 	<ol>
-<li>ಪರಿವಿಡಿ </li>
-<li page="0001-0001">ಹಾಸ್ಯ ಮೀಮಾಂಸೆ</li>
-<li page="0001-0001">ನಿಮ್ಮ ಅಲರ್ಜಿ ಯಾವುದು ? </li>
-<li page="0001-0001">ಎಷ್ಟು ಕರ್ನಾಟಕ ? </li>
-<li page="0001-0001">ಭಾವಿ ಜಗತ್ತಿನಲ್ಲಿ ಮಹಿಳೆಯರ ಸ್ಥಾನ </li>
-<li page="0001-0001">ಕಪ್ಪುಕಪ್ಪೆಂದೇಕೆ ಬೀಳುಗಳೆವಿರಿ ? </li>
-<li page="0001-0001">ವಾಲ್ಮೀಕಿಯ ಸಂತಾನ </li>
-<li page="0001-0001">ಮದುವೆಯಾದರೂ ಸುಖ ಹೇಗೆ ಪಡೆಯಬೇಕು </li>
-<li page="0001-0001">ದೇವತಾ ಚಟಗಳು </li>
-<li page="0001-0001">ವಾನರಾಯಣ </li>
-<li page="0001-0001">ಶಾಸ್ತ್ರ ಮಂಜರಿ </li>
-<li page="0001-0001">ಶಕುನಿ ಶಂಕಯ್ಯನವರ ಚರಿತ್ರೆ </li>
-<li page="0001-0001">ವಿಪರೀತ ಧ್ಯಾನಯೋಗಿಯೊಡನೆ ಒಂದು ಗಳಿಗೆ </li>
-<li page="0001-0001">ತಾಯಿ ಬೇಕಂತೆ ! </li>
-<li page="0001-0001">ತರಲೆ ತಾರಮ್ಮಯ್ಯನವರು </li>
-<li page="0001-0001">ತ್ರಿಮೂರ್ತಿಗಳ ವಿಚಾರಣಾ ವೈಖರಿ </li>
-<li page="0001-0001">ಮಶಕ ಪುರಾಣ </li>
-<li page="0001-0001">ನಾನು ಪೋಲೀಸ್ ಕಂಪ್ಲೈಂಟ್ ಕೊಟ್ಟೆ </li>
-<li page="0001-0001">ಸಹಕರಿಸುವ ಸಮಸ್ಯೆ </li>
-<li page="0001-0001">ಸಾಂಸದಿಕ ನಿದ್ರೆ </li>
-<li page="0001-0001">ತೊಗಲಖ ಲ್ಯಾಂಡಿನಿಂದೊಂದು ವರದಿ </li>
-<li page="0001-0001">ಗೋಹತ್ಯೆ ಮಾಡಿರಿ </li>
-<li page="0001-0001">ಕುರಿನಾಡಿನಲ್ಲಿ ಕಲಿಗಾಲ </li>
-<li page="0001-0001">ಕ್ರಿಕೆಟ್ ಕಾಮೆಂಟ್ರಿ</li>
-</ol>
+		<li page="0000e-0000f">ಎರಡು ಮಾತು</li>
+		<li page="0001-0008">೧. ಹಾಸ್ಯ ಮೀಮಾಂಸೆ</li>
+		<li page="0009-0015">೨. ನಿಮ್ಮ ಅಲರ್ಜಿ ಯಾವುದು?</li>
+		<li page="0016-0019">೩. ಎಷ್ಟು ಕರ್ನಾಟಕ?</li>
+		<li page="0020-0030">೪. ಭಾವೀ ಜಗತ್ತಿನಲ್ಲಿ ಮಹಿಳೆಯರ ಸ್ಥಾನ</li>
+		<li page="0031-0036">೫. ಕಪ್ಪು ಕಪ್ಪೆಂದೇಕೆ ಬೀಳುಗಳೆವಿರಿ?</li>
+		<li page="0037-0039">೬. ವಾಲ್ಮೀಕಿಯ ಸಂತಾನ</li>
+		<li page="0040-0045">೭. ಮದುವೆಯಾದರೂ ಸುಖ ಹೇಗೆ ಪಡೆಯಬೇಕು?</li>
+		<li page="0046-0053">೮. ದೇವತಾ ಚಟಗಳು</li>
+		<li page="0054-0060">೯. ವಾನರಾಯಣ</li>
+		<li page="0061-0066">೧೦. ಶಾಸ್ತ್ರ ಮಂಜರಿ</li>
+		<li page="0067-0073">೧೧. ಶಕುನಿ ಶಂಕಯ್ಯನವರ ಚರಿತ್ರೆ</li>
+		<li page="0074-0083">೧೨. ವಿಪರೀತ ಧ್ಯಾನಯೋಗಿಯೊಡನೆ ಒಂದು ಗಳಿಗೆ</li>
+		<li page="0084-0088">೧೩. ತಾಯಿ ಬೇಕಂತೆ</li>
+		<li page="0089-0101">೧೪. ತರಲೆ ತಾರಮ್ಮಯ್ಯನವರು</li>
+		<li page="0102-0105">೧೫. ತ್ರಿಮೂರ್ತಿಗಳ ವಿಚಾರಣಾ ವೈಖರಿ</li>
+		<li page="0106-0116">೧೬. ಮಶಕ ಪುರಾಣ</li>
+		<li page="0117-0124">೧೭. ನಾನು ಪೋಲೀಸ್ ಕಂಪ್ಲೈಂಟ್ ಕೊಟ್ಟೆ!</li>
+		<li page="0125-0132">೧೮. ಸಹಕರಿಸುವ ಸಮಸ್ಯೆ</li>
+		<li page="0133-0137">೧೯. ಸಾಂಸದಿಕ ನಿದ್ರೆ</li>
+		<li page="0138-0148">೨೦. ತೊಗಲಖ ಲ್ಯಾಂಡಿನಿಂದೊಂದು ವರದಿ</li>
+		<li page="0149-0155">೨೧. ಗೋಹತ್ಯೆ ಮಾಡಿರಿ</li>
+		<li page="0156-0162">೨೨. ಕುರಿನಾಡಿನಲ್ಲಿ ಕಲಿಗಾಲ</li>
+		<li page="0163-0169">೨೩. ಕ್ರಿಕೆಟ್ ಕಾಮೆಂಟ್ರಿ</li>
+		<li page="0170-0171">ಪಾ. ವೆಂ. ನಡೆದು ಬಂದ ದಾರಿ</li>
+	</ol>
 </div>
