--- a/application/views/flat/3-Books/029.xhtml
+++ b/application/views/flat/3-Books/029.xhtml
@@ -1,33 +1,33 @@
 ﻿<div data-bcode="029">
 	<h1 class="title" data-language="kannada">ವಿಪರೀತ</h1>
 	<ol>
-<li page="0001-0001">“ವಿಪರೀತ'ದ ಅಂತರಂಗ </li>
-<li page="0001-0001">ಕೋಟ್ಯಧಿಪತಿಯ ಕೋಟಲೆಗಳು </li>
-<li page="0001-0001">ನರಿ, ಹಾವು ಮತ್ತು ಹೇಡಿ  </li>
-<li page="0001-0001">ರಾತ್ರಿ ಸಮಸ್ಯೆ </li>
-<li page="0001-0001">ಕವಿಶೌರ್ಯ ಪ್ರಕರಣಂ  </li>
-<li page="0001-0001">ವರ್ಗರಹಿತ ವಿಶ್ವವಿದ್ಯಾಲಯ </li>
-<li page="0001-0001">ನಿಂದಕರಿರಬೇಕಿರಬೇಕು  </li>
-<li page="0001-0001">ನಾನು ಪವಾಡಗಳನ್ನು ನಂಬುತ್ತೇನೆ </li>
-<li page="0001-0001">ಕಳಾಪ್ರ ಪೂರ್ಣ ಆಯುಷ್ಕರ್ಮಶಾಲಾ </li>
-<li page="0001-0001">ಯದ್ವಾತದ್ವಾ ಯೆಂಕಣ್ಣಯ್ಯನವರು </li>
-<li page="0001-0001">ಹಾಲು ಮತ್ತು ಕೋಲು  </li>
-<li page="0001-0001">ಈರುಳ್ಳಿ ಮಹಿಮೆ  </li>
-<li page="0001-0001">ಹಳೇದಾದರೂ ಹೊಸದು  </li>
-<li page="0001-0001">ದೇವಾಸ್ತೃಪ್ತೃಂತು  </li>
-<li page="0001-0001">ಸಲಹೆಗಳು ಅನ್-ಲಿಮಿಟೆಡ್ </li>
-<li page="0001-0001">ನಗ್ನಾ ಪರಾಧ  </li>
-<li page="0001-0001">ಆತ್ಮಸಾಕ್ಷಿಗೆ ಕೈಪಿಡಿ </li>
-<li page="0001-0001">ದ್ರೌಪದೀವಸ್ತ್ರಾಪಹರಣಂ </li>
-<li page="0001-0001">ಮಂತ್ರಿಗಳ ದಿನಚರಿ </li>
-<li page="0001-0001">ಸೇವಕರೇ ಎಲ್ಲಾ </li>
-<li page="0001-0001">ಮನುಷ್ಯ ನಗದಿದ್ದರೆ </li>
-<li page="0001-0001">ನಶ್ಯಂ ವಶ್ಯಕರಂ </li>
-<li page="0001-0001">ಕ್ಯೂ ವಿಚಾರಲಹರಿ</li>
-<li page="0001-0001">ದೇವಚರ್ಚೆ </li>
-<li page="0001-0001">ರಾಜಕೀಯ ಜಾಡ್ಯಗಳು </li>
-<li page="0001-0001">ಬೆಳಗ್ಗೆ ಏಳುವುದು </li>
-<li page="0001-0001">ಮದುವೆಯಾದರೂ ಸುಖಪಡುವುದು ಹೇಗೆ ...</li>
-</ol>
+		<li page="0003-0003">ಅರಿಕೆ</li>
+		<li page="0007-0016">ಕೋಟ್ಯಧಿಪತಿಯ ಕೋಟಲೆಗಳು</li>
+		<li page="0016-0019">ನರಿ, ಹಾವು ಮತ್ತು ಹೇಡಿ</li>
+		<li page="0019-0020">ರಾತ್ರಿ ಸಮಸ್ಯೆ</li>
+		<li page="0020-0023">ಕವಿಶೌರ್ಯ ಪ್ರಕರಣಂ</li>
+		<li page="0023-0026">ವರ್ಗರಹಿತ ವಿಶ್ವವಿದ್ಯಾಲಯ</li>
+		<li page="0026-0031">ನಿಂದಕರಿರಬೇಕಿರಬೇಕು</li>
+		<li page="0031-0038">ನಾನು ಪವಾಡಗಳನ್ನು ನಂಬುತ್ತೇನೆ</li>
+		<li page="0038-0048">ಕಳಾಪ್ರಪೂರ್ಣ ಆಯುಷ್ಕರ್ಮಶಾಲಾ</li>
+		<li page="0048-0059">ಯದ್ವಾತದ್ವಾ ಯೆಂಕಣ್ಣಯ್ಯನವರು</li>
+		<li page="0059-0065">ಹಾಲು ಮತ್ತು ಕೋಲು</li>
+		<li page="0065-0069">ಈರುಳ್ಳೀ ಮಹಿಮೆ</li>
+		<li page="0069-0076">ಹಳೇದಾದರೂ ಹೊಸದು</li>
+		<li page="0077-0085">ದೇವಾಸ್ತೃಪ್ತ್ಯಂತು</li>
+		<li page="0085-0092">ಸಲಹೆಗಳು ಅನ್-ಲಿಮಿಟೆಡ್</li>
+		<li page="0092-0095">ನಗ್ನಾಪರಾಧ</li>
+		<li page="0096-0101">ಆತ್ಮಸಾಕ್ಷಿಗೆ ಕೈಪಿಡಿ</li>
+		<li page="0101-0104">ದ್ರೌಪದೀವಸ್ತ್ರಾಪಹರಣಂ</li>
+		<li page="0105-0111">ಮಂತ್ರಿಗಳ ದಿನಚರಿ</li>
+		<li page="0112-0120">ಸೇವಕರೇ ಎಲ್ಲಾ</li>
+		<li page="0120-0126">ಮನುಷ್ಯ ನಗದಿದ್ದರೆ</li>
+		<li page="0126-0132">ನಶ್ಯಂ ವಶ್ಯಕರಂ</li>
+		<li page="0132-0137">ಕ್ಯೂ ವಿಚಾರಲಹರಿ</li>
+		<li page="0137-0142">ದೇವಚರ್ಚೆ</li>
+		<li page="0143-0146">ರಾಜಕೀಯ ಜಾಡ್ಯಗಳು</li>
+		<li page="0146-0154">ಬೆಳಗ್ಗೆ ಏಳುವುದು</li>
+		<li page="0154-0162">ಮದುವೆಯಾದರೂ ಸುಖಪಡುವುದು ಹೇಗೆ?</li>
+	</ol>
 </div>
 
