--- a/application/views/flat/3-Books/030.xhtml
+++ b/application/views/flat/3-Books/030.xhtml
@@ -1,28 +1,28 @@
 ﻿<div data-bcode="030">
 	<h1 class="title" data-language="kannada">ಪ್ರಹಾರ</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ಶ್ರೀ ಗಣೇಶಾಯ ನಮಃ </li>
-<li page="0001-0001">ಸ್ವಲ್ಪ ಅವಿವೇಕವಿರಲಿ </li>
-<li page="0001-0001">ಕೊಡೆಯೆಂಬರ್ ಆತಪತ್ರವನ್ </li>
-<li page="0001-0001">ಸೀರೆ ಮತ್ತು ಮಹಾಭಾರತ </li>
-<li page="0001-0001">ಶಬ್ದಚ್ಛಟ ಎಂಬ ರೋಗ </li>
-<li page="0001-0001">ಹೆಸರಿನಿಂದೇನು ? </li>
-<li page="0001-0001">ಬಫೆಲೋಲ್ಯಾಂಡ್ </li>
-<li page="0001-0001">ನನ್ನ ಸಂಶೋಧನೆಗಳು </li>
-<li page="0001-0001">ಶ್ರೀಮದ್ರಾಮಾಯಣದರ್ಶನಂ </li>
-<li page="0001-0001">ನಾನು ಕವಿತೆ ಬರೆಯತೊಡಗಿದ್ದು </li>
-<li page="0001-0001">ಪಿಟೀಲು ಬಾರಿಸಿ ಬೆಳೆ ಹೆಚ್ಚಿಸಿರಿ </li>
-<li page="0001-0001">ಹೆಂಗಸರನ್ನು ಹೇಗೆ ಅರ್ಥ ಮಾಡಿಕೊಳ್ಳಬೇಕು </li>
-<li page="0001-0001">ನಾ ಕಂಡ ಕತ್ತೆ </li>
-<li page="0001-0001">ದೀಪಾವಳಿ ಕಥಾಶ್ರವಣಂ </li>
-<li page="0001-0001">ಜಲಚಿಕಿತ್ಸಾ ಪ್ರವೀಣ, ಗೌಳಿಗ </li>
-<li page="0001-0001">ಬುದ್ದಿವಂತರಿಗಾಗಿ ಪಂಚಶೀಲ ಕೈಪಿಡಿ </li>
-<li page="0001-0001">ಭವಿಷ್ಯ ವಿಕ್ಷೇಪಣಂ </li>
-<li page="0001-0001">ಸಂಘಂ ಶರಣಂ ಗಚ್ಛಾಮಿ </li>
-<li page="0001-0001">ಮಾಸ್ತರರಿಗೆ ಮದುವೆ ಬೇಕು</li>
-<li page="0001-0001"> ಶ್ರೀಮನ್ನಾರಾಯಣನ ನಿವೃತ್ತಿ </li>
-<li page="0001-0001"> ಬ್ರಹ್ಮ “ಹೂ” ಎಂದ</li>
-</ol>
+		<li page="0000g-0000g">ಮುನ್ನುಡಿ</li>
+		<li page="0001-0010">ಶ್ರೀ ಗಣೇಶಾಯ ನಮಃ</li>
+		<li page="0011-0014">ಸ್ವಲ್ಪ ಅವಿವೇಕವಿರಲಿ</li>
+		<li page="0015-0020">ಕೊಡೆಯೆಂಬರ್ ಆತಪತ್ರವನ್</li>
+		<li page="0021-0025">ಸೀರೆ ಮತ್ತು ಮಹಾಭಾರತ</li>
+		<li page="0026-0033">ಶಬ್ದಚ್ಛಟ ಎಂಬ ರೋಗ</li>
+		<li page="0034-0037">ಹೆಸರಿನಿಂದೇನು?</li>
+		<li page="0038-0047">ಬಫೆಲೋಲ್ಯಾಂಡ್</li>
+		<li page="0048-0054">ನನ್ನ ಸಂಶೋಧನೆಗಳು</li>
+		<li page="0055-0063">ಶ್ರೀಮದ್ರಾಮಾಯಣದರ್ಶನಂ</li>
+		<li page="0064-0068">ನಾನು ಕವಿತೆ ಬರೆಯತೊಡಗಿದ್ದು</li>
+		<li page="0069-0076">ಪಿಟೀಲು ಬಾರಿಸಿ ಬೆಳೆ ಹೆಚ್ಚಿಸಿರಿ</li>
+		<li page="0077-0081">ಹೆಂಗಸರನ್ನು ಹೇಗೆ ಅರ್ಥ ಮಾಡಿಕೊಳ್ಳಬೇಕು?</li>
+		<li page="0082-0087">ನಾ ಕಂಡ ಕತ್ತೆ</li>
+		<li page="0088-0093">ದೀಪಾವಳೀ ಕಥಾಶ್ರವಣಂ</li>
+		<li page="0094-0099">ಜಲಚಿಕಿತ್ಸಾ ಪ್ರವೀಣ, ಗೌಳಿಗ</li>
+		<li page="0100-0103">ಬುದ್ಧಿವಂತರಿಗಾಗಿ ಪಂಚಶೀಲ ಕೈಪಿಡಿ</li>
+		<li page="0104-0107">ಭವಿಷ್ಯ ವಿಕ್ಷೇಪಣಂ</li>
+		<li page="0108-0112">ಸಂಘಂ ಸರಣಂ ಗಚ್ಛಾಮಿ</li>
+		<li page="0113-0115">ಮಾಸ್ತರರಿಗೆ ಮದುವೆ ಬೇಕು</li>
+		<li page="0116-0122">ಶ್ರೀಮನ್ನಾರಾಯಣನ ನಿವೃತ್ತಿ</li>
+		<li page="0123-0128"> ಬ್ರಹ್ಮ “ಹೂ” ಎಂದ</li>
+	</ol>
 </div>
 
