--- a/application/views/flat/3-Books/002.xhtml
+++ b/application/views/flat/3-Books/002.xhtml
@@ -1,43 +1,58 @@
 ﻿<div data-bcode="002">
 	<h1 class="title" data-language="kannada">ಬ್ರಾಹ್ಮಣರೇನು ಮಾಡಬೇಕು?</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ಭಾಗ -1: ಬ್ರಾಹ್ಮಣ್ಯ</li>
-<li page="0001-0001">ಬ್ರಾಹ್ಮಣರೇನು ಮಾಡಬೇಕು ? </li>
-<li page="0001-0001">-ಒಂದು ಪ್ರತಿಕ್ರಿಯೆ </li>
-<li page="0001-0001">-ಪ್ರತಿಕ್ರಿಯೆಗಳಿಗೆ ಉತ್ತರ </li>
-<li page="0001-0001">ಗೊಡ್ಡು ಬ್ರಾಹ್ಮಣ್ಯ ಮತ್ತು ಧೂರ್ತ ಚಾರ್ವಾಕ ಮತ (ಮತ್ತೊಂದು ಪ್ರತಿಕ್ರಿಯೆಗೆ ಉತ್ತರ) </li>
-<li page="0001-0001">ಹಿಂದಿಲ್ಲ ಸ್ವಾಮಿ ಮುಂದಿಲ್ಲ (ಪಾವೆಂ ಅವರ ಹರಟೆಯ ರೂಪದ ಪ್ರತಿಕ್ರಿಯೆ)</li>
-<li page="0001-0001">ಭಾಗ - 2: ಧಾರ್ಮಿಕ ನೆಲೆಯಲ್ಲಿ </li>
-<li page="0001-0001">ನನ್ನ ದೃಷ್ಟಿಯಲ್ಲಿ ಧರ್ಮ </li>
-<li page="0001-0001">ಗಣಪತಿಯ ಮೂಲಗಳು </li>
-<li page="0001-0001">ದೈವ 'ನೊಂದೆ' ಎಂದಿತು. ಅದಕ್ಕೇ 'ಮಹಾಭಾರತ'ವಾಯಿತು </li>
-<li page="0001-0001">ಧರ್ಮಸಂಕಟ  </li>
-<li page="0001-0001">ಶಾಸ್ತ್ರವನ್ನು ಏಕೆ ಪಾಲಿಸಬೇಕು ?</li>
-<li page="0001-0001">ಪ್ರತ್ಯಕ್ಷ; ಶಾಸ್ತ್ರ </li>
-<li page="0001-0001">ಮಠಗಳು: ಅವು ಏನು ಮಾಡಬಲ್ಲವು ?</li>
-<li page="0001-0001">ಭಾಗ - 3: ಚಿಂತನಪರ</li>
-<li page="0001-0001">ಜೀವನಕ್ಕೆ ಅರ್ಥವುಂಟೆ ? </li>
-<li page="0001-0001">ಬುದ್ದಿಜೀವಿ, ಸಮಾಜ ಮತ್ತು ಸಾಹಿತ್ಯ</li>
-<li page="0001-0001">ಮಾನವ ಪ್ರವೃತ್ತಿ ಮತ್ತು ಮೌಲ್ಯಗಳು </li>
-<li page="0001-0001">ಸುಖ ಬೇಕಾದರೆ ಪ್ರೀತಿ ಬೇಕು </li>
-<li page="0001-0001">ಬೇಕು - ಪಾಪ ಪ್ರಜ್ಞೆ </li>
-<li page="0001-0001">ಸ್ವಾರ್ಥ-ತ್ಯಾಗ ? ಎಲ್ಲ ಲೊಳಲೊಟ್ಟೆಯಂತೆ</li>
-<li page="0001-0001">ಭಾಗ - 4: ವೈಚಾರಿಕ</li>
-<li page="0001-0001">ಪ್ರಜ್ಞಾವಾದ: ದಿಟ ಮತ್ತು ಸಟೆ </li>
-<li page="0001-0001">ಪ್ರಾಮಾಣಿಕತೆಯಲ್ಲಿ ಸುಖವಿದೆ </li>
-<li page="0001-0001">ಕೃತಜ್ಞತೆ ಎಂಬ ಸದ್ಗುಣ </li>
-<li page="0001-0001">ಅಹಿಂಸೆ, ಶಾಕಾಹಾರ ಇತ್ಯಾದಿ </li>
-<li page="0001-0001">ಸಹಿಷ್ಣುತೆ </li>
-<li page="0001-0001">ಆಜ್ಞಾಪಾಲನೆ ಮನುಷ್ಯ ಸ್ವಭಾವವೆ? </li>
-<li page="0001-0001">'ನಾನು' ಹೋದರೆ ಸ್ವರ್ಗಕ್ಕೆ ಹೋಗಬಹುದು</li>
-<li page="0001-0001">ಭಾಗ - 5: ಶೈಕ್ಷಣಿಕ </li>
-<li page="0001-0001">ಶಿಕ್ಷಣ ಮತ್ತು ಜೀವನಮೌಲ್ಯಗಳು</li>
-<li page="0001-0001">ಉಚ್ಚಶಿಕ್ಷಣ - ಒಂದು ಪ್ರತಿಕ್ರಿಯೆ </li>
-<li page="0001-0001">ಸಂಸ್ಕೃತ ಶಿಕ್ಷಣ: ಹೊಸ ರೀತಿ ಬೇಕು</li>
-<li page="0001-0001">ಯುವಕರೇನು ಮಾಡಬೇಕು ?</li>
-<li page="0001-0001">ವಿದ್ಯಾರ್ಥಿಗಳು ಯೋಚಿಸಬೇಕು</li>
-<li page="0001-0001">ನಮ್ಮ ಮಕ್ಕಳನ್ನು ನಾವು ಹೀಗೆ ಬಿಡಬೇಕೆ ?</li>
-<li page="0001-0001">ಸಾಮಾಜಿಕ ಬದಲಾವಣೆ ಮತ್ತು ಸಾಮಾಜಿಕ ಮನೋವೃತ್ತಿಗಳು </li>
-</ol>
+		<li page="0005-0013">ಪ್ರಸ್ತಾವನೆ</li>
+		<li page="0017-0046">ಭಾಗ - 1: ಬ್ರಾಹ್ಮಣ್ಯ
+			<ol>
+				<li page="0019-0026">ಬ್ರಾಹ್ಮಣರೇನು ಮಾಡಬೇಕು?<br /> (ಜ್ವಲಂತ ಸಮಸ್ಯೆಯ ನಿರ್ವಿಕಾರ ವಿವೇಚನೆ)</li>
+				<li page="0027-0028">ಒಂದು ಪ್ರತಿಕ್ರಿಯೆ</li>
+				<li page="0029-0033">-ಪ್ರತಿಕ್ರಿಯೆಗಳಿಗೆ ಉತ್ತರ</li>
+				<li page="0034-0043">‘ಗೊಡ್ಡು ಬ್ರಾಹ್ಮಣ್ಯ ಮತ್ತು ಧೂರ್ತ ಚಾರ್ವಾಕ ಮತ’<br /> (ಮತ್ತೊಂದು ಪ್ರತಿಕ್ರಿಯೆ)</li>
+				<li page="0044-0046">ಹಿಂದಿಲ್ಲ ಸ್ವಾಮಿ ಮುಂದಿಲ್ಲ!<br /> (ಪಾವೆಂ ಅವರ ಹರಟೆಯ ರೂಪದ ಪ್ರತಿಕ್ರಿಯೆ)</li>
+			</ol>
+		</li>
+		<li page="0047-0071">ಭಾಗ - 2: ಧಾರ್ಮಿಕ ನೆಲೆ
+			<ol>
+				<li page="0049-0052">ನನ್ನ ದೃಷ್ಟಿಯಲ್ಲಿ ಧರ್ಮ</li>
+				<li page="0053-0054">ಗಣಪತಿಯ ಮೂಲಗಳು</li>
+				<li page="0055-0058">ದೈವ 'ನೊಂದೆ' ಎಂದಿತು. ಅದಕ್ಕೇ 'ಮಹಾಭಾರತ'ವಾಯಿತು</li>
+				<li page="0059-0059">ಧರ್ಮಸಂಕಟ </li>
+				<li page="0060-0062">ಶಾಸ್ತ್ರವನ್ನು ಏಕೆ ಪಾಲಿಸಬೇಕು?</li>
+				<li page="0063-0064">ಪ್ರತ್ಯಕ್ಷ; ಶಾಸ್ತ್ರ</li>
+				<li page="0065-0071">ಮಠಗಳು: ಅವು ಏನು ಮಾಡಬಲ್ಲವು?</li>
+			</ol>
+		</li>
+		<li page="0073-0115">ಭಾಗ - 3: ಚಿಂತನಪರ
+			<ol>
+				<li page="0075-0075">ಜೀವನಕ್ಕೆ ಅರ್ಥವುಂಟೆ?</li>
+				<li page="0076-0083">ಬುದ್ಧಿಜೀವಿ, ಸಮಾಜ ಮತ್ತು ಸಾಹಿತ್ಯ (ಆಲೋಚನೆ)</li>
+				<li page="0084-0099">ಮಾನವ ಪ್ರವೃತ್ತಿ ಮತ್ತು ಮೌಲ್ಯಗಳು</li>
+				<li page="0100-0104">ಸುಖ ಬೇಕಾದರೆ ಪ್ರೀತಿ ಬೇಕು<br /> (ಬರ್ಟ್ರಂಡ್ ರಸೆಲ್ಲರ ವಿಚಾರಗಳನ್ನನುಸರಿಸಿ)</li>
+				<li page="0105-0107">ಬೇಕು-ಪಾಪಪ್ರಜ್ಞೆ</li>
+				<li page="0108-0115">ಸ್ವಾರ್ಥ - ತ್ಯಾಗ? ಎಲ್ಲ ಲೊಳಲೊಟ್ಟೆಯಂತೆ</li>
+			</ol>
+		</li>
+		<li page="0117-0149">ಭಾಗ - 4: ವೈಚಾರಿಕ
+			<ol>
+				<li page="0119-0120">ಪ್ರಜ್ಞಾವಾದ: ದಿಟ ಮತ್ತು ಸಟೆ</li>
+				<li page="0121-0125">ಪ್ರಾಮಾಣಿಕತೆಯಲ್ಲಿ ಸುಖವಿದೆ</li>
+				<li page="0126-0130">ಕೃತಜ್ಞತೆ ಎಂಬ ಸದ್ಗುಣ</li>
+				<li page="0131-0135">ಅಹಿಂಸೆ, ಶಾಕಾಹಾರ ಇತ್ಯಾದಿ</li>
+				<li page="0136-0140">ಸಹಿಷ್ಣುತೆ</li>
+				<li page="0141-0145">ಆಜ್ಞಾಪಾಲನೆ ಮನುಷ್ಯ ಸ್ವಭಾವವೆ?</li>
+				<li page="0146-0149">'ನಾನು' ಹೋದರೆ ಸ್ವರ್ಗಕ್ಕೆ ಹೋಗಬಹುದು</li>
+			</ol>
+		</li>
+		<li page="0151-0198">ಭಾಗ - 5: ಶೈಕ್ಷಣಿಕ
+			<ol>
+				<li page="0153-0163">ಶಿಕ್ಷಣ ಮತ್ತು ಜೀವನಮೌಲ್ಯಗಳು</li>
+				<li page="0164-0165">ಉಚ್ಚ ಶಿಕ್ಷಣ - ಒಂದು ಪ್ರತಿಕ್ರಿಯೆ</li>
+				<li page="0166-0170">ಸಂಸ್ಕೃತ ಶಿಕ್ಷಣ: ಹೊಸ ರೀತಿ ಬೇಕು</li>
+				<li page="0171-0177">ಯುವಕರೇನು ಮಾಡಬೇಕು?</li>
+				<li page="0178-0183">ವಿದ್ಯಾರ್ಥಿಗಳು ಯೋಚಿಸಬೇಕು</li>
+				<li page="0184-0187">ನಮ್ಮ ಮಕ್ಕಳನ್ನು ನಾವು ಹೀಗೆ ಬಿಡಬೇಕೆ?</li>
+				<li page="0188-0198">ಸಾಮಾಜಿಕ ಬದಲಾವಣೆ ಮತ್ತು ಸಾಮಾಜಿಕ ಮನೋವೃತ್ತಿಗಳು</li>
+			</ol>
+		</li>
+	</ol>
 </div>
