--- a/application/views/flat/3-Books/008.xhtml
+++ b/application/views/flat/3-Books/008.xhtml
@@ -1,38 +1,38 @@
 ﻿<div data-bcode="008">
-	<h1 class="title" data-language="kannada">ಬೆಂಬಿಡದ ಭೂತಗಳು</h1>
+	<h1 class="title" data-language="kannada">ಬೆಂಬಿಡದ ಭೂತಗಳು<br /> (ಸ್ವತಂತ್ರ ಭಾರತದ ಸಂಕಟಗಳ ಸರಮಾಲೆ)</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ</li>
-<li page="0001-0001">ನಿಮಿತ್ತ : ಡಾ. ಸರ್ವಮಂಗಳಾ ಪಿ.ಆರ್</li>
-<li page="0001-0001">ನಮ್ಮ ತಂದೆ ಪಾವೆಂ : ರಾಧಾಕೃಷ್ಣ ಆಚಾರ್</li>
-<li page="0001-0001">(ಪರಿಚಯ) :  ಶಿವಾನಂದ ಜೋಶಿ</li>
-<li page="0001-0001">ಧನ್ಯೋಸ್ಮಿ  :  ಶಿವಾನಂದ ಜೋಶಿ</li>
-<li page="0001-0001">ಸ್ವಾತಂತ್ರ್ಯ : ಅನಿವಾರ್ಯದ ಔದಾರ್ಯ </li>
-<li page="0001-0001">ವ್ಯಕ್ತಿ. ಪ್ರಜಾಪ್ರಭುತ್ವ. ನೈತಿಕತೆ ಇತ್ಯಾದಿ </li>
-<li page="0001-0001">ಗಲಭೆಗಳು, ಅಧಿಕಾರದಾಹ, ಪ್ರಜಾತಂತ್ರ ಇತ್ಯಾದಿ </li>
-<li page="0001-0001">ಪ್ರಜಾಪ್ರಭುತ್ವ ಹಾಗೂ ಹೈಕಮಾಂಡ್ ಸಂಸ್ಕೃತಿ </li>
-<li page="0001-0001">ಚುನಾವಣೆಗಳ ಹೊಸಯುಗ </li>
-<li page="0001-0001">ಚುನಾವಣೆ ಹಾಗೂ ಬದಲಾವಣೆ </li>
-<li page="0001-0001">ಚುನಾವಣೆ ಮತದಾರ ಇತ್ಯಾದಿ </li>
-<li page="0001-0001">ಅಧ್ಯಕ್ಷ ಪದ್ಧತಿ : ಕೆಲ ಚಿಂತನೆಗಳು </li>
-<li page="0001-0001">ಅಧ್ಯಕ್ಷೀಯ ಪದ್ಧತಿ ಸೂಕ್ತವಹುದೆ? </li>
-<li page="0001-0001">ಚಳುವಳಿಗಳು ಮತ್ತು ದಬ್ಬಾಳಿಕೆ </li>
-<li page="0001-0001">ಸುಗ್ರೀವಾಜ್ಞೆಗಳು </li>
-<li page="0001-0001">ಶಾಸನಾಂಗದ ಅಧಿಕಾರ ವ್ಯಾಪ್ತಿ. </li>
-<li page="0001-0001">ಕೇಂದ್ರ -ರಾಜ್ಯ ಅಧಿಕಾರ ಪರಿಸಮನ </li>
-<li page="0001-0001">ನ್ಯಾಯಾಂಗ - ಕಾರ್ಯಾಂಗ ತಿಕ್ಕಾಟ</li>
-<li page="0001-0001">ಮೈಸೂರು - ಮಹಾರಾಷ್ಟ್ರ ಗಡಿತಂಟೆ - ೧ </li>
-<li page="0001-0001">ಗಡಿತಂಟೆ - ವಿವೇಕ ಮತ್ತು ಅವಿವೇಕ - ೨ </li>
-<li page="0001-0001">ಗಡಿತಂಟೆ -ಮಹಾಜನ ವರದಿಯ ದುರದೃಷ್ಟ - ೩ </li>
-<li page="0001-0001">ಮತ್ತೊಮ್ಮೆ ಗಡಿತಂಟೆ - ೪ </li>
-<li page="0001-0001">ಆಂಧ್ರದಲ್ಲಿ ನಡೆದಿರುವುದೇನು? </li>
-<li page="0001-0001">ಭಾರತದ ನೆರೆ - ಹೊರೆ </li>
-<li page="0001-0001">ಕಾಶ್ಮೀರದಲ್ಲಿ ನಾವೇಕೆ ಹೋರಾಡುತ್ತಿದ್ದೇವೆ</li>
-<li page="0001-0001">ಜಾತೀಯತೆಯ ಪ್ರಶ್ನೆ : ಅರ್ಥ ಮತ್ತು ಅನರ್ಥ</li>
-<li page="0001-0001">ರಾಜಕಾರಣವೊಂದು ವೃತ್ತಿಯಾಗಬೇಕು </li>
-<li page="0001-0001">ಭ್ರಷ್ಟಾಚಾರ ಸ್ವಾಭಾವಿಕ ದೌರ್ಬಲ್ಯವೇ? </li>
-<li page="0001-0001">ಭ್ರಷ್ಟಾಚಾರಕ್ಕೂ ಬೇಕೆ ಆಚಾರ ಸಂಹಿತೆ </li>
-<li page="0001-0001">ಕಲ್ಯಾಣ ರಾಜ್ಯ ಕಲ್ಯಾಣ ತಂದೀತೇ? </li>
-<li page="0001-0001">ಈ ದೇಶ ಅಷ್ಟು ಕೆಟ್ಟು ಹೋಗಿದೆಯೇ?</li>
-<li page="0001-0001">ತೇಲಿದ್ದೆಷ್ಟು ಈಸಿದ್ದೆಷ್ಟು? (ಪಾವೆಂ ಆತ್ಮಾವಲೋಕನ)</li>
-</ol>
+		<li page="0000e-0000e">ಪ್ರಕಾಶಕರ ಮಾತು</li>
+		<li page="0000f-0000f">ಪರಿಚಯ</li>
+		<li page="0000g-0000h">ನಿಮಿತ್ತಂ - ಡಾ. ಸರ್ವಮಂಗಳಾ ಆಚಾರ್ಯ</li>
+		<li page="0000i-0000l">ಧನ್ಯೋಸ್ಮಿ - ಶಿವಾನಂದ ಜೋಶಿ</li>
+		<li page="0000m-0000t">ನಮ್ಮ ತಂದೆ ಪಾವೆಂ - ಪ್ರೊ. ರಾಧಾಕೃಷ್ಣ ಆಚಾರ್ಯ</li>
+		<li page="0001-0010">ಸ್ವಾತಂತ್ರ್ಯ : ಅನಿವಾರ್ಯದ ಔದಾರ್ಯ</li>
+		<li page="0011-0015">ವ್ಯಕ್ತಿ, ಪ್ರಜಾಪ್ರಭುತ್ವ, ನೈತಿಕತೆ ಇತ್ಯಾದಿ</li>
+		<li page="0016-0022">ಗಲಭೆಗಳು, ಅಧಿಕಾರದಾಹ, ಪ್ರಜಾತಂತ್ರ ಇತ್ಯಾದಿ</li>
+		<li page="0023-0027">ಪ್ರಜಾಪ್ರಭುತ್ವ ಹಾಗೂ ಹೈಕಮಾಂಡ್ ಸಂಸ್ಕೃತಿ</li>
+		<li page="0028-0038">ಚುನಾವಣೆಗಳ ಹೊಸಯುಗ</li>
+		<li page="0039-0043">ಚುನಾವಣೆ ಹಾಗೂ ಬದಲಾವಣೆ</li>
+		<li page="0044-0049">ಚುನಾವಣೆ, ಮತದಾರ ಇತ್ಯಾದಿ</li>
+		<li page="0050-0060">ಅಧ್ಯಕ್ಷ ಪದ್ಧತಿ : ಕೆಲ ಚಿಂತನೆಗಳು</li>
+		<li page="0061-0071">ಅಧ್ಯಕ್ಷೀಯ ಪದ್ಧತಿ ಸೂಕ್ತವಹುದೆ?</li>
+		<li page="0072-0078">ಚಳುವಳಿಗಳು ಮತ್ತು ದಬ್ಬಾಳಿಕೆ</li>
+		<li page="0079-0088">ಸುಗ್ರೀವಾಜ್ಞೆಗಳು</li>
+		<li page="0089-0095">ಶಾಸನಾಂಗದ ಅಧಿಕಾರ ವ್ಯಾಪ್ತಿ</li>
+		<li page="0096-0102">ಕೇಂದ್ರ - ರಾಜ್ಯ ಅಧಿಕಾರ ಹಂಚಿಕೆ ಪರಿಸಮನ</li>
+		<li page="0103-0111">ನ್ಯಾಯಾಂಗ - ಕಾರ್ಯಾಂಗ ತಿಕ್ಕಾಟ</li>
+		<li page="0112-0123">ಮೈಸೂರು - ಮಹಾರಾಷ್ಟ್ರ ಗಡಿತಂಟೆ  ಏನು, ಏಕೆ? - ೧</li>
+		<li page="0124-0130">ಗಡಿತಂಟೆ - ೨ - ವಿವೇಕ ಮತ್ತು ಅವಿವೇಕ</li>
+		<li page="0131-0135">ಮಹಾಜನ ವರದಿಯ ದುರದೃಷ್ಟ - ೩</li>
+		<li page="0136-0141">ಮತ್ತೊಮ್ಮೆ ಗಡಿತಂಟೆ - ೪</li>
+		<li page="0142-0154">ಆಂಧ್ರದಲ್ಲಿ ನಡೆದಿರುವುದೇನು?</li>
+		<li page="0155-0168">ಭಾರತದ ನೆರೆ - ಹೊರೆ</li>
+		<li page="0169-0181">ಕಾಶ್ಮೀರದಲ್ಲಿ ನಾವೇಕೆ ಹೋರಾಡುತ್ತಿದ್ದೇವೆ?</li>
+		<li page="0182-0191">ಜಾತೀಯತೆಯ ಪ್ರಶ್ನೆ : ಅರ್ಥ ಮತ್ತು ಅನರ್ಥ</li>
+		<li page="0192-0197">ರಾಜಕಾರಣವೊಂದು ವೃತ್ತಿಯಾಗಬೇಕು</li>
+		<li page="0198-0203">ಭ್ರಷ್ಟಾಚಾರ ಸ್ವಾಭಾವಿಕ ದೌರ್ಬಲ್ಯವೇ?</li>
+		<li page="0204-0210">ಭ್ರಷ್ಟಾಚಾರಕ್ಕೂ ಬೇಕೆ ಆಚಾರ ಸಂಹಿತೆ?</li>
+		<li page="0211-0214">ಕಲ್ಯಾಣ ರಾಜ್ಯ ಕಲ್ಯಾಣ ತಂದೀತೇ?</li>
+		<li page="0215-0222">ಈ ದೇಶ ಅಷ್ಟು ಕೆಟ್ಟಿದೆಯೇ?</li>
+		<li page="0223-0231">ತೇಲಿದ್ದೆಷ್ಟು, ಈಸಿದ್ದೆಷ್ಟು?<br /> (ಜೀವನದ ಒಂದು ಸಿಂಹಾವಲೋಕನ ಅಥವಾ ‘ಪಾವೆಂ’ ಆತ್ಮಾವಲೋಕನ)</li>
+	</ol>
 </div>
