--- a/application/views/flat/3-Books/021.xhtml
+++ b/application/views/flat/3-Books/021.xhtml
@@ -1,7 +1,8 @@
 ﻿<div data-bcode="021">
-	<h1 class="title" data-language="kannada">ವಾಸನಾ (ನೀಳ್ಗತೆ)</h1>
+	<h1 class="title" data-language="kannada">ವಾಸನಾ (ಒಂದು ನೀಳ್ಗತೆ)</h1>
 	<ol>
-<li page="0001-0001"></li>
-
-</ol>
+		<li page="0000g-0000i">ಓದುವ ಮೊದಲು</li>
+		<li page="0000j-0000l">ಮುನ್ನುಡಿ</li>
+		<li page="0001-0082">ವಾಸನಾ</li>
+	</ol>
 </div>
