--- a/application/views/flat/3-Books/031.xhtml
+++ b/application/views/flat/3-Books/031.xhtml
@@ -1,21 +1,20 @@
 ﻿<div data-bcode="031">
-	<h1 class="title" data-language="kannada">ಪ್ರಹಾರ</h1>
+	<h1 class="title" data-language="kannada">ಮಂಜೂಷಾ</h1>
 	<ol>
-<li page="0001-0001">ಪರಿವಿಡಿ </li>
-<li page="0001-0001">ಮೊದಲ ಮಾತು </li>
-<li page="0001-0001">ಲೇಖಕರ ನುಡಿ </li>
-<li page="0001-0001">ಜಾತಿ ಪದ್ಧತಿ : ಒಂದು ಐತಿಹಾಸಿಕ ವಿಶ್ಲೇಷಣೆ (೧೯೭೮) </li>
-<li page="0001-0001">ಹರಿಜನರ ಸಮಸ್ಯೆ-ಕೆಲ ಅನಿಷ್ಟ ಲಕ್ಷಣಗಳು (೧೯೭೩) </li>
-<li page="0001-0001">ಬ್ರಾಹ್ಮಣರೇನು ಮಾಡಬೇಕು ? (೧೯೮೦) </li>
-<li page="0001-0001">ಮಾನವ ಪ್ರವೃತ್ತಿ ಮತ್ತು ಮೌಲ್ಯಗಳು (೧೯೮೦) </li>
-<li page="0001-0001">ಬುದ್ದಿಜೀವಿ, ಸಮಾಜ ಮತ್ತು ಸಾಹಿತ್ಯ </li>
-<li page="0001-0001">ಬತ್ತಲೆ : ಮಂತ್ರದಲ್ಲಿ, ಮಾಟದಲ್ಲಿ, ಭಕ್ತಿಯಲ್ಲಿ (೧೯೮೬) </li>
-<li page="0001-0001">ಬತ್ತಲೆ, ಬಟ್ಟೆ ಮತ್ತು ದಲಿತ ಪ್ರಜ್ಞೆ (೧೯೮೬) </li>
-<li page="0001-0001">ಅಂತಃಪುರದ ಅಂತರಂಗದಲ್ಲಿ (೧೯೮೩) </li>
-<li page="0001-0001">ಗತಕಾಲದ ಗೀಳು, ಹಾದಿಗೊಂದು ಮುಳ್ಳು (೧೯೮೫) </li>
-<li page="0001-0001">ಕಾಯ್ದಿಟ್ಟ ಸ್ಥಾನಗಳ ಕೂಟ ಪ್ರಶ್ನೆ (೧೯೭೮) </li>
-<li page="0001-0001">ನಡೆಯುತ್ತದೆ (೧೯೬೮) </li>
-<li page="0001-0001">ನನಗೆ ಆಶ್ಚರ್ಯವಾಗುತ್ತದೆ (೧೯೮೬)</li>
-</ol>
+		<li page="0000e-0000f">ಮೊದಲ ಮಾತು</li>
+		<li page="0000g-0000h">ಲೇಖಕರ ನುಡಿ</li>
+		<li page="0001-0013">ಜಾತಿ ಪದ್ಧತಿ : ಒಂದು ಐತಿಹಾಸಿಕ ವಿಶ್ಲೇಷಣೆ</li>
+		<li page="0014-0022">ಹರಿಜನರ ಸಮಸ್ಯೆ — ಕೆಲ ಅನಿಷ್ಟ ಲಕ್ಷಣಗಳು</li>
+		<li page="0023-0033">ಬ್ರಾಹ್ಮಣರೇನು ಮಾಡಬೇಕು?</li>
+		<li page="0034-0053">ಮಾನವ ಪ್ರವೃತ್ತಿ ಮತ್ತು ಮೌಲ್ಯಗಳು</li>
+		<li page="0054-0063">ಬುದ್ಧಿಜೀವಿ, ಸಮಾಜ ಮತ್ತು ಸಾಹಿತ್ಯ</li>
+		<li page="0064-0072">ಬತ್ತಲೆ : ಮಂತ್ರದಲ್ಲಿ, ಮಾಟದಲ್ಲಿ, ಭಕ್ತಿಯಲ್ಲಿ</li>
+		<li page="0073-0080">ಬತ್ತಲೆ, ಬಟ್ಟೆ ಮತ್ತು ದಲಿತ ಪ್ರಜ್ಞೆ</li>
+		<li page="0081-0089">ಅಂತಃಪುರದ ಅಂತರಂಗದಲ್ಲಿ</li>
+		<li page="0090-0095">ಗತಕಾಲದ ಗೀಳು: ಹಾದಿಗೊಂದು ಮುಳ್ಳು</li>
+		<li page="0096-0102">ಕಾಯ್ದಿಟ್ಟ ಸ್ಥಾನಗಳ ಕೂಟಪ್ರಶ್ನೆ</li>
+		<li page="0103-0110">“ನಡೆಯುತ್ತದೆ!”</li>
+		<li page="0111-0121">ನನಗೆ ಆಶ್ಚರ್ಯವಾಗುತ್ತದೆ!</li>
+	</ol>
 </div>
 
