--- a/application/views/flat/3-Books/032.xhtml
+++ b/application/views/flat/3-Books/032.xhtml
@@ -1,16 +1,24 @@
 ﻿<div data-bcode="032">
-	<h1 class="title" data-language="kannada">ಪ್ರಪಂಚದ ಪಾಪು ಕಸ್ತೂರಿಯ ಪಾವೆಂ</h1>
+	<h1 class="title" data-language="kannada">‘ಪ್ರಪಂಚ’ದ ಪಾಪು; ‘ಕಸ್ತೂರಿ’ಯ ಪಾವೆಂ</h1>
 	<ol>
-ಪರಿವಿಡಿ</li>
-ಮುಂದುವರಿಯುವ ಮೊದಲು</li>
-ಅಪರೂಪದ ವಿದ್ವಾನ್ ಜೋಡಿ </li>
-ಸಾಹಿತ್ಯ : ಓದು-ಬರಹ</li>
-ಪತ್ರಕರ್ತರಾಗಿ (i)</li>
-ಪತ್ರಕರ್ತರಾಗಿ (ii)</li>
-ವಿದ್ವಾಂಸರು – ಪತ್ರಕರ್ತರು ಕಂಡಂತ </li>
-ಸೌಭಾಗ್ಯವತಿಯರು </li>
-ಮಾನ ಸನ್ಮಾನಗಳು</li>
-ಹುಬ್ಬಳ್ಳಿಯ ಹೆಮ್ಮೆ </li>
-ಅನುಬಂಧ</li>
-</ol>
+		<li page="0000e-0000e">ಕೃತಜ್ಞತೆಗಳು</li>
+		<li page="0001-0006">೧. ಮುಂದುವರಿಯುವ ಮೊದಲು! (ದಯವಿಟ್ಟು ಓದಿರಿ)</li>
+		<li page="0007-0014">೨. ಅಪರೂಪದ ವಿದ್ವಾನ್ ಜೋಡಿ</li>
+		<li page="0015-0022">೩. ಸಾಹಿತ್ಯ : ಓದು - ಬರಹ</li>
+		<li page="0023-0028">೪. ಪತ್ರಕರ್ತರಾಗಿ (i)</li>
+		<li page="0029-0040">೫. ಪತ್ರಕರ್ತರಾಗಿ (ii)</li>
+		<li page="0041-0046">೬. ವಿದ್ವಾಂಸರು, ಪತ್ರಕರ್ತರು ಕಂಡಂತೆ</li>
+		<li page="0047-0050">೭. ಸೌಭಾಗ್ಯವತಿಯರು</li>
+		<li page="0051-0052">೮. ಮಾನ-ಸನ್ಮಾನಗಳು</li>
+		<li page="0053-0054">೯. ಹುಬ್ಬಳ್ಳಿಯ ಹೆಮ್ಮೆ</li>
+		<li page="0055-0068">ಅನುಬಂಧ
+			<ol>
+				<li page="0057-0058">ಚೇತೋಹಾರಿ ವೃತ್ತಿ - ಪಾಟೀಲ ಪುಟ್ಟಪ್ಪ</li>
+				<li page="0059-0063">ಆಚಾರ್ಯರೆಂಬ ಅನ್ವರ್ಥಕ ನಾಮ</li>
+				<li page="0064-0066">ಕನ್ನಡ ಪತ್ರಿಕಾ ಪ್ರಪಂಚದ ದೊಡ್ಡಪ್ಪ</li>
+				<li page="0067-0067">ಪಾವೆಂ ಅವರಿಗೆ ಬಿ.ಡಿ. ಗೊಯೆಂಕಾ ರಾಷ್ಟ್ರೀಯ ಪ್ರಶಸ್ತಿ ತಂದುಕೊಟ್ಟ ‘ಪದಾರ್ಥ ಚಿಂತಾಮಣಿ’ಯ ಒಂದು ಮಾದರಿ</li>
+				<li page="0068-0068">ಶ್ಲಾಘನಾ ಪತ್ರ (ಆಚಾರ್ಯರಿಗೆ ಬಿ.ಡಿ. ಗೊಯೆಂಕಾ ಪ್ರಶಸ್ತಿಯೊಡನೆ ಸಂದ ಶ್ಲಾಘನಾ ಪತ್ರ</li>
+			</ol>
+		</li>
+	</ol>
 </div>
